Additional typographic cleanup, chapter 1 – 60
Stray italics, overlooked American spellings, mis-coded line wraps.

--- a/001.md
+++ b/001.md
@@ -1,7 +1,7 @@
 # Chapter 1
 ## A Day of Very Low Probability
 
---------
+* * * *
 
 *Beneath the moonlight glints a tiny fragment of silver, a fraction of a line…*
 
@@ -9,7 +9,7 @@
 
 *…blood spills out in litres, and someone screams a word.*
 
---------
+* * * *
 
 Every inch of wall space is covered by a bookcase. Each bookcase has six shelves, going almost to the ceiling. Some bookshelves are stacked to the brim with hardback books: science, maths, history, and everything else. Other shelves have two layers of paperback science fiction, with the back layer of books propped up on old tissue boxes or lengths of wood, so that you can see the back layer of books above the books in front. And it still isn’t enough. Books are overflowing onto the tables and the sofas and making little heaps under the windows.
 
@@ -161,7 +161,7 @@ An old woman’s face peered out from above the neighbouring fence, grizzled gre
 
 “Did you get your acceptance letter from Hogwarts?”
 
-Harry froze in place *“.”*
+Harry froze in place.
 
 “Yes,” Harry’s lips said a little while later. “I got a letter from Hogwarts. They say they want my owl by the 31st of July, but—”
 
