--- a/005.md
+++ b/005.md
@@ -3,7 +3,7 @@
 # Chapter 5
 ## The Fundamental Attribution Error
 
---------
+* * * *
 
 *“He’s only eleven years old, Hermione.”*
 
@@ -11,7 +11,7 @@
 
 *“I don’t count.”*
 
---------
+* * * *
 
 The Moke Shop was a quaint little shop (some might even say cute) ensconced behind a vegetable stall that was behind a magical glove shop that was on an alleyway off a side street of Diagon Alley. Disappointingly, the shopkeeper was not a wizened ancient crone; just a nervous-looking young woman wearing faded yellow robes. Right now she was holding out a Moke Super Pouch QX31, whose selling point was that it had a Widening Lip as well as an Undetectable Extension Charm: you could actually fit big things in it, though the total volume was still limited.
 
@@ -103,7 +103,7 @@ Professor McGonagall’s wand came out of her sleeve, tapped Harry’s head ligh
 
 “Where *are* you going?” Harry inquired. “Just in case, you know, something *does* happen.”
 
-McGonagall gave Harry a hard look. “I am going *there,*” she said, pointing at a building across the street which showed the sign of a wooden keg, “and buying a drink, which I desperately need. *You* are to get fitted for your robes, *nothing else*. I will come back to check up on you *shortly*, and I *expect* to find Madam Malkin’s shop still standing and not in any way on fire.”
+McGonagall gave Harry a hard look. “I am going *there,”* she said, pointing at a building across the street which showed the sign of a wooden keg, “and buying a drink, which I desperately need. *You* are to get fitted for your robes, *nothing else*. I will come back to check up on you *shortly*, and I *expect* to find Madam Malkin’s shop still standing and not in any way on fire.”
 
 Madam Malkin was a bustling old woman who didn’t say a word about Harry when she saw the scar on his forehead, and she shot a sharp look at an assistant when that girl seemed about to say something. Madam Malkin got out a set of animated, writhing bits of cloth that seemed to serve as tape measures and set to work examining the medium of her art.
 
@@ -143,15 +143,15 @@ Harry grinned sheepishly. “Professor McGonagall says that I’m the most Raven
 
 Harry coughed. “Actually, sorry, I’ve got no idea who you are really.”
 
-” *Oh come on!*” the boy said with fierce disappointment. “Why’d you go and do that, then?” Draco’s eyes widened with sudden suspicion. “And how do you *not* know about the Malfoys? And what are those *clothes* you’re wearing? Are your parents *Muggles?*”
+” *Oh come on!”* the boy said with fierce disappointment. “Why’d you go and do that, then?” Draco’s eyes widened with sudden suspicion. “And how do you *not* know about the Malfoys? And what are those *clothes* you’re wearing? Are your parents *Muggles?”*
 
 “Two of my parents are dead,” Harry said. His heart twinged. When he put it that way—“My other two parents are Muggles, and they’re the ones that raised me.”
 
-“*What?*” said Draco. “Who *are* you?”
+*“What?”* said Draco. “Who *are* you?”
 
 “Harry Potter, pleased to meet you.”
 
-“*Harry Potter?*” gasped Draco. “*The* Harry—” and the boy cut off abruptly.
+*“Harry Potter?”* gasped Draco. *“The* Harry—” and the boy cut off abruptly.
 
 There was a brief silence.
 
@@ -163,7 +163,7 @@ Draco’s attendant emitted a sound like she was strangling but kept on with her
 
 “Can I have your autograph? No, wait, I want a picture with you first!”
 
-“Shut *up*shut *up*shut *up.*“
+“Shut *up* shut *up* shut *up.”*
 
 “I’m just so *delighted* to meet you!”
 
@@ -177,11 +177,11 @@ Tall, white-haired, coldly elegant in black robes of the finest quality. One han
 
 That was the man who had, just that moment, strolled in through the open door.
 
-“Draco,” said the man, low and very angry, “*what* are you *saying?*”
+“Draco,” said the man, low and very angry, *“what* are you *saying?”*
 
 In one split second of sympathetic panic, Harry formulated a rescue plan.
 
-“Lucius Malfoy!” gasped Harry Potter. “*The* Lucius Malfoy?”
+“Lucius Malfoy!” gasped Harry Potter. *“The* Lucius Malfoy?”
 
 One of Malkin’s assistants had to turn away and face the wall.
 
@@ -193,13 +193,13 @@ The dark eyes widened, shocked surprise replacing deadly threat.
 
 “Your son has been telling me *all* about you,” Harry gushed on, hardly even knowing what was coming out of his mouth but just talking as fast as possible. “But of course I knew about you all before then, everyone knows about you, the great Lucius Malfoy! The most honoured laureate of all the House of Slytherin, I’ve been thinking about trying to get into Slytherin House myself just because I heard you were in it as a child—”
 
-*“What are you saying, Mr. Potter?*” came a near-scream from outside the shop, and Professor McGonagall burst in a second later.
+*“What are you saying, Mr. Potter?”* came a near-scream from outside the shop, and Professor McGonagall burst in a second later.
 
 There was such pure horror on her face that Harry’s mouth opened automatically, and then blocked on nothing-to-say.
 
 “Professor McGonagall!” cried Draco. “Is it really you? I’ve heard so much about you from my father, I’ve been thinking of trying to get Sorted into Gryffindor so I can—”
 
-*“What?*” bellowed Lucius Malfoy and Professor McGonagall in perfect unison, standing side-by-side. Their heads swivelled to look at each other in duplicate motions, and then the two recoiled from one another as though performing a synchronised dance.
+*“What?”* bellowed Lucius Malfoy and Professor McGonagall in perfect unison, standing side-by-side. Their heads swivelled to look at each other in duplicate motions, and then the two recoiled from one another as though performing a synchronised dance.
 
 There was a sudden flurry of action as Lucius seized Draco and dragged him out of the shop.
 
@@ -217,7 +217,7 @@ Professor McGonagall slowly turned to look at Harry, her expression chilly. “I
 
 “I was only joking around,” Harry protested, as the sounds of hysterical laughter went on nearby.
 
-*“Draco Malfoy said in front of his father that he wanted to be sorted into Gryffindor!* Joking around *isn’t enough* to *do* that!” Professor McGonagall paused, visibly taking breaths. “What part of ‘get fitted for robes’ sounded to you like *please cast a Confundus Charm on the entire universe!*”
+*“Draco Malfoy said in front of his father that he wanted to be sorted into Gryffindor!* Joking around *isn’t enough* to *do* that!” Professor McGonagall paused, visibly taking breaths. “What part of ‘get fitted for robes’ sounded to you like *please cast a Confundus Charm on the entire universe!”*
 
 “He was in a situational context where those actions made internal sense—”
 
