--- a/006.md
+++ b/006.md
@@ -5,11 +5,11 @@ A/N: The “Aftermath” section of this chapter is part of the story, *not* oma
 # Chapter 6
 ## The Planning Fallacy
 
---------
+* * * *
 
 *You think your day was surreal? Try mine.*
 
---------
+* * * *
 
 *Some* children would have waited until *after* their first trip to Diagon Alley.
 
@@ -228,7 +228,7 @@ Harry stopped. He had just been about to point out that at least they knew the D
 
 Professor McGonagall pinched the bridge of her nose, inhaled, and exhaled. “I would still like to hear about it,” she said.
 
-“Um…” Harry said. He took a deep breath. “There’d been some muggings in our neighborhood, and my mother asked me to return a pan she’d borrowed to a neighbor two streets away, and I said I didn’t want to because I might get mugged, and she said, ‘Harry, don’t say things like that!’ Like thinking about it would *make* it happen, so if I didn’t talk about it, I would be safe. I tried to explain why I wasn’t reassured, and she made me carry over the pan anyway. I was too young to know how statistically unlikely it was for a mugger to target me, but I was old enough to know that not-thinking about something doesn’t stop it from happening, so I was really scared.”
+“Um…” Harry said. He took a deep breath. “There’d been some muggings in our neighbourhood, and my mother asked me to return a pan she’d borrowed to a neighbour two streets away, and I said I didn’t want to because I might get mugged, and she said, ‘Harry, don’t say things like that!’ Like thinking about it would *make* it happen, so if I didn’t talk about it, I would be safe. I tried to explain why I wasn’t reassured, and she made me carry over the pan anyway. I was too young to know how statistically unlikely it was for a mugger to target me, but I was old enough to know that not-thinking about something doesn’t stop it from happening, so I was really scared.”
 
 “Nothing else?” Professor McGonagall said after a pause, when it became clear that Harry was done. “There isn’t anything *else* that happened to you?”
 
