--- a/009.md
+++ b/009.md
@@ -49,7 +49,7 @@ For once Hermione didn’t answer this instantly; she was shifting constantly fr
 
 “Yes, he is,” said one of the prefects who’d accompanied them, a young woman wearing the blue of Ravenclaw. Miss Clearwater, if Harry recalled correctly. Her voice was quiet, but conveyed a tinge of pride. “That is the Charms Professor of Hogwarts, Filius Flitwick, the most knowledgeable Charms Master alive, and a past Duelling Champion—”
 
-“Why’s he so *short?”* hissed a student whose name Harry didn’t recall. “Is he a *halfbreed?”*
+“Why’s he so *short?”* hissed a student whose name Harry didn’t recall. “Is he a *halfbreed?*“
 
 A chill glance from the young lady prefect. “The Professor does indeed have goblin ancestry—”
 
@@ -61,7 +61,7 @@ Now Harry was getting a surprisingly intimidating glare from the Ravenclaw prefe
 
 The Ravenclaw prefect was still looking at Harry severely. “Why *couldn’t* you have a half-carriage half-boat?”
 
-”*Hssh!* ” hsshed another prefect, though the Ravenclaw witch had still spoken quietly.
+*“Hssh!”* hsshed another prefect, though the Ravenclaw witch had still spoken quietly.
 
 “I mean—” Harry said even more quietly, trying to figure out how to ask whether goblins had evolved from humans, or evolved from a common ancestor of humans like *Homo erectus*, or if goblins had been *made* out of humans somehow—if, say, they were still genetically human under a heritable enchantment whose magical effect was diluted if only one parent was a ‘goblin’, which would explain how interbreeding was possible, and in which case goblins would *not* be an incredibly valuable second data point for how intelligence had evolved in other species besides *Homo sapiens*—now that Harry thought about it, the goblins in Gringotts *hadn’t* seemed very much like genuinely alien, nonhuman intelligences, nothing like Dirdir or Puppeteers—“I mean, where did goblins *come* from, anyway?”
 
@@ -115,13 +115,13 @@ Harry immediately stomped down this feeling. Whole room-fulls of people staring 
 
 “Harry Potter!” cried the voice of either Fred or George Weasley, and then “Harry Potter!” cried the other Weasley twin, and a moment later the entire Gryffindor table, and soon after a good portion of Ravenclaw and Hufflepuff, had taken up the cry.
 
- *“Harry Potter! Harry Potter! Harry Potter!”*
+*“Harry Potter! Harry Potter! Harry Potter!”*
 
-And Harry Potter walked forwards. Much too slowly, he realized once he’d begun, but by then it was too late to alter his pace without it looking awkward.
+And Harry Potter walked forwards. Much too slowly, he realised once he’d begun, but by then it was too late to alter his pace without it looking awkward.
 
 * * * * *
 
-“*Harry Potter! Harry Potter! HARRY POTTER!”*
+“*Harry Potter! Harry Potter! HARRY POTTER!*“
 
 With all too good a notion of what she would see, Minerva McGonagall turned to look behind herself at the rest of the Head Table.
 
@@ -129,11 +129,11 @@ Trelawney frantically fanning herself, Filius looking on with curiosity, Hagrid 
 
 With a wide grin, turning his head to bow to one side and then the other as he walked between the four House tables, Harry Potter walked forwards at a grandly measured pace, a prince inheriting his castle.
 
- *“Save us from some more Dark Lords!”* called one of the Weasley twins, and then the other Weasley twin cried, *“Especially if they’re Professors!”* to general laughter from all the tables except Slytherin.
+*“Save us from some more Dark Lords!”* called one of the Weasley twins, and then the other Weasley twin cried, *“Especially if they’re Professors!”* to general laughter from all the tables except Slytherin.
 
 Minerva’s lips set in a white line. She would have words with the Weasley Horrors about that last part, if they thought she was powerless because it was the first day of school and Gryffindor had no points to take away. If they didn’t care about detentions then she would find something else.
 
-Then, with a sudden gasp of horror, she looked in Severus’s direction, *surely* he realized the Potter boy must have no idea who that was talking about—
+Then, with a sudden gasp of horror, she looked in Severus’s direction, *surely* he realised the Potter boy must have no idea who that was talking about—
 
 Severus’s face had gone beyond rage into a kind of pleasant indifference. A faint smile played about his lips. He was looking in the direction of Harry Potter, not the Gryffindor table, and his hands held the crumpled remains of a former wine goblet.
 
@@ -147,9 +147,9 @@ But the Dark Lord’s power *had* been broken once.
 
 And Harry would protect them again. If there was in fact a prophecy and that was what it said. Well, actually regardless of what any darn prophecy said.
 
-All those people believing in him and cheering him—Harry couldn’t stand to let that be false. To flash and fade like so many other child prodigies. To be a disappointment. To fail to live up to his reputation as a symbol of the Light, never mind *how* he’d gotten it. He would absolutely, positively, no matter how long it took and even if it killed him, fulfill their expectations. And then go on to *exceed* those expectations, so that people wondered, looking back, that they had once asked so little of him.
+All those people believing in him and cheering him—Harry couldn’t stand to let that be false. To flash and fade like so many other child prodigies. To be a disappointment. To fail to live up to his reputation as a symbol of the Light, never mind *how* he’d gotten it. He would absolutely, positively, no matter how long it took and even if it killed him, fulfil their expectations. And then go on to *exceed* those expectations, so that people wondered, looking back, that they had once asked so little of him.
 
- *“HARRY POTTER! HARRY POTTER! HARRY POTTER!”*
+*“HARRY POTTER! HARRY POTTER! HARRY POTTER!*“
 
 Harry took his last steps towards the Sorting Hat. He swept a bow to the Order of Chaos at the Gryffindor table, and then turned and swept another bow to the other side of the hall, and waited for the applause and giggling to die away.
 
@@ -161,4 +161,4 @@ Thinking, just as hard as he could: *Don’t Sort me yet! I have questions I nee
 
 Into the silence of Harry’s spirit, where before there had never been any voice but one, there came a second and unfamiliar voice, sounding distinctly worried:
 
- *“Oh, dear. This has never happened before…”* 
+*“Oh, dear. This has never happened before…”* 
