--- a/010.md
+++ b/010.md
@@ -45,7 +45,7 @@ There was a pause while Harry absorbed all this.
 
 *If you’re placed on the head of anyone who so much as* thinks *about the question of whether the Sorting Hat is aware of its own awareness—*
 
-*“Yes, yes. But the vast majority of eleven-year-olds who arrive at Hogwarts haven’t read Godel, Escher, Bach. May I please consider you sworn to secrecy? That is* why *we are talking about this, instead of my just Sorting you.”*
+*“Yes, yes. But the vast majority of eleven-year-olds who arrive at Hogwarts haven’t read Gödel, Escher, Bach. May I please consider you sworn to secrecy? That is* why *we are talking about this, instead of my just Sorting you.”*
 
 He couldn’t just let it go like that! Couldn’t just *forget* having accidentally created a doomed consciousness that only wanted to die—
 
@@ -79,21 +79,21 @@ Though he tried to suppress it, Harry wondered why the Hat didn’t just go ahea
 
 *“I ought to put you in Slytherin for that!”*
 
-*But that is* equally *an empty threat. You cannot fulfill your own fundamental values by Sorting me falsely. So let us trade fulfillments of our utility functions.*
+*But that is* equally *an empty threat. You cannot fulfil your own fundamental values by Sorting me falsely. So let us trade fulfillments of our utility functions.*
 
-*“You sly little bastard,”* said the Hat, in what Harry recognized as almost exactly the same tone of grudging respect *he* would use in the same situation. ”*Fine, let’s get this over with as quickly as possible. But first I want your unconditional promise never to discuss with anyone else the possibility of this sort of blackmail, I am NOT doing this every time.”*
+*“You sly little bastard,”* said the Hat, in what Harry recognised as almost exactly the same tone of grudging respect *he* would use in the same situation. *“Fine, let’s get this over with as quickly as possible. But first I want your unconditional promise never to discuss with anyone else the possibility of this sort of blackmail, I am NOT doing this every time.”*
 
 *Done,* Harry thought. *I promise.*
 
-*“And don’t meet anyone’s eyes while you’re thinking about this later. Some wizards can read your thoughts if you do. Anyway, I have no idea whether or not you’ve been Obliviated. I’m looking at your thoughts as they form, not reading out your whole memory and analyzing it for inconsistencies in a fraction of second. I’m a hat, not a god. And I cannot and will not tell you about my conversation with the one who became the Dark Lord. I can only* know, *while speaking to you, a statistical summary of what I remember, a weighted average; I* cannot *reveal to you the inner secrets of any other child, just as I will never reveal yours. For the same reason, I can’t speculate on how you got the Dark Lord’s brother wand, since I cannot specifically know about the Dark Lord or any similarities between you. I* can *tell you that there is definitely nothing like a ghost—mind, intelligence, memory, personality, or feelings—in your scar. Otherwise it would be participating in this conversation, being under my brim. And as to the way you get angry sometimes… that was part of what I wanted to talk to you about, Sorting-wise.”*
+*“And don’t meet anyone’s eyes while you’re thinking about this later. Some wizards can read your thoughts if you do. Anyway, I have no idea whether or not you’ve been Obliviated. I’m looking at your thoughts as they form, not reading out your whole memory and analysing it for inconsistencies in a fraction of second. I’m a hat, not a god. And I cannot and will not tell you about my conversation with the one who became the Dark Lord. I can only* know, *while speaking to you, a statistical summary of what I remember, a weighted average; I* cannot *reveal to you the inner secrets of any other child, just as I will never reveal yours. For the same reason, I can’t speculate on how you got the Dark Lord’s brother wand, since I cannot specifically know about the Dark Lord or any similarities between you. I* can *tell you that there is definitely nothing like a ghost—mind, intelligence, memory, personality, or feelings—in your scar. Otherwise it would be participating in this conversation, being under my brim. And as to the way you get angry sometimes… that was part of what I wanted to talk to you about, Sorting-wise.”*
 
 Harry took a moment to absorb all this negative information. Was the Hat being honest, or just trying to present the *shortest* possible convincing answer—
 
-”*We both know that you have no way of checking my honesty and that you’re not actually going to refuse to be Sorted based on the reply I did give you, so stop your pointless fretting and move on.”*
+*“We both know that you have no way of checking my honesty and that you’re not actually going to refuse to be Sorted based on the reply I did give you, so stop your pointless fretting and move on.”*
 
 Stupid unfair asymmetric telepathy, it wasn’t even letting Harry finish thinking his own—
 
-*“When I spoke of your anger, you remembered how Professor McGonagall told you that she sometimes saw something inside you that didn’t seem to come from a loving family. You thought of how Hermione, after you returned from helping Neville, told you that you had seemed ’scary’.”*
+*“When I spoke of your anger, you remembered how Professor McGonagall told you that she sometimes saw something inside you that didn’t seem to come from a loving family. You thought of how Hermione, after you returned from helping Neville, told you that you had seemed ‘scary’.”*
 
 Harry gave a mental nod. To himself, he seemed pretty normal—just responding to the situations in which he found himself, that was all. But Professor McGonagall seemed to think that there was more to it than that. And when he thought about it, even he had to admit that…
 
@@ -207,7 +207,7 @@ There was silence for a moment in the caverns of Harry’s mind.
 
 *“How could you possibly know about something like that?”*
 
-Harry screamed it with the full power of his mind: *NO, AND THAT’s FINAL!*
+Harry screamed it with the full power of his mind: *NO, AND THAT’S FINAL!*
 
 Then the voice of the Sorting Hat came slowly:
 
@@ -239,7 +239,7 @@ Harry giggled, or felt the impulse to do so; it came out as purely mental laught
 
 After a moment, Harry heard the Hat laughing too, a strange sad clothy sound.
 
-(And in the Hall beyond, a silence that had grown shallower at first as the background whispers increased, and then deepened as the whispers gave up and died away, falling finally into an utter silence that no one dared disturb with a single word, as Harry stayed under the Hat for long, long minutes, longer than all the previous first-years put together, longer than anyone in living memory. At the Head Table, Dumbledore went on smiling benignly; small metallic sounds occasionally came from Snape’s direction as he idly compacted the twisted remains of what had once been a heavy silver wine goblet; and Minerva McGonagall clenched the podium in a white-knuckled grip, knowing that Harry Potter’s contagious chaos had somehow infected the Sorting Hat itself and the Hat was about to, to demand that a whole new House of Doom be created just to accomodate Harry Potter or something, and *Dumbledore would make her do it*…)
+(And in the Hall beyond, a silence that had grown shallower at first as the background whispers increased, and then deepened as the whispers gave up and died away, falling finally into an utter silence that no one dared disturb with a single word, as Harry stayed under the Hat for long, long minutes, longer than all the previous first-years put together, longer than anyone in living memory. At the Head Table, Dumbledore went on smiling benignly; small metallic sounds occasionally came from Snape’s direction as he idly compacted the twisted remains of what had once been a heavy silver wine goblet; and Minerva McGonagall clenched the podium in a white-knuckled grip, knowing that Harry Potter’s contagious chaos had somehow infected the Sorting Hat itself and the Hat was about to, to demand that a whole new House of Doom be created just to accommodate Harry Potter or something, and *Dumbledore would make her do it*…)
 
 Beneath the brim of the Hat, the silent laughter died away. Harry felt sad too for some reason. No, not Gryffindor.
 
@@ -255,7 +255,7 @@ There was a pause that stretched.
 
 *What are you waiting for?*
 
-*“I was hoping for a moment of horrified realisation, actually. Self-awareness does seem to enhance my sense of humor.”*
+*“I was hoping for a moment of horrified realisation, actually. Self-awareness does seem to enhance my sense of humour.”*
 
 *Huh?* Harry cast back his thoughts, trying to figure out what the Hat could possibly be talking about—and then, suddenly, he realised. He couldn’t believe he’d managed to overlook it up until this point.
 
