--- a/011.md
+++ b/011.md
@@ -146,7 +146,7 @@ When there was once more silence in the room, Harry sat on the stool and *carefu
 
 Thinking, just as hard as he could: *Don’t Sort me yet! I have questions I need to ask you! Have I ever been Obliviated? Did you Sort the Dark Lord when he was a child and can you tell me about his weaknesses? Can you tell me why I got the brother wand to the Dark Lord’s? Is the Dark Lord’s ghost bound to my scar and is that why I get so angry sometimes? Those are the most important questions, but if you’ve got another moment can you tell me anything about how to rediscover the lost magics that created you?*
 
-And the Sorting Hat answered, “*No. Yes. No. No. Yes and no, next time don’t ask double questions. No.*” 
+And the Sorting Hat answered, *“No. Yes. No. No. Yes and no, next time don’t ask double questions. No.*” 
 
 and out loud, “RAVENCLAW!”
 
@@ -172,11 +172,11 @@ stammered McGonagall, her mind in nearly complete disarray, “who will be Head 
 
 It was all she could think of, she *had* to stop this somehow…
 
-Dumbledore put a finger to his cheek, looking thoughtful. “Snape."
+Dumbledore put a finger to his cheek, looking thoughtful. “Snape.”
 
-Snape’s screech of protest nearly drowned out McGonagall’s, “Then who will be Head of *Slytherin?* "
+Snape’s screech of protest nearly drowned out McGonagall’s, “Then who will be Head of *Slytherin?”*
 
-“Hagrid."
+“Hagrid.”
 
 * * * * *
 
@@ -192,7 +192,7 @@ The Sorting Hat screamed, an awful high-pitched sound that echoed through the Gr
 
 “SLYTHERIN!”
 
-Seeing the look of horror on Harry Potter’s face, Fred Weasley thought faster than he ever had in his life. In a single motion he whipped out his wand, whispered *“Silencio!”* and then “*Changemyvoiceio!”* and finally “*Ventriliquo!* "
+Seeing the look of horror on Harry Potter’s face, Fred Weasley thought faster than he ever had in his life. In a single motion he whipped out his wand, whispered *“Silencio!”* and then *“Changemyvoiceio!”* and finally *“Ventriliquo!”*
 
 “Just kidding!” 
 
@@ -294,7 +294,7 @@ Judging by the appalled looks dawning on the faces around him, it wasn’t anyth
 
 At the Head Table, Dumbledore went on smiling benignly; small metallic sounds occasionally came from Snape’s direction as he idly compacted the twisted remains of what had once been a heavy silver wine goblet; and Minerva McGonagall clenched the podium in a white-knuckled grip, knowing that Harry Potter’s contagious chaos had infected the Sorting Hat itself.
 
-Scenario after scenario played out through Minerva’s head, each worse than the last. The Hat would say that Harry was too evenly balanced between Houses to Sort, and decide that he belonged to all of them. The Hat would proclaim that Harry’s mind was too strange to be Sorted. The Hat would demand that Harry be expelled from Hogwarts. The Hat had gone into a coma. The Hat would insist that a whole new House of Doom be created just to accomodate Harry Potter, and *Dumbledore would make her do it…*
+Scenario after scenario played out through Minerva’s head, each worse than the last. The Hat would say that Harry was too evenly balanced between Houses to Sort, and decide that he belonged to all of them. The Hat would proclaim that Harry’s mind was too strange to be Sorted. The Hat would demand that Harry be expelled from Hogwarts. The Hat had gone into a coma. The Hat would insist that a whole new House of Doom be created just to accommodate Harry Potter, and *Dumbledore would make her do it…*
 
 Minerva remembered what Harry had told her in that disastrous trip to Diagon Alley, about the… planning fallacy, she thought it had been… and how people were usually too optimistic, even when they thought they were being pessimistic. It was the sort of information that preyed on your mind, dwelling in it and spinning off nightmares…
 
@@ -322,5 +322,4 @@ he addressed the Hat. “What is it?”
 
 “I wasn’t talking to you,” 
 
-said the Hat. “I was Sorting Harry Potter into the place in Hogwarts where he most belongs, namely the Headmaster’s office—” 
-
+said the Hat. “I was Sorting Harry Potter into the place in Hogwarts where he most belongs, namely the Headmaster’s office—”
