--- a/012.md
+++ b/012.md
@@ -17,7 +17,7 @@ Whisper whisper whisper harry potter whisper whisper slytherin whisper whisper n
 
 Harry joined in the applause greeting the young girl walking shyly towards the Ravenclaw table, her robes’ trim now changed to dark blue. Lisa Turpin appeared torn between her impulse to sit down as far away from Harry Potter as possible, and her impulse to run over, forcibly insert herself at his side and start tearing answers out of him.
 
-Being at the center of an extraordinary and curious event, and then being Sorted into House Ravenclaw, was closely akin to being dipped in barbecue sauce and flung into a pit of starving kittens.
+Being at the centre of an extraordinary and curious event, and then being Sorted into House Ravenclaw, was closely akin to being dipped in barbecue sauce and flung into a pit of starving kittens.
 
 “I promised the Sorting Hat not to talk about it,” whispered Harry for the umpteenth time.
 
@@ -33,7 +33,7 @@ Being at the center of an extraordinary and curious event, and then being Sorted
 
 “No, I don’t know how I defeated the Dark Lord either! You tell me if you figure it out!”
 
-“*Silence!* ” shouted Professor McGonagall at the podium of the Head Table. “*No talking until the Sorting Ceremony finishes!”*
+*“Silence!”* shouted Professor McGonagall at the podium of the Head Table. *“No talking until the Sorting Ceremony finishes!”*
 
 There was a brief dip in the volume, as everyone waited to see if she was going to make any specific and credible threats, and then the whispers started up again.
 
@@ -45,9 +45,9 @@ The cheerful-looking old man sat down again.
 
 *Note to self: Do not mess with Dumbledore.*
 
-Harry was still trying to process everything that had happened during the Incident with the Sorting Hat. Not the least of which was what had happened the instant Harry had lifted the Hat off his head; in that moment, he’d heard a tiny whisper as though from nowhere, something that sounded oddly like English and a hiss at the same time, something that had said, ”*Ssalutations from Sslytherin to Sslytherin: if you would sseek my ssecretss, sspeak to my ssnake.”*
+Harry was still trying to process everything that had happened during the Incident with the Sorting Hat. Not the least of which was what had happened the instant Harry had lifted the Hat off his head; in that moment, he’d heard a tiny whisper as though from nowhere, something that sounded oddly like English and a hiss at the same time, something that had said, *“Ssalutations from Sslytherin to Sslytherin: if you would sseek my ssecretss, sspeak to my ssnake.”*
 
-Harry was sorta guessing that wasn’t supposed to be part of the official Sorting process. And that it was a bit of extra magic set down by Salazar Slytherin during the making of the Hat. And that the Hat itself didn’t know about it. And that it was triggered when the Hat said “SLYTHERIN", plus or minus some other conditions. And that a Ravenclaw like himself *really, really wasn’t supposed to have heard it*. And that if he could find some reliable way of swearing Draco to secrecy so he could ask him about it, that would be an excellent time to have some Comed-Tea handy.
+Harry was sorta guessing that wasn’t supposed to be part of the official Sorting process. And that it was a bit of extra magic set down by Salazar Slytherin during the making of the Hat. And that the Hat itself didn’t know about it. And that it was triggered when the Hat said “SLYTHERIN”, plus or minus some other conditions. And that a Ravenclaw like himself *really, really wasn’t supposed to have heard it*. And that if he could find some reliable way of swearing Draco to secrecy so he could ask him about it, that would be an excellent time to have some Comed-Tea handy.
 
 *Boy, you resolve not to go down the path of a Dark Lord and the universe starts messing with you the instant the Hat comes off your head. Some days it just doesn’t pay to fight destiny. Maybe I’ll wait until tomorrow to start on my resolution to not be a Dark Lord.*
 
@@ -75,7 +75,7 @@ And Harry was struck by the inspiration for a *brilliant* experimental test.
 
 Hermione had said that Dumbledore was the most powerful wizard alive, right?
 
-Harry reached into his pouch and whispered, “Comed-Tea".
+Harry reached into his pouch and whispered, “Comed-Tea”.
 
 For the Comed-Tea to work, it would have to make Dumbledore say something *so* ridiculous during his speech that even in Harry’s state of mental preparedness, he would *still* choke. Like, all the Hogwarts students had to not wear any clothes for the whole school year, or everyone was going to be transformed into cats.
 
@@ -133,7 +133,7 @@ But at least he’d learned an important fact today. The Comed-Tea was omnipoten
 
 Harry blinked in surprise as his mind finally made the obvious connection.
 
-… *that* meant that as soon as he learned a spell to temporarily alter his own sense of humor, he could make *anything* happen, by making it so that he would *only* find that *one thing* surprising enough to do a spit-take, and then drinking a can of Comed-Tea.
+*…that* meant that as soon as he learned a spell to temporarily alter his own sense of humour, he could make *anything* happen, by making it so that he would *only* find that *one thing* surprising enough to do a spit-take, and then drinking a can of Comed-Tea.
 
 *Well that was a short little journey to godhood. Even I expected this to take longer than my first day of school.*
 
