--- a/013.md
+++ b/013.md
@@ -31,7 +31,7 @@ His Quieter turned all the way up to maximum.
 
 And his mechanical alarm clock was still running, but the alarm was turned off.
 
-He’d been allowed to sleep until 9:52 AM, apparently. Despite his best efforts to synchronize his 26-hour sleep cycle to his arrival at Hogwarts, he hadn’t gotten to sleep last night until around 1AM. He’d been planning to wake up at 7:00AM with the other students, he could stand being a little sleep-deprived his first day so long as he got some sort of magical fix before tomorrow. But now he’d missed breakfast. And his very first class at Hogwarts, in Herbology, had started one hour and twenty-two minutes ago.
+He’d been allowed to sleep until 9:52 AM, apparently. Despite his best efforts to synchronise his 26-hour sleep cycle to his arrival at Hogwarts, he hadn’t gotten to sleep last night until around 1AM. He’d been planning to wake up at 7:00AM with the other students, he could stand being a little sleep-deprived his first day so long as he got some sort of magical fix before tomorrow. But now he’d missed breakfast. And his very first class at Hogwarts, in Herbology, had started one hour and twenty-two minutes ago.
 
 The anger was slowly, slowly wakening in him. Oh, what a nice little prank. Turn off his alarm. Turn up the Quieter. And let Mr. Bigshot Harry Potter miss his first class, and be blamed for being a heavy sleeper.
 
@@ -248,7 +248,7 @@ Harry sighed. “My life tends to get a bit peculiar.”
 
 “Would it be fair to say that you don’t know where you’re going or why you’re trying to get there?”
 
-”*Entirely* fair.”
+*“Entirely* fair.”
 
 The old lady nodded. “I’m not sure that being lost is your most important problem, young man.”
 
@@ -330,7 +330,7 @@ That settled it. Harry had decided to apologise humbly to Neville and that meant
 
 Harry reached out and grabbed Neville by the wrist and *yanked* him out from between the Slytherins, the boy stumbling in shock as Harry pulled him out and in nearly the same motion pushed his own way through the same gap.
 
-And Harry stood in the center of the Slytherins where Neville had stood, looking up at the much older, larger, and stronger boys.
+And Harry stood in the centre of the Slytherins where Neville had stood, looking up at the much older, larger, and stronger boys.
 
 “Hello,” Harry said. “I’m the Boy-Who-Lived.”
 
@@ -458,7 +458,7 @@ Harry blinked. He’d been expecting something more along the lines of a lecture
 
 Maybe he *should* have gone to Hufflepuff. Sprout was cool.
 
-*“Scourgify,*” Sprout said to the mess of pie on the floor, which promptly vanished.
+*“Scourgify,”* Sprout said to the mess of pie on the floor, which promptly vanished.
 
 And she left, walking along the hall that led to the green study room.
 
@@ -466,7 +466,7 @@ And she left, walking along the hall that led to the green study room.
 
 Harry smiled smugly. “I can make anything I want happen just by snapping my fingers.”
 
-The boy’s eyes widened. *“Really?*”
+The boy’s eyes widened. *“Really?”*
 
 “No,” said Harry. “But when you’re telling everyone this story be sure to share it with Hermione Granger in first-year Ravenclaw, she has an anecdote you might find amusing.” He had absolutely no clue what was happening, but he wasn’t about to pass up the opportunity to add to his growing legend. “Oh, and what was all that about the Killing Curse?”
 
@@ -474,7 +474,7 @@ The boy gave him a strange look. “You really don’t know?”
 
 “If I did, I wouldn’t be asking.”
 
-“The words to the Killing Curse are,” the boy swallowed, and his voice dropped to a whisper, and he held his hands away from his sides as if to make it very clear that he wasn’t holding a wand, ”*Avada Kedavra.*“
+“The words to the Killing Curse are,” the boy swallowed, and his voice dropped to a whisper, and he held his hands away from his sides as if to make it very clear that he wasn’t holding a wand, *“Avada Kedavra.”*
 
 *Well of course they are.*
 
@@ -512,13 +512,13 @@ Neville clutched his books tighter to his chest. “Why did you do it?” he sai
 
 Harry suddenly felt smaller than he ever had in his life. “I’m sorry,” Harry said again, his voice now hoarsened. “It’s just… you looked so scared, it was like a sign over your head saying ‘victim’, and I wanted to show you that things *don’t* always turn out badly, that sometimes the monsters give you chocolate… I thought if I showed you that, you might realise there wasn’t so much to be afraid of—”
 
-“But there *is,*“ whispered Neville. “You saw it today, there *is!* ”
+“But there *is,*“ whispered Neville. “You saw it today, there *is!”*
 
 “They wouldn’t have done anything really bad in front of witnesses. Their main weapon is fear. That’s why they target *you,* because they can see you’re afraid. I wanted to make you less afraid… show you that the fear was worse than the thing itself… or that was what I told myself, but the Sorting Hat told me that I was lying to myself and that I really did it because it was fun. So that’s why I’m apologising—”
 
 “You hurt me,” said Neville. “Just now. When you grabbed me and pulled me away from them.” Neville held out his arm and pointed to where Harry had grabbed him. “I might have a bruise here later from how hard you pulled. You hurt me worse than anything the Slytherins did by bumping into me, actually.”
 
-*“Neville!* ” hissed Ernie. “He was trying to *save* you!”
+*“Neville!”* hissed Ernie. “He was trying to *save* you!”
 
 “I’m sorry,” whispered Harry. “When I saw that I just got… really angry…”
 
