--- a/016.md
+++ b/016.md
@@ -49,15 +49,15 @@ Harry looked at Mr. Crabbe and Mr. Goyle. They both seemed to be trying very har
 
 “Um… hold on,” said Harry. “This was arranged *years* ago?”
 
-“Exactly, Potter. I’m afraid you're out of luck.”
+“Exactly, Potter. I’m afraid you’re out of luck.”
 
 Mr. Goyle produced a toothpick and began cleaning his teeth, still looming.
 
 “And,” said Harry, “Lucius insisted that you were *not* to grow up knowing your bodyguards, and that you were only to meet them on your first day of school.”
 
-That wiped the grin from Draco’s face. “Yes, Potter, we all know you're brilliant, the whole school knows by now, you can stop showing off—”
+That wiped the grin from Draco’s face. “Yes, Potter, we all know you’re brilliant, the whole school knows by now, you can stop showing off—”
 
-“So they’ve been told their *whole lives* that they're going to be your minions and they’ve spent *years* imagining what minions are supposed to be like—”
+“So they’ve been told their *whole lives* that they’re going to be your minions and they’ve spent *years* imagining what minions are supposed to be like—”
 
 Draco winced.
 
@@ -65,7 +65,7 @@ Draco winced.
 
 “The boss told ya to shut it,” rumbled Mr. Crabbe. Mr. Goyle bit down on his toothpick, holding it between his teeth, and used one hand to crack the knuckles on the other.
 
-*"I told you not to do this in front of Harry Potter!*“
+*“I told you not to do this in front of Harry Potter!”*
 
 The two looked a bit sheepish and Mr. Goyle quickly put the toothpick back in a pocket of his robes.
 
@@ -73,7 +73,7 @@ But the moment Draco turned away from them to face Harry again, they went back t
 
 “I apologise,” Draco said stiffly, “for the insult which these *imbeciles* have offered you.”
 
-Harry gave a meaningful look to Mr. Crabbe and Mr. Goyle. “I’d say you're being a little harsh on them, Draco. *I* think they're acting exactly the way I’d want *my* minions to act. I mean, if I had any minions.”
+Harry gave a meaningful look to Mr. Crabbe and Mr. Goyle. “I’d say you’re being a little harsh on them, Draco. *I* think they’re acting exactly the way I’d want *my* minions to act. I mean, if I had any minions.”
 
 Draco’s jaw dropped.
 
@@ -81,27 +81,27 @@ Draco’s jaw dropped.
 
 “I’m sure Mr. Potter wouldn’t be that foolish.”
 
-“Oh, I wouldn’t dream of it,” Harry said smoothly. “It’s just something to keep in mind if your current employer seems unappreciative. Besides, it never hurts to have other offers while you're negotiating your working conditions, right?”
+“Oh, I wouldn’t dream of it,” Harry said smoothly. “It’s just something to keep in mind if your current employer seems unappreciative. Besides, it never hurts to have other offers while you’re negotiating your working conditions, right?”
 
 “What’s *he* doin’ in Ravenclaw?”
 
 “I can’t imagine, Mr. Crabbe.”
 
-“Both of you *shut up*,” Draco said through gritted teeth. “That’s an *order*.” With a visible effort, he transferred his attention to Harry again. “Anyway, what're you doing in the Slytherin Defence class?”
+“Both of you *shut up*,” Draco said through gritted teeth. “That’s an *order*.” With a visible effort, he transferred his attention to Harry again. “Anyway, what’re you doing in the Slytherin Defence class?”
 
 Harry frowned. “Hold on.” His hand went into his pouch. “Timetable.” He looked over the parchment. “Defence, 2:30pm, and right now it’s…” Harry looked at his mechanical watch, which read 11:23. “2:23, unless I’ve lost track of time. Did I?” If he had, well, Harry knew how to get to whatever lesson he was *supposed* to be at. God he loved his Time-Turner and someday, when he was old enough, they would get married.
 
 “No, that sounds right,” Draco said, looking puzzled. His gaze turned to look over the rest of the auditorium, which was filling with green-trimmed robes and…
 
-*“Gryffindorks!”* spat Draco. “What're *they* doing here?”
+*“Gryffindorks!”* spat Draco. “What’re *they* doing here?”
 
 “Hm,” Harry said. “Professor Quirrell did say… I forget his exact words… that he would be ignoring some of the Hogwarts teaching conventions. Maybe he just combined all his classes.”
 
-“Huh,” said Draco. “You're the first Ravenclaw in here.”
+“Huh,” said Draco. “You’re the first Ravenclaw in here.”
 
 “Yup. Got here early.”
 
-“What're you doing all the way in the back row, then?”
+“What’re you doing all the way in the back row, then?”
 
 Harry blinked. “I dunno, seemed like a good place to sit?”
 
@@ -117,7 +117,7 @@ Draco made a scoffing sound. “You couldn’t get any further away from the tea
 
 “That… sounds about right,” Harry said. “I think it was more like, ‘is this some kind of incredibly clever plot that will gain you a future advantage or is it really as much of a disgrace to the memory of Salazar Slytherin as it looks like’ or something like that. I don’t remember the exact words.”
 
-“You're confusing everyone, you know,” said the blonde-haired boy.
+“You’re confusing everyone, you know,” said the blonde-haired boy.
 
 “Huh?” Harry said in honest confusion.
 
@@ -127,7 +127,7 @@ Draco made a scoffing sound. “You couldn’t get any further away from the tea
 
 Mr. Crabbe and Mr. Goyle both giggled, causing Mr. Goyle to quickly clap a hand to his mouth.
 
-“We’d better go get our seats,” Draco said. He hesitated, straightened a bit, spoke a bit more fomally. “But I do want to continue our last conversation and I accept your conditions.”
+“We’d better go get our seats,” Draco said. He hesitated, straightened a bit, spoke a bit more formally. “But I do want to continue our last conversation and I accept your conditions.”
 
 Harry nodded. “Would you mind terribly if I waited until Saturday afternoon? I’m in a bit of a contest right now.”
 
@@ -135,11 +135,11 @@ Harry nodded. “Would you mind terribly if I waited until Saturday afternoon? I
 
 “See if I can read all my textbooks as fast as Hermione Granger did.”
 
-“Granger,” Draco echoed. His eyes narrowed. “The mudblood who thinks she’s Merlin? If you're trying to show *her* up then all Slytherin wishes you the *very* best luck, Potter, and I won’t bother you ’til Saturday.” Draco inclined his head respectfully, and wandered off, tailed by his minions.
+“Granger,” Draco echoed. His eyes narrowed. “The mudblood who thinks she’s Merlin? If you’re trying to show *her* up then all Slytherin wishes you the *very* best luck, Potter, and I won’t bother you ’til Saturday.” Draco inclined his head respectfully, and wandered off, tailed by his minions.
 
 *Oh, this is going to be* so *much fun to juggle, I can already tell.*
 
-The classroom was filling up rapidly now with all four colors of trim: green, red, yellow, and blue. Draco and his two friends seemed to be in the midst of trying to acquire three contiguous front-row seats—already occupied, of course. Mr. Crabbe and Mr. Goyle were looming vigorously, but it didn’t seem to be having much effect.
+The classroom was filling up rapidly now with all four colours of trim: green, red, yellow, and blue. Draco and his two friends seemed to be in the midst of trying to acquire three contiguous front-row seats—already occupied, of course. Mr. Crabbe and Mr. Goyle were looming vigorously, but it didn’t seem to be having much effect.
 
 Harry bent over his Defence textbook and continued reading.
 
@@ -205,7 +205,7 @@ Hot *damn.*
 
 …wow. Why didn’t the other professors use a system like that?
 
-“What good are Quirrell points, you wonder? For a start, ten Quirrell points will be worth one House point. But they will earn you other favors as well. Would you like to take your exam at an unusual time? Is there a particular session you would very much prefer to skip? You will find that I can be very flexible on behalf of students who have accumulated enough Quirrell points. Quirrell points will control the generalship of the armies. And for Christmas—just before the Christmas break—I will grant someone a wish. Any school-related feat that lies within my power, my influence, or above all, my ingenuity. Yes, I was in Slytherin and I am offering to formulate a cunning plot on your behalf, if that is what it takes to accomplish your desire. This wish will go to whoever has earned the most Quirrell points within all seven years.”
+“What good are Quirrell points, you wonder? For a start, ten Quirrell points will be worth one House point. But they will earn you other favours as well. Would you like to take your exam at an unusual time? Is there a particular session you would very much prefer to skip? You will find that I can be very flexible on behalf of students who have accumulated enough Quirrell points. Quirrell points will control the generalship of the armies. And for Christmas—just before the Christmas break—I will grant someone a wish. Any school-related feat that lies within my power, my influence, or above all, my ingenuity. Yes, I was in Slytherin and I am offering to formulate a cunning plot on your behalf, if that is what it takes to accomplish your desire. This wish will go to whoever has earned the most Quirrell points within all seven years.”
 
 That would be Harry.
 
@@ -233,13 +233,13 @@ There was a lower-pitched “dong” which meant he’d gotten it almost right.
 
 Harry put his wand into his pocket, skipped back to the left and drew and fired another red bolt of energy.
 
-The high-pitched bing which resulted was easily one of the most satisfying sounds he’d heard in his life. Harry wanted to scream in triumph at the top of his lungs. *I CAN DO MAGIC! FEAR ME, LAWS OF PHYSICS, I'M COMING TO VIOLATE YOU!*
+The high-pitched bing which resulted was easily one of the most satisfying sounds he’d heard in his life. Harry wanted to scream in triumph at the top of his lungs. *I CAN DO MAGIC! FEAR ME, LAWS OF PHYSICS, I’M COMING TO VIOLATE YOU!*
 
 *“Ma-ha-su!”* Harry’s voice was loud, but hardly noticeable over the steady chant of similar cries from around the classroom platform.
 
 “Enough,” said Professor Quirrell’s amplified voice. (It didn’t sound loud. It sounded like normal volume, coming from just behind your left shoulder, no matter where you were standing relative to Professor Quirrell.) “I see that all of you have succeeded at least once now.” The target-spheres turned red and began to drift up towards the ceiling.
 
-Professor Quirrell was standing on the raised dais in the center of the platform, leaning slightly on his teacher’s desk with one hand.
+Professor Quirrell was standing on the raised dais in the centre of the platform, leaning slightly on his teacher’s desk with one hand.
 
 “I told you,” Professor Quirrell said, “that we would play a game called Who’s the Most Dangerous Student in the Classroom. There is one student in this classroom who mastered the Sumerian Simple Strike Hex faster than anyone else—”
 
@@ -329,7 +329,7 @@ A jolt of adrenaline poured into Harry’s system, making him stand up straighte
 
 “Ah, Professor Quirrell—” Harry started to say.
 
-Professor Quirrell looked amused. “You're thinking that I’ve come up with a wrong answer, aren’t you, Mr. Potter? You will learn to expect better of *me*.” Professor Quirrell straightened from where he had leaned on the desk. “Mr. Potter, all things have their accustomed uses. Give me ten unaccustomed uses of objects in this room for combat!”
+Professor Quirrell looked amused. “You’re thinking that I’ve come up with a wrong answer, aren’t you, Mr. Potter? You will learn to expect better of *me*.” Professor Quirrell straightened from where he had leaned on the desk. “Mr. Potter, all things have their accustomed uses. Give me ten unaccustomed uses of objects in this room for combat!”
 
 For a moment Harry was rendered speechless by the sheer, raw shock of having been understood.
 
@@ -343,7 +343,7 @@ Harry had to stop briefly for breath, and into that pause Professor Quirrell sai
 
 *“Ha!* The floor can be removed to create a spike pit to fall into, the ceiling can be collapsed on someone, the walls can serve as raw material for Transfiguration into any number of deadly things—knives, say.”
 
-“That’s six. But surely you're scraping the bottom of the barrel now?”
+“That’s six. But surely you’re scraping the bottom of the barrel now?”
 
 “I haven’t even started! Just look at all the people! Having a Gryffindor attack the enemy is an *ordinary* use, of course—”
 
