--- a/017.md
+++ b/017.md
@@ -43,11 +43,11 @@ Around thirty seconds later, Harry heard the sound of steps, followed by the sou
 
 And when Harry opened his eyes, he saw just what he’d been hoping to see, a folded piece of paper left on the floor, the gift of his future self.
 
-Call that piece of paper “Paper-2".
+Call that piece of paper “Paper-2”.
 
 Harry tore a piece of paper off his pad.
 
-Call that “Paper-1". It was, of course, the same piece of paper. You could even see, if you looked closely, that the ragged edges matched.
+Call that “Paper-1”. It was, of course, the same piece of paper. You could even see, if you looked closely, that the ragged edges matched.
 
 Harry reviewed in his mind the algorithm that he would follow.
 
@@ -145,7 +145,7 @@ The Emergency Healing Pack Plus lay open in front of him, and there was a syring
 
 “You’re not seriously going to make him ride the broomstick again?” Harry said in horror.
 
-Madam Hooch sent Harry a glare. “Of course not!” She pulled the boy to his feet using his good arm—Harry saw with a shock that it was Neville Longbottom *again,* what was *with* him?—and she turned to all the watching children. “None of you is to move while I take this boy to the hospital wing! You leave those brooms where they are or you’ll be out of Hogwarts before you can say ‘Quidditch.' Come on, dear.”
+Madam Hooch sent Harry a glare. “Of course not!” She pulled the boy to his feet using his good arm—Harry saw with a shock that it was Neville Longbottom *again,* what was *with* him?—and she turned to all the watching children. “None of you is to move while I take this boy to the hospital wing! You leave those brooms where they are or you’ll be out of Hogwarts before you can say ‘Quidditch.’ Come on, dear.”
 
 And Madam Hooch walked off with Neville, who was clutching his wrist and trying to control his sniffles.
 
@@ -409,7 +409,7 @@ Harry’s mouth gaped open. Professor McGonagall had succeeded; Harry was speech
 
 *“This isn’t like you!”* Harry burst out. “I’m sorry but that just seems *unbelievably* irresponsible! From what I’ve heard there’s some kind of jinx on the Defence position, and if you already *know* something’s going to go wrong, I’d think you’d all be on your toes—”
 
-“Go *wrong*, Mr. Potter? *I certainly hope not.*” Professor McGonagall’s face was expressionless. “After Professor Blake was caught in a closet with no fewer than three fifth-year Slytherins last February, and a year before that, Professor Summers failed so completely as an educator that her students thought a boggart was a kind of furniture, it would be *catastrophic* if some problem with the extraordinarily competent Professor Quirrell came to my attention now, and I daresay most of our students would fail their Defence O.W.L.s and N.E.W.T.s.”
+“Go *wrong*, Mr. Potter? *I certainly hope not.”* Professor McGonagall’s face was expressionless. “After Professor Blake was caught in a closet with no fewer than three fifth-year Slytherins last February, and a year before that, Professor Summers failed so completely as an educator that her students thought a boggart was a kind of furniture, it would be *catastrophic* if some problem with the extraordinarily competent Professor Quirrell came to my attention now, and I daresay most of our students would fail their Defence O.W.L.s and N.E.W.T.s.”
 
 “I see,” Harry said slowly, taking it all in. “So in other words, whatever’s wrong with Professor Quirrell, you desperately don’t want to know about it until the end of the school year. And since it’s currently September, he could assassinate the Prime Minister on live television and get away with it so far as you’re concerned.”
 
@@ -657,7 +657,7 @@ Harry had the feeling this conversation was not going to work out in his favour,
 
 “Did he?” said Dumbledore.
 
-“No,” said Harry. “But later it turns out that the murderer had black hair, and Mortimer has black hair, so everyone’s like, ah, looks like Mortimer did it after all. So it’s unfair to Mortimer for the police to *promote him to their attention* without having good reasons already in hand to suspect him. When there are lots of possibilities, most of the work goes into just *locating* the true answer—starting to pay attention to it. You don’t need *proof*, or the sort of official evidence that scientists or courts demand, but you need some sort of *hint*, and that hint has to discriminate that particular possibility from the millions of others. Otherwise you can’t just pluck the right answer out of thin air. You can’t even pluck a possibility worth thinking about out of thin air. And there’s got to be a million other things I could do besides carrying around my father’s rock. Just because I’m ignorant about the universe doesn’t mean that I’m unsure about how I should reason in the presence of my uncertainty. The laws for thinking with probabilities are no less iron than the laws that govern old-fashioned logic, and what you just did is *not allowed.*” Harry paused. *“Unless*, of course, you have some *hint* you’re not mentioning.”
+“No,” said Harry. “But later it turns out that the murderer had black hair, and Mortimer has black hair, so everyone’s like, ah, looks like Mortimer did it after all. So it’s unfair to Mortimer for the police to *promote him to their attention* without having good reasons already in hand to suspect him. When there are lots of possibilities, most of the work goes into just *locating* the true answer—starting to pay attention to it. You don’t need *proof*, or the sort of official evidence that scientists or courts demand, but you need some sort of *hint*, and that hint has to discriminate that particular possibility from the millions of others. Otherwise you can’t just pluck the right answer out of thin air. You can’t even pluck a possibility worth thinking about out of thin air. And there’s got to be a million other things I could do besides carrying around my father’s rock. Just because I’m ignorant about the universe doesn’t mean that I’m unsure about how I should reason in the presence of my uncertainty. The laws for thinking with probabilities are no less iron than the laws that govern old-fashioned logic, and what you just did is *not allowed.”* Harry paused. *“Unless*, of course, you have some *hint* you’re not mentioning.”
 
 “Ah,” said Dumbledore. He tapped his cheek, looking thoughtful. “An interesting argument, certainly, but doesn’t it break down at the point where you make an analogy between a million potential murderers only one of whom committed the murder, and taking one out of many possible courses of action, when many possible courses of action may all be wise? I do not say that carrying your father’s rock is the one best possible course of action, only that it is wiser to do than not.”
 
@@ -765,7 +765,7 @@ And then Harry’s inner Slytherin made a sly suggestion for ingratiating himsel
 
 Dumbledore gazed at him, and then nodded with a slight grin. “I’m flattered by your interest,” said Dumbledore, “but I’m afraid there isn’t much to say.” Dumbledore took a step closer to the wall and pointed to a painting of a sleeping man. “These are portraits of past Headmasters of Hogwarts.” He turned and pointed to his desk. “This is my desk.” He pointed to his chair. “This is my chair—”
 
-“Excuse me,” Harry said, “actually I was wondering about those.” Harry pointed to a small cube that was softly whispering “blorple… blorple… blorple".
+“Excuse me,” Harry said, “actually I was wondering about those.” Harry pointed to a small cube that was softly whispering “blorple… blorple… blorple”.
 
 “Oh, the little fiddly things?” said Dumbledore. “They came with the Headmaster’s office and I have absolutely no idea what most of them do. Although *this* dial with the eight hands counts the number of, let’s call them sneezes, by left-handed witches within the borders of France, you would not believe how much work it took to nail that down. And *this* one with the golden wibblers is my own invention and Minerva is never, ever going to figure out what it’s doing.”
 
@@ -827,7 +827,7 @@ The old wizard sighed deeply. “You may not still think so after understanding 
 
 “They aren’t?” Dumbledore said, looking surprised and disappointed. “Not even a little wicked? That doesn’t fit the pattern…”
 
-Harry’s inner Slytherin screamed at the top of its mental lungs, *SHUT UP YOU IDIOT HE'LL TAKE YOU AWAY FROM THEM!*
+Harry’s inner Slytherin screamed at the top of its mental lungs, *SHUT UP YOU IDIOT HE’LL TAKE YOU AWAY FROM THEM!*
 
 “No, no,” said Harry, lips frozen in a ghastly grimace, “I was just trying to spare your feelings, they’re actually very wicked…”
 
@@ -849,7 +849,7 @@ Moisture glistened in the old wizard’s eyes.
 
 *Just GO before he sets you on fire!* shrieked Slytherin, Hufflepuff, and Gryffindor.
 
-“I understand,” said Dumbledore. “One last thing then, Harry. You are *not* to attempt the forbidden door on the third-floor corridor. There’s no possible way you could get through all the traps, and I wouldn’t want to hear that you’d been hurt trying. Why, I doubt that you could so much as open the first door, since it’s locked and you don’t know the spell *Alohomora—*”
+“I understand,” said Dumbledore. “One last thing then, Harry. You are *not* to attempt the forbidden door on the third-floor corridor. There’s no possible way you could get through all the traps, and I wouldn’t want to hear that you’d been hurt trying. Why, I doubt that you could so much as open the first door, since it’s locked and you don’t know the spell *Alohomora—”*
 
 Harry spun around and bolted for the exit at top speed, the doorknob turned agreeably in his hand and then he was racing down the spiral stairs even as they turned, his feet almost stumbling over themselves, in just a moment he was at the bottom and the gargoyle was walking aside and Harry fired out of the stairwell like a cannonball.
 
@@ -891,7 +891,7 @@ Professor McGonagall sighed. “That is between you and the Headmaster, I’m af
 
 “Um,” Harry said. “Actually I was thinking that once I know how, I could Transfigure the rock into a ring and wear it on my finger. If you could teach me how to sustain a Transfiguration—”
 
-“It is good that you asked me first,” Professor McGonagall said, her face growing a bit stern. “If you lost control of the Transfiguration the reversal would cut off your finger and probably rip your hand in half. And at your age, even a ring is too large a target for you to sustain indefinitely without it being a serious drain on your magic. But I can have a ring forged for you with a setting for a jewel, a *small* jewel, in contact with your skin, and you can practice sustaining a safe subject, like a marshmallow. When you have kept it up successfully, even in your sleep, for a full month, I will allow you to Transfigure, ah, your father’s rock…” Professor McGonagall’s voice trailed off. “Did the Headmaster *really—*”
+“It is good that you asked me first,” Professor McGonagall said, her face growing a bit stern. “If you lost control of the Transfiguration the reversal would cut off your finger and probably rip your hand in half. And at your age, even a ring is too large a target for you to sustain indefinitely without it being a serious drain on your magic. But I can have a ring forged for you with a setting for a jewel, a *small* jewel, in contact with your skin, and you can practice sustaining a safe subject, like a marshmallow. When you have kept it up successfully, even in your sleep, for a full month, I will allow you to Transfigure, ah, your father’s rock…” Professor McGonagall’s voice trailed off. “Did the Headmaster *really—”*
 
 “Yes. Ah… um…”
 
@@ -907,4 +907,4 @@ Professor McGonagall walked over to the gargoyle, inaudibly spoke the password, 
 
 *“Professor McGonagall the Headmaster set fire to a chicken!”*
 
-“He *wha-*” 
+“He *wha-”* 
