--- a/019.md
+++ b/019.md
@@ -15,11 +15,11 @@ Draco had a stern expression on his face, and his green-trimmed robes somehow lo
 
 “You two, on the other hand, *shut up.*”
 
-The last session of classes on Friday was about to start, in that vast auditorium where all four Houses learned Defense, er, Battle Magic.
+The last session of classes on Friday was about to start, in that vast auditorium where all four Houses learned Defence, er, Battle Magic.
 
 The last session of classes on Friday.
 
-Harry was hoping that this class would be non-stressful, and that the brilliant Professor Quirrell would realize this was perhaps not the best time to single out Harry for anything. Harry had recovered a little, but…
+Harry was hoping that this class would be non-stressful, and that the brilliant Professor Quirrell would realise this was perhaps not the best time to single out Harry for anything. Harry had recovered a little, but…
 
 …but just in case, it was probably best to get in a bit of stress relief first.
 
@@ -55,7 +55,7 @@ Harry grinned involuntarily and he knew that Draco had caught it.
 
 “What is Severus saying?” Harry said.
 
-“That he hadn’t realized how sensitive the feelings of young children were,” Draco said. “Even in Slytherin! Even to *me!”*
+“That he hadn’t realised how sensitive the feelings of young children were,” Draco said. “Even in Slytherin! Even to *me!”*
 
 “Are you sure,” Harry said, “that you want to know something your Head of House would rather you not know?”
 
@@ -115,7 +115,7 @@ Harry’s face was now neutral. He had not thought of that and he really, really
 
 “And,” Harry said, “now Lucius thinks maybe *I* can tell him. Did you already get an owl—”
 
-“I will tonight,” Draco said, and laughed. “It will say,” his voice took on a different, more formal cadence, *“My beloved son: I’ve already told you of Harry Potter’s potential importance. As you have already realized, his importance has now become greater and more urgent. If you see any possible avenue of friendship or point of pressure with him, you must pursue it, and the full resources of Malfoy are at your disposal if needed.*”
+“I will tonight,” Draco said, and laughed. “It will say,” his voice took on a different, more formal cadence, *“My beloved son: I’ve already told you of Harry Potter’s potential importance. As you have already realised, his importance has now become greater and more urgent. If you see any possible avenue of friendship or point of pressure with him, you must pursue it, and the full resources of Malfoy are at your disposal if needed.*”
 
 Gosh. “Well,” Harry said, “not commenting on whether or not your whole complicated edifice of theory is true, let me just say that we are not quite such good friends as yet.”
 
@@ -175,7 +175,7 @@ A few students laughed, but not many.
 
 This time the laughter was much more widespread.
 
-“Well, it *is* the House of the ambitious, after all,” Professor Quirrell said, smiling. “I didn’t realize until later that what I really enjoyed was Battle Magic, and that my true ambition was to become a great fighting wizard and someday teach at Hogwarts. In any case, when I was thirteen years old, I read through the historical sections of the Hogwarts library, scrutinizing the lives and fates of past Dark Lords, and I made a list of all the mistakes that *I* would never make when *I* was a Dark Lord—”
+“Well, it *is* the House of the ambitious, after all,” Professor Quirrell said, smiling. “I didn’t realise until later that what I really enjoyed was Battle Magic, and that my true ambition was to become a great fighting wizard and someday teach at Hogwarts. In any case, when I was thirteen years old, I read through the historical sections of the Hogwarts library, scrutinizing the lives and fates of past Dark Lords, and I made a list of all the mistakes that *I* would never make when *I* was a Dark Lord—”
 
 Harry giggled before he could stop himself.
 
@@ -203,7 +203,7 @@ Neither, from the looks of it, had Mr. Goyle, who looked rather uncertain and wo
 
 Professor Quirrell straightened from where he was leaning on the desk. He looked suddenly stronger, and his hands formed fists and he drew himself up into a clearly recognizable martial arts stance.
 
-Harry’s eyes widened at the sight, and he realized why Mr. Goyle had been called up.
+Harry’s eyes widened at the sight, and he realised why Mr. Goyle had been called up.
 
 “Most wizards,” Professor Quirrell said, “do not bother much with what a Muggle would term martial arts. Is not a wand stronger than a fist? This attitude is stupid. Wands are held in fists. If you want to be a great fighting wizard you *must* learn martial arts to a level which would impress even a Muggle. I will now demonstrate a certain vitally important technique, which I learned in a *dojo,* a Muggle school of martial arts, of which I shall speak more shortly. For now…” Professor Quirrell took several steps forward, still in stance, advancing on where Mr. Goyle stood. “Mr. Goyle, I will ask you to attack me.”
 
@@ -237,7 +237,7 @@ There was a pause.
 
 Mr. Goyle walked off the platform, looking rather bewildered. Harry felt the same way.
 
-Professor Quirrell walked back to his desk and resumed leaning on it. “Sometimes we forget the most basic things, since it has been too long since we learned them. I realized I had done the same with my own lesson plan. You do not teach students to throw until you have taught them to fall. And I must not teach you to fight if you do not understand how to lose.”
+Professor Quirrell walked back to his desk and resumed leaning on it. “Sometimes we forget the most basic things, since it has been too long since we learned them. I realised I had done the same with my own lesson plan. You do not teach students to throw until you have taught them to fall. And I must not teach you to fight if you do not understand how to lose.”
 
 Professor Quirrell’s face hardened, and Harry thought he saw a hint of pain, a touch of sorrow, in those eyes. “I learned how to lose in a *dojo* in Asia, which, as any Muggle knows, is where all the good martial artists live. This *dojo* taught a style which had a reputation among fighting wizards as adapting well to magical dueling. The Master of that *dojo*—an old man by Muggle standards—was that style’s greatest living teacher. He had no idea that magic existed, of course. I applied to study there, and was one of the few students accepted that year, from among many contenders. There might have been a tiny bit of special influence involved.”
 
@@ -347,7 +347,7 @@ The five hands dropped abruptly back to their desks.
 
 “I won’t,” Harry said, his voice coming out rather weakly. “I swear never to take vengeance upon those who help me learn to lose. Professor Quirrell… would you *please*… *stop* that?”
 
-Professor Quirrell sighed. “I *am* sorry, Mr. Potter. I realize that you must find this equally annoying whether you intend to become a Dark Lord or not. But those children *also* had an important life lesson to learn. Would it be acceptable if I awarded you a Quirrell point in apology?”
+Professor Quirrell sighed. “I *am* sorry, Mr. Potter. I realise that you must find this equally annoying whether you intend to become a Dark Lord or not. But those children *also* had an important life lesson to learn. Would it be acceptable if I awarded you a Quirrell point in apology?”
 
 “Make it two,” Harry said.
 
@@ -359,7 +359,7 @@ There was a current of surprised laughter, defusing some of the tension.
 
 There was more laughter, although Professor Quirrell didn’t smile.
 
-Harry felt like he was wrestling an anaconda, trying to force the conversation through the narrow course that would make people realize he wasn’t a Dark Lord after all… *why* was Professor Quirrell so suspicious of him?
+Harry felt like he was wrestling an anaconda, trying to force the conversation through the narrow course that would make people realise he wasn’t a Dark Lord after all… *why* was Professor Quirrell so suspicious of him?
 
 “Professor,” said Draco’s unamplified voice. “It is also not my own ambition to become a stupid Dark Lord.”
 
@@ -439,7 +439,7 @@ Harry staggered back a few feet and, before he could stop himself, straightened 
 
 “Wrong,” said Professor Quirrell, “wrong, wrong, wrong.”
 
-“You bumped into me, Potter,” Derrick said. “Apologize.”
+“You bumped into me, Potter,” Derrick said. “Apologise.”
 
 “I’m sorry!”
 
@@ -457,7 +457,7 @@ A foot rested on Harry’s buttocks and a moment later Harry was pushed hard to 
 
 Derrick laughed. “This is *fun,*” he said.
 
-All he had to do was say it was over. And report the whole thing to the Headmaster’s office. That would be the end of this *Defense Professor* and his ill-fated stay at Hogwarts and… Professor McGonagall would be angry about that, but…
+All he had to do was say it was over. And report the whole thing to the Headmaster’s office. That would be the end of this *Defence Professor* and his ill-fated stay at Hogwarts and… Professor McGonagall would be angry about that, but…
 
 (An image of Professor McGonagall’s face flashed before his eyes, she didn’t look angry, just sad—)
 
@@ -469,7 +469,7 @@ Harry started to raise himself and Derrick put a foot on his chest and shoved hi
 
 The world was becoming transparent as crystal. Lines of action and their consequences stretched out before him in utter clarity. The fool wouldn’t be expecting him to strike back, a quick hit in the groin would stun him long enough for—
 
-“Try again,” said Professor Quirrell and with a sudden sharp motion Harry rolled and sprang to his feet and whirled on where stood his real enemy, the Defense Professor—
+“Try again,” said Professor Quirrell and with a sudden sharp motion Harry rolled and sprang to his feet and whirled on where stood his real enemy, the Defence Professor—
 
 Professor Quirrell said, “You have no patience.”
 
