--- a/022.md
+++ b/022.md
@@ -5,7 +5,7 @@
 
 * * * * *
 
-A small study room, near but not in the Ravenclaw dorm, one of the many many unused rooms of Hogwarts. Gray stone the floors, red brick the walls, dark stained wood the ceiling, four glowing glass globes set into the four walls of the room. A circular table that looked like a wide slab of black marble set on thick black marble legs for columns, but which had proved to be very light (weight and mass both) and wasn’t difficult to pick up and move around if necessary. Two comfortably cushioned chairs which had seemed at first to be locked to the floor in inconvenient places, but which would, the two of them had finally discovered, scoot around to where you stood as soon as you leaned over in a posture that looked like you were about to sit down.
+A small study room, near but not in the Ravenclaw dorm, one of the many many unused rooms of Hogwarts. Grey stone the floors, red brick the walls, dark stained wood the ceiling, four glowing glass globes set into the four walls of the room. A circular table that looked like a wide slab of black marble set on thick black marble legs for columns, but which had proved to be very light (weight and mass both) and wasn’t difficult to pick up and move around if necessary. Two comfortably cushioned chairs which had seemed at first to be locked to the floor in inconvenient places, but which would, the two of them had finally discovered, scoot around to where you stood as soon as you leaned over in a posture that looked like you were about to sit down.
 
 There also seemed to be a number of bats flying around the room.
 
@@ -15,7 +15,7 @@ Harry James Potter-Evans-Verres, theorist.
 
 And Hermione Jean Granger, experimenter and test subject.
 
-Harry was doing better in classes now, at least the classes he considered interesting. He’d read more books, and not books for eleven-year-olds either. He’d practiced Transfiguration over and over during one of his extra hours every day, taking the other hour for beginning Occlumency. He was taking the worthwhile classes *seriously,* not just turning in his homework every day, but using his free time to learn more than was required, to read other books beyond the given textbooks, looking to master the subject and not just memorize a few test answers, to excel. You didn’t see that much outside Ravenclaw. And now even *within* Ravenclaw, his only remaining competitors were Padma Patil (whose parents came from a non-English-speaking culture and thus had raised her with an actual work ethic), Anthony Goldstein (out of a certain tiny ethnic group that won 25% of the Nobel Prizes), and of course, striding far above everyone like a Titan strolling through a pack of puppies, Hermione Granger.
+Harry was doing better in classes now, at least the classes he considered interesting. He’d read more books, and not books for eleven-year-olds either. He’d practiced Transfiguration over and over during one of his extra hours every day, taking the other hour for beginning Occlumency. He was taking the worthwhile classes *seriously,* not just turning in his homework every day, but using his free time to learn more than was required, to read other books beyond the given textbooks, looking to master the subject and not just memorise a few test answers, to excel. You didn’t see that much outside Ravenclaw. And now even *within* Ravenclaw, his only remaining competitors were Padma Patil (whose parents came from a non-English-speaking culture and thus had raised her with an actual work ethic), Anthony Goldstein (out of a certain tiny ethnic group that won 25% of the Nobel Prizes), and of course, striding far above everyone like a Titan strolling through a pack of puppies, Hermione Granger.
 
 To run this particular experiment you needed the test subject to learn sixteen new spells, on their own, without help or correction. That meant the test subject was Hermione. Period.
 
@@ -39,7 +39,7 @@ And it *still wasn’t glowing.*
 
 *“Oogely boogely!”* said Hermione.
 
-The bat materialized with only one wing and spun pathetically to the floor, flopping around in a circle on the gray stone.
+The bat materialised with only one wing and spun pathetically to the floor, flopping around in a circle on the gray stone.
 
 “Now what is it really?” said Hermione.
 
@@ -51,7 +51,7 @@ This time the bat didn’t have any wings at all and fell with a plop like a dea
 
 “3 to 1 to 2.”
 
-And lo the bat did materialize and it did fly up at once toward the ceiling, healthy and glowing a bright green.
+And lo the bat did materialise and it did fly up at once toward the ceiling, healthy and glowing a bright green.
 
 Hermione nodded in satisfaction. “Okay, what next?”
 
@@ -297,7 +297,7 @@ Draco didn’t even try to keep the incredulity out of his voice. “You *can’
 
 A worried look came over Draco’s face before he could stop it. Whatever Harry Potter was about to do next, it would be something Father wasn’t expecting, and Draco was feeling very nervous about where that might lead.
 
-Draco also realized that his hair was getting sweaty underneath the cowl. He’d never actually worn one of those before, and hadn’t realized that the Death Eaters’ cloaks probably had things like Cooling Charms.
+Draco also realised that his hair was getting sweaty underneath the cowl. He’d never actually worn one of those before, and hadn’t realised that the Death Eaters’ cloaks probably had things like Cooling Charms.
 
 Harry Potter wiped some sweat from his forehead again, grimaced, took out his wand, pointed it upward, took a deep breath, and said “ *Frigideiro!”*
 
@@ -357,7 +357,7 @@ Hence the Potter Method.
 
 Harry Potter had needed to repeat the phrase “just pretend to be pretending to be a scientist” three times before Draco had understood.
 
-In that moment Draco had realized that there was something deeply *wrong* with Harry Potter’s brain, and anyone who tried Legilimency on it would probably never come back out again.
+In that moment Draco had realised that there was something deeply *wrong* with Harry Potter’s brain, and anyone who tried Legilimency on it would probably never come back out again.
 
 Harry Potter had then gone into further and considerable detail: Draco was to pretend to be a Death Eater who was posing as the editor of a scientific journal, Dr. Malfoy, who wanted to reject his enemy Dr. Potter’s paper “On the Heritability of Magical Ability”, and if the Death Eater didn’t act like a real scientist would, he would be revealed as a Death Eater and executed, while Dr. Malfoy was also being watched by his own rivals and needed to *appear* to reject Dr. Potter’s paper for neutral scientific reasons or he would lose his position as journal editor.
 
@@ -477,7 +477,7 @@ That could happen to *everyone*.
 
 There would be no more wizards, no more magic, ever. Just Muggles who had a few legends about what their ancestors had been able to do. Some of the Muggles would be called Malfoy, and that would be all that was left of the name.
 
-For the first time in his life, Draco realized why there were Death Eaters.
+For the first time in his life, Draco realised why there were Death Eaters.
 
 He’d always taken for granted that becoming a Death Eater was something you did when you grew up. Now Draco *understood*, he knew why Father and Father’s friends had sworn to give their lives to prevent the nightmare from coming to pass, there were things you couldn’t just stand by and watch happen. But what if it was going to happen *anyway*, what if all the sacrifices, all the friends they’d lost to Dumbledore, the *family* they’d lost, what if it had all been for *nothing…*
 
@@ -487,7 +487,7 @@ Harry stopped scribbling and looked up. His face had an angry expression. “You
 
 Father had said that every single time Draco used the word. “But, but, it’s too awful to believe that—”
 
-“Draco, let me introduce you to something I call the Litany of Tarski. It changes every time you use it. On this occasion it runs like so: *If magic is fading out of the world, I want to believe that magic is fading out of the world. If magic is not fading out of the world, I want not to believe that magic is fading out of the world. Let me not become attached to beliefs I may not want.* If we’re living in a world where magic is fading, *that’s what we have to believe,* we have to know what’s coming, so we can stop it, or in the very worst case, be prepared to do what we can in the time we have left. Not believing it won’t stop it from happening. So the *only* question we have to ask is whether magic is *actually* fading, and if that’s the world we live in then that’s what we want to believe. Litany of Gendlin: *What’s true is already so, owning up to it doesn’t make it worse.* Got that, Draco? I’m going to make you memorize it later. It’s something you repeat to yourself any time you start wondering if it’s a good idea to believe something that isn’t actually true. In fact I want you to say it right now. *What’s true is already so, owning up to it doesn’t make it worse.* Say it.”
+“Draco, let me introduce you to something I call the Litany of Tarski. It changes every time you use it. On this occasion it runs like so: *If magic is fading out of the world, I want to believe that magic is fading out of the world. If magic is not fading out of the world, I want not to believe that magic is fading out of the world. Let me not become attached to beliefs I may not want.* If we’re living in a world where magic is fading, *that’s what we have to believe,* we have to know what’s coming, so we can stop it, or in the very worst case, be prepared to do what we can in the time we have left. Not believing it won’t stop it from happening. So the *only* question we have to ask is whether magic is *actually* fading, and if that’s the world we live in then that’s what we want to believe. Litany of Gendlin: *What’s true is already so, owning up to it doesn’t make it worse.* Got that, Draco? I’m going to make you memorise it later. It’s something you repeat to yourself any time you start wondering if it’s a good idea to believe something that isn’t actually true. In fact I want you to say it right now. *What’s true is already so, owning up to it doesn’t make it worse.* Say it.”
 
 “What’s true is already so,” repeated Draco, his voice trembling, “owning up to it doesn’t make it worse.”
 
@@ -514,7 +514,7 @@ Draco repeated back the words, the sickness churning in his stomach.
 
 “All right,” Harry said. His breathing sounded a little calmer. “Now when you’re dealing with a confusing problem and you have no idea what’s going on, the smart thing to do is figure out some really simple tests, things you can look at right away. We need fast tests that distinguish between these hypotheses. Observations that would come out a different way for at least one of them compared to all the other ones.”
 
-Draco stared at the list in shock. He was suddenly realizing that he knew an awful lot of purebloods who were only children. Himself, Vincent, Gregory, practically *everyone.* The two most powerful wizards everyone talked about were Dumbledore and the Dark Lord and neither had any children just like Harry had suspected…
+Draco stared at the list in shock. He was suddenly realising that he knew an awful lot of purebloods who were only children. Himself, Vincent, Gregory, practically *everyone.* The two most powerful wizards everyone talked about were Dumbledore and the Dark Lord and neither had any children just like Harry had suspected…
 
 “It’s going to be really hard to distinguish between 2 and 6,” Harry said, “it’s in the blood either way, you’d have to try and track the decline of wizardry and compare that to how many kids different wizards were having and measure the abilities of Muggleborns compared to purebloods…” Harry’s fingers were tapping nervously on the desk. “Let’s just lump 6 in with 2 and call them the blood hypothesis for now. 4 is unlikely because then everyone would notice a sudden drop when the wizards switched to new foods, it’s hard to see what would’ve changed steadily over 800 years. 5 is unlikely for the same reason, no sudden drop, Muggles weren’t doing anything 800 years back. 4 looks like 2 and 5 looks like 1 anyway. So mainly we should be trying to distinguish between 1, 2, and 3.” Harry turned the parchment to himself, drew an ellipse around those three numbers, turned it back. “Magic is fading, blood is weakening, knowledge is disappearing. What test comes out differently depending on which of those is true? What could we see that would mean any one of these was false?”
 
@@ -550,7 +550,7 @@ Harry Potter shook his head. “Or magic itself was stronger. We have to figure 
 
 Draco’s face screwed up as he tried to recollect. “I can’t remember hearing anything about the Dark Lord but I think Dumbledore’s supposed to have done something amazing on his Transfiguration O.W.L.s in fifth year… I think other powerful wizards were good in Hogwarts too…”
 
-Harry scowled, still pacing. “They could just be studying hard. Still, if first-year students learned the same spells and seemed about as powerful then as now, we could call that *weak* evidence favoring 1 over 2… wait, hold on.” Harry stopped where he stood. “I have another test that might distinguish between 1 and 2. It would take a while to explain, it uses some things that scientists know about blood and inheritance, but it’s an easy question to ask. And if we *combine* my test and your test and they both come out the same way, that’s a strong hint at the answer.” Harry almost ran back to the desk, took the parchment and wrote:
+Harry scowled, still pacing. “They could just be studying hard. Still, if first-year students learned the same spells and seemed about as powerful then as now, we could call that *weak* evidence favouring 1 over 2… wait, hold on.” Harry stopped where he stood. “I have another test that might distinguish between 1 and 2. It would take a while to explain, it uses some things that scientists know about blood and inheritance, but it’s an easy question to ask. And if we *combine* my test and your test and they both come out the same way, that’s a strong hint at the answer.” Harry almost ran back to the desk, took the parchment and wrote:
 
 *B. Did ancient first-year students cast the same sort of spells, with the same power, as now? (Weak evidence for 1 over 2, but blood could also be losing powerful wizardry only.)*
 
