--- a/023.md
+++ b/023.md
@@ -9,7 +9,7 @@
 
 Draco wrote it down. That was only twenty-eight but it was time to go back and meet Harry.
 
-He’d needed to ask other portraits to help translating, English had changed a lot, but the oldest portraits had described first-year spells that sounded an awful lot like the ones they had now. Draco had recognized around half of them and the other half didn’t sound any more powerful.
+He’d needed to ask other portraits to help translating, English had changed a lot, but the oldest portraits had described first-year spells that sounded an awful lot like the ones they had now. Draco had recognised around half of them and the other half didn’t sound any more powerful.
 
 The sick feeling in his stomach had grown with each answer until finally, unable to take it any more, he’d gone off and asked other portraits Harry Potter’s strange question about Squib marriages, instead. The first five portraits hadn’t known anyone and finally he’d asked those portraits to ask *their* acquaintances to ask *their* acquaintances and so managed to find some people who’d actually admit to being friends with Squibs.
 
@@ -19,7 +19,7 @@ Draco’s feet were heavy as he walked through the corridors of Hogwarts. He sho
 
 But Draco knew that wasn’t right.
 
-Chill the dungeons of Slytherin, gray the stone walls, Draco usually liked the atmosphere, but now it seemed too much like fading.
+Chill the dungeons of Slytherin, grey the stone walls, Draco usually liked the atmosphere, but now it seemed too much like fading.
 
 His hand on the doorknob, Harry Potter already inside and waiting, wearing his cowled cloak.
 
@@ -43,7 +43,7 @@ Harry Potter sat down at a desk with torn scraps of paper arranged across its su
 
 As Harry spoke, his fingers ranged over the paired scraps of paper, pointing to one part of the pair when he said “from your mother”, the other when he said “from your father”. And as Harry talked about picking a piece of paper at random, his hand pulled a Knut out of his robes and flipped it; Harry looked at the coin, and then pointed to the top piece of paper. All without a pause in the speech.
 
-“Now when it comes to something like being short or tall, there’s a *lot* of places in the recipe that make *little* differences. So if a tall father marries a short mother, the child gets some pieces of paper saying ’tall’ and some pieces of paper saying ’short’, and usually the child ends up middle-sized. But not always. By luck, the child might get a lot of pieces saying ’tall’, and not many papers saying ’short’, and grow up pretty tall. You could have a tall father with five papers saying ’tall’ and a tall mother with five papers saying ’tall’ and by amazing luck the child gets *all ten* papers saying ’tall’ and ends up taller than both of them. You see? Blood isn’t a perfect fluid, it doesn’t mix perfectly. Deoxyribose nucleic acid is made up of lots of little pieces, like a glass of pebbles instead of a glass of water. That’s why a child isn’t always exactly in the middle of the parents.”
+“Now when it comes to something like being short or tall, there’s a *lot* of places in the recipe that make *little* differences. So if a tall father marries a short mother, the child gets some pieces of paper saying ‘tall’ and some pieces of paper saying ‘short’, and usually the child ends up middle-sized. But not always. By luck, the child might get a lot of pieces saying ‘tall’, and not many papers saying ‘short’, and grow up pretty tall. You could have a tall father with five papers saying ‘tall’ and a tall mother with five papers saying ‘tall’ and by amazing luck the child gets *all ten* papers saying ‘tall’ and ends up taller than both of them. You see? Blood isn’t a perfect fluid, it doesn’t mix perfectly. Deoxyribose nucleic acid is made up of lots of little pieces, like a glass of pebbles instead of a glass of water. That’s why a child isn’t always exactly in the middle of the parents.”
 
 Draco listened with his mouth open. How in Merlin’s name had the Muggles figured all this out? They could *see* the recipe?
 
@@ -51,7 +51,7 @@ Draco listened with his mouth open. How in Merlin’s name had the Muggles figur
 
 Draco nodded slowly. He’d never heard it explained that way before. There was a surprising beauty to how exactly it fit.
 
-*“But,*” Harry said. “That’s only *one* hypothesis. Suppose that instead there’s only a *single* place in the recipe that makes you a wizard. Only *one* place where a piece of paper can say ’magic’ or ‘not magic’. And there are two copies of everything, always. So then there are only three possibilities. Both copies can say ’magic’. One copy can say ’magic’ and one copy can say ‘not magic’. Or both copies can say ‘not magic’. Wizards, Squibs, and Muggles. Muggleborns wouldn’t really be born to Muggles, they would be born to two Squibs, two parents each with one magic copy who’d grown up in the Muggle world. Now imagine a witch marries a Squib. Each child will get one paper saying ’magic’ from the mother, always, it doesn’t matter which piece gets picked at random, both say ’magic’. But like flipping a coin, half the time the child will get a paper saying ’magic’ from the father, and half the time the child will get the father’s paper saying ‘not magic’. When a witch marries a Squib, the result won’t be a lot of weak wizarding children. Half the children will be wizards and witches just as powerful as their mother, and half the children will be Squibs. Because if there’s just *one* place in the recipe that makes you a wizard, then magic isn’t like a glass of pebbles that can mix. It’s like a single magical pebble, a sorcerer’s stone.”
+*“But,*” Harry said. “That’s only *one* hypothesis. Suppose that instead there’s only a *single* place in the recipe that makes you a wizard. Only *one* place where a piece of paper can say ‘magic’ or ‘not magic’. And there are two copies of everything, always. So then there are only three possibilities. Both copies can say ‘magic’. One copy can say ‘magic’ and one copy can say ‘not magic’. Or both copies can say ‘not magic’. Wizards, Squibs, and Muggles. Muggleborns wouldn’t really be born to Muggles, they would be born to two Squibs, two parents each with one magic copy who’d grown up in the Muggle world. Now imagine a witch marries a Squib. Each child will get one paper saying ‘magic’ from the mother, always, it doesn’t matter which piece gets picked at random, both say ‘magic’. But like flipping a coin, half the time the child will get a paper saying ‘magic’ from the father, and half the time the child will get the father’s paper saying ‘not magic’. When a witch marries a Squib, the result won’t be a lot of weak wizarding children. Half the children will be wizards and witches just as powerful as their mother, and half the children will be Squibs. Because if there’s just *one* place in the recipe that makes you a wizard, then magic isn’t like a glass of pebbles that can mix. It’s like a single magical pebble, a sorcerer’s stone.”
 
 Harry arranged three pairs of papers side by side. On one pair he wrote ‘magic’ and ‘magic’. On another pair he wrote ‘magic’ on the top paper only. And the third pair he left blank.
 
@@ -59,7 +59,7 @@ Harry arranged three pairs of papers side by side. On one pair he wrote ‘magic
 
 Harry arranged another two pairs of papers side by side, and took out a quill. Soon each pair had one piece of paper saying ‘magic’ and the other paper blank.
 
-“And that brings me to the prediction,” said Harry. “What happens when two Squibs marry. Flip a coin twice. It can come up heads and heads, heads and tails, tails and heads, or tails and tails. So one quarter of the time you’ll get two heads, one quarter of the time you’ll get two tails, and half the time you’ll get one heads and one tail. Same thing if two Squibs marry. One quarter of the children would come up magic and magic, and be wizards. One quarter would come up not-magic and not-magic, and be Muggles. The other half would be Squibs. It’s a very old and very classic pattern. It was discovered by Gregor Mendel who is not forgotten, and it was the first hint ever uncovered for how the recipe worked. Anyone who knows anything about blood science would recognize that pattern in an instant. It wouldn’t be exact, any more than if you flip a coin twice forty times you’ll always get exactly ten pairs of two heads. But if it’s seven or thirteen wizards out of forty children that’ll be a strong indicator. That’s the test I had you do. Now let’s see your data.”
+“And that brings me to the prediction,” said Harry. “What happens when two Squibs marry. Flip a coin twice. It can come up heads and heads, heads and tails, tails and heads, or tails and tails. So one quarter of the time you’ll get two heads, one quarter of the time you’ll get two tails, and half the time you’ll get one heads and one tail. Same thing if two Squibs marry. One quarter of the children would come up magic and magic, and be wizards. One quarter would come up not-magic and not-magic, and be Muggles. The other half would be Squibs. It’s a very old and very classic pattern. It was discovered by Gregor Mendel who is not forgotten, and it was the first hint ever uncovered for how the recipe worked. Anyone who knows anything about blood science would recognise that pattern in an instant. It wouldn’t be exact, any more than if you flip a coin twice forty times you’ll always get exactly ten pairs of two heads. But if it’s seven or thirteen wizards out of forty children that’ll be a strong indicator. That’s the test I had you do. Now let’s see your data.”
 
 And before Draco could even think, Harry Potter had taken the parchment out of Draco’s hand.
 
@@ -93,7 +93,7 @@ Harry Potter slowly smiled. “Draco, that’s *brilliant.*”
 
 *It’s the sort of dumb question you’d only ask in the first place if you’d been raised by Muggles.*
 
-Then the sickness in Draco’s stomach got even worse as he realized what it would mean if magical creatures *were* getting weaker. They would know for certain then that magic was fading, and there was a part of Draco that was already sure that was exactly what they would find. He didn’t want to see this, he didn’t want to know…
+Then the sickness in Draco’s stomach got even worse as he realised what it would mean if magical creatures *were* getting weaker. They would know for certain then that magic was fading, and there was a part of Draco that was already sure that was exactly what they would find. He didn’t want to see this, he didn’t want to know…
 
 Harry Potter was already halfway to the door. “Come *on*, Draco! There’s a portrait not far from here, we’ll just ask them to go get someone old and find out right away! We’re cloaked, if someone sees us we can just run away! Let’s go!”
 
@@ -170,7 +170,7 @@ Harry Potter stared at him for a moment, still sitting. When he spoke, his voice
 
 “Fine. Then you and I are through. I’m going to just walk away and forget any of this ever happened.”
 
-Draco spun around, feeling the burning sensation in his throat, the sense of betrayal, and that was when he realized he really *had* liked Harry Potter, and that thought didn’t slow him down for a moment as he strode toward the classroom door.
+Draco spun around, feeling the burning sensation in his throat, the sense of betrayal, and that was when he realised he really *had* liked Harry Potter, and that thought didn’t slow him down for a moment as he strode toward the classroom door.
 
 And Harry Potter’s voice came, now louder, and worried:
 
@@ -186,7 +186,7 @@ He knew even before Harry Potter said it.
 
 *“That’s not true!* ” said Draco. “I didn’t sacrifice the belief. I still believe that!” His voice was getting louder, and the chill was getting worse.
 
-Harry Potter shook his head. His voice came in a whisper. “Draco… I’m sorry, Draco, you *don’t* believe it, not anymore.” Harry’s voice rose again. “I’ll prove it to you. Imagine that someone tells you they’re keeping a dragon in their house. You tell them you want to see it. They say it’s an invisible dragon. You say fine, you’ll listen to it move. They say it’s an inaudible dragon. You say you’ll throw some cooking flour into the air and see the outline of the dragon. They say the dragon is permeable to flour. And the telling thing is that they know, in *advance,* exactly which experimental results they’ll have to explain away. They *know* everything will come out the way it does if there’s no dragon, they know in *advance* just which excuses they’ll have to make. So maybe they *say* there’s a dragon. Maybe they *believe* they believe there’s a dragon, it’s called belief-in-belief. But they don’t actually believe it. You can be mistaken about what you believe, most people never realize there’s a difference between believing something and thinking it’s good to believe it.” Harry Potter had risen from the desk now, and taken a few steps toward Draco. “And Draco, you don’t believe any more in blood purism, I’ll show you that you don’t. If blood purism is true, then Hermione Granger doesn’t make sense, so what could explain her? Maybe she’s a wizarding orphan raised by Muggles, just like I was? I could go to Granger and ask to see pictures of her parents, to see if she looks like them. Would you expect her to look different? Should we go perform that test?”
+Harry Potter shook his head. His voice came in a whisper. “Draco… I’m sorry, Draco, you *don’t* believe it, not anymore.” Harry’s voice rose again. “I’ll prove it to you. Imagine that someone tells you they’re keeping a dragon in their house. You tell them you want to see it. They say it’s an invisible dragon. You say fine, you’ll listen to it move. They say it’s an inaudible dragon. You say you’ll throw some cooking flour into the air and see the outline of the dragon. They say the dragon is permeable to flour. And the telling thing is that they know, in *advance,* exactly which experimental results they’ll have to explain away. They *know* everything will come out the way it does if there’s no dragon, they know in *advance* just which excuses they’ll have to make. So maybe they *say* there’s a dragon. Maybe they *believe* they believe there’s a dragon, it’s called belief-in-belief. But they don’t actually believe it. You can be mistaken about what you believe, most people never realise there’s a difference between believing something and thinking it’s good to believe it.” Harry Potter had risen from the desk now, and taken a few steps toward Draco. “And Draco, you don’t believe any more in blood purism, I’ll show you that you don’t. If blood purism is true, then Hermione Granger doesn’t make sense, so what could explain her? Maybe she’s a wizarding orphan raised by Muggles, just like I was? I could go to Granger and ask to see pictures of her parents, to see if she looks like them. Would you expect her to look different? Should we go perform that test?”
 
 “They would have put her with relatives,” Draco said, his voice trembling. “They’ll still look the same.”
 
@@ -196,7 +196,7 @@ Harry Potter shook his head. His voice came in a whisper. “Draco… I’m sorr
 
 “Scientists can do tests to check for sure if someone is the true child of a father. Granger would probably do it if I paid her family enough. *She* wouldn’t be afraid of the results. So what do you expect that test to show? Tell me to run it and we will. But you already know what the test will say. You’ll always know. You won’t ever be able to forget. You might *wish* you believed in blood purism, but you’ll always *expect to see happen* just exactly what would happen if there was only one thing that made you a wizard. That was your sacrifice to become a scientist.”
 
-Draco’s breathing was ragged. “Do you realize *what you’ve done?”* Draco surged forward and he seized Harry by the collar of his robes. His voice rose to a scream, it sounded unbearably loud in the closed classroom and the silence. “*Do you realize what you’ve done?”*
+Draco’s breathing was ragged. “Do you realise *what you’ve done?”* Draco surged forward and he seized Harry by the collar of his robes. His voice rose to a scream, it sounded unbearably loud in the closed classroom and the silence. “*Do you realise what you’ve done?”*
 
 Harry’s voice was shaky. “You had a belief. The belief was false. I helped you see that. What’s true is already so, owning up to it doesn’t make it worse—”
 
@@ -278,7 +278,7 @@ Some hexes required specific counters or you couldn’t undo them, or maybe it w
 
 Harry’s hand was really starting to hurt, now, and that was interfering with his attempts to think creatively.
 
-But a few screams later, Harry realized what he had to do.
+But a few screams later, Harry realised what he had to do.
 
 His pouch, unfortunately, was on the wrong side of his body, and it took some twisting to reach into it, especially with his other arm flailing around in a reflex, unstoppable attempt to fling off the source of pain. By the time he managed it his other arm had managed to throw away his wand again.
 
@@ -314,7 +314,7 @@ He hadn’t redeemed Draco yet, not even close. Contrary to what Draco himself m
 
 Harry couldn’t claim it had all gone just as planned. It had all gone just as completely made up on the spot. The *plan* hadn’t called for this to happen until December or thereabouts, after Harry had taught Draco the techniques not to deny the evidence when he saw it.
 
-But he’d seen the look of fear on Draco’s face, realized that Draco was *already* taking an alternative hypothesis seriously, and seized the moment. One case of true curiosity had the same sort of redeeming power in rationality that one case of true love had in movies.
+But he’d seen the look of fear on Draco’s face, realised that Draco was *already* taking an alternative hypothesis seriously, and seized the moment. One case of true curiosity had the same sort of redeeming power in rationality that one case of true love had in movies.
 
 In retrospect, Harry had given himself hours to make the most important discovery in the history of magic, and months to break through the undeveloped mental barriers of an eleven-year-old boy. This could indicate that Harry had some sort of major cognitive deficit with respect to estimating task completion times.
 
@@ -408,7 +408,7 @@ Draco started crying harder, then.
 
 He didn’t want this, he *didn’t want this* but there was no turning back. It was too late. He was already a scientist.
 
-Draco knew he should go back and free Harry Potter and apologize. It would have been the smart thing to do.
+Draco knew he should go back and free Harry Potter and apologise. It would have been the smart thing to do.
 
 Instead Draco stayed in his bed and sobbed.
 
@@ -422,7 +422,7 @@ Harry dropped the remnants of his hacksaw to the ground. The brass hinges had pr
 
 His watch said it was 7:02pm, with less than fifteen minutes left, and Harry tried to remember if there were any other sharp things in his pouch that needed destroying, and felt another fit of tears welling up. If only, when his Time-Turner opened, he could go back and *prevent*—
 
-And that was when Harry realized he was being *silly*.
+And that was when Harry realised he was being *silly*.
 
 It wasn’t the first time he’d been locked in a room.
 
@@ -430,7 +430,7 @@ Professor McGonagall had already told him the correct way to do this.
 
 …she’d also told him not to use the Time-Turner for this sort of thing.
 
-Would Professor McGonagall realize that this occasion really *did* warrant a special exception? Or just take away the Time-Turner entirely?
+Would Professor McGonagall realise that this occasion really *did* warrant a special exception? Or just take away the Time-Turner entirely?
 
 Harry gathered up all his things, all the evidence, into his pouch. A *Scourgify* took care of the vomit on the floor, though not the sweat that had soaked his robes. He left the overturned desks overturned, it wasn’t important enough to be worth doing with one hand.
 
