--- a/024.md
+++ b/024.md
@@ -11,7 +11,7 @@
 
 Draco waited in a small windowed alcove he’d found near the Great Hall, stomach churning.
 
-There would be a price, and it would not be small. Draco had known that as soon as he’d woken up and realized that he didn’t dare enter the Great Hall for breakfast because he might see Harry Potter there and Draco didn’t know what would happen after that.
+There would be a price, and it would not be small. Draco had known that as soon as he’d woken up and realised that he didn’t dare enter the Great Hall for breakfast because he might see Harry Potter there and Draco didn’t know what would happen after that.
 
 Footsteps approached.
 
@@ -35,7 +35,7 @@ The hand dangled limply from it, like something dead.
 
 For a single instant the news came as a relief.
 
-And then Draco realized.
+And then Draco realised.
 
 “You went to Madam Pomfrey,” whispered Draco.
 
@@ -55,7 +55,7 @@ There was a long pause.
 
 “And then?” Draco said in a shaking voice.
 
-Harry Potter smiled slightly. “I apologized deeply, which made Professor Flitwick look *very* stern, and then I told Professor Flitwick that the whole thing was, indeed, extremely serious, secret, *delicate* business, and that I’d already informed the Headmaster about the project.”
+Harry Potter smiled slightly. “I apologised deeply, which made Professor Flitwick look *very* stern, and then I told Professor Flitwick that the whole thing was, indeed, extremely serious, secret, *delicate* business, and that I’d already informed the Headmaster about the project.”
 
 Draco gasped. “No! Flitwick isn’t going to just accept that! He’ll check with Dumbledore!”
 
@@ -93,7 +93,7 @@ Draco could just see it now. Dumbledore looking all stern, concealing his eagern
 
 And Harry politely telling Dumbledore to keep his mouth shut if he knew what was good for him.
 
-Father had warned Draco against people like this, people who could ruin you and still be so likable that it was hard to hate them properly.
+Father had warned Draco against people like this, people who could ruin you and still be so likeable that it was hard to hate them properly.
 
 “After which,” Harry said, “the Headmaster told Professor Flitwick that this was, indeed, a secret and delicate matter of which he had already been informed, and that he did not think pressing it at this time would help me or anyone. Professor Flitwick started to say something about the Headmaster’s usual plotting going much too far, and I had to interrupt at that point and explain that it had been my *own* idea and not anything the Headmaster forced me into, so Professor Flitwick spun around and started lecturing *me*, and the Headmaster interrupted *him* and said that as the Boy-Who-Lived I was doomed to have weird and dangerous adventures so I was safer if I got into them on purpose instead of waiting for them to happen by accident, and that was when Professor Flitwick threw up his little hands and started shrieking in a high-pitched voice at *both* of us about how he didn’t care what we were cooking up together, but this wasn’t ever to happen again for as long as I was in Ravenclaw House or he would have me thrown out and I could go to Gryffindor which was where all this *Dumbledoring* belonged—”
 
@@ -141,7 +141,7 @@ If Harry *was* pretending to be the repentant friend who had accidentally hurt s
 
 Harry turned back toward Draco. “What happened yesterday *wasn’t* the plan,” Harry said, his voice seeming stuck in his throat. “The *plan* was that I would teach you why you were always better off knowing the truth, and then we would try together to discover the truth about blood, and whatever the answer was we would accept it. Yesterday I… rushed things.”
 
-“Always better off knowing the truth,” Draco said coldly. “Like you did me a *favor.”*
+“Always better off knowing the truth,” Draco said coldly. “Like you did me a *favour.”*
 
 Harry nodded, blowing Draco’s mind completely, and said, “What if Lucius comes up with the same idea I did, that the problem is stronger wizards having fewer children? He might start a program to pay the strongest purebloods to have more children. In fact, if blood purism *were* right, that’s just what Lucius *should* be doing—addressing the problem on *his* side, where he can make things happen right away. Right now, Draco, you’re the only friend Lucius has who would try to stop him from wasting the effort, because you’re the only one who knows the *real* truth and can predict the real results.”
 
@@ -187,9 +187,9 @@ But it was *just* the sort of mistake you would make if you didn’t have any me
 
 “To show no hard feelings,” said Harry at once. “Though I expect she’ll also feel awkward if she refuses any small requests I make over the next couple of months.”
 
-And that was when Draco realized that Harry actually *was* trying to be his friend.
+And that was when Draco realised that Harry actually *was* trying to be his friend.
 
-Harry’s move against Granger *had* been smart, maybe even brilliant. Make your enemy not suspect you, *and* put them into your debt in a friendly way so that you could maneuver them into position *just by asking them*. Draco couldn’t have gotten away with that, his target would have been too suspicious, but the Boy-Who-Lived *could.* So the first step of Harry’s plot was to give his enemy an expensive present, Draco wouldn’t have thought of that, but it could *work…*
+Harry’s move against Granger *had* been smart, maybe even brilliant. Make your enemy not suspect you, *and* put them into your debt in a friendly way so that you could manoeuvre them into position *just by asking them*. Draco couldn’t have gotten away with that, his target would have been too suspicious, but the Boy-Who-Lived *could.* So the first step of Harry’s plot was to give his enemy an expensive present, Draco wouldn’t have thought of that, but it could *work…*
 
 If you were Harry’s enemy, his plots might be hard to see through at first, they might even be stupid, but his reasoning would make *sense* once you understood it, you would comprehend that he was trying to hurt you.
 
@@ -199,7 +199,7 @@ Because if you were Harry’s *friend,* then he tried to be friends with you in 
 
 The silence stretched.
 
-“I know that I’ve abused our friendship terribly,” Harry said finally. “But please realize, Draco, that in the end, I just wanted the two of us to find the truth together. Is that something you can forgive?”
+“I know that I’ve abused our friendship terribly,” Harry said finally. “But please realise, Draco, that in the end, I just wanted the two of us to find the truth together. Is that something you can forgive?”
 
 A fork with two paths, but with only one path easy to go back on later if Draco changed his mind…
 
@@ -209,7 +209,7 @@ Harry’s eyes lit up. “I’m glad to hear that, Draco,” he said softly.
 
 The two students stood in that alcove, Harry still dipped in the lone sunbeam, Draco in shadow.
 
-And Draco realized with a note of horror and despair, that although it was a terrifying fate indeed to be Harry’s friend, Harry now had so many different avenues for threatening Draco that being his enemy would be even *worse*.
+And Draco realised with a note of horror and despair, that although it was a terrifying fate indeed to be Harry’s friend, Harry now had so many different avenues for threatening Draco that being his enemy would be even *worse*.
 
 Probably.
 
@@ -303,7 +303,7 @@ Fine. He *wouldn’t* kill Harry. Harry had been raised by Muggles, it wasn’t 
 
 Instead, Harry would live on, just so that Draco could tell him that it had all been for Harry’s own good, really, he ought to be grateful—
 
-And with a sudden twitch of surprised pleasure, Draco realized that it actually *was* for Harry’s own good. If Harry tried to carry out his plan of playing Dumbledore and Father for fools, he would *die.*
+And with a sudden twitch of surprised pleasure, Draco realised that it actually *was* for Harry’s own good. If Harry tried to carry out his plan of playing Dumbledore and Father for fools, he would *die.*
 
 That made it *perfect.*
 
