--- a/025.md
+++ b/025.md
@@ -49,13 +49,13 @@ Magic didn’t seem like something that had self-replicated into existence. Spel
 
 Some intelligent engineer, then, had created the Source of Magic, and told it to pay attention to a particular DNA marker.
 
-The obvious next thought was that this had something to do with “Atlantis".
+The obvious next thought was that this had something to do with “Atlantis”.
 
 Harry had asked Hermione about that earlier—on the train to Hogwarts, after hearing Draco say it—and so far as she knew, nothing more was known than the word itself.
 
-It might have been pure legend. But it was also plausible enough that a civilization of magic-users, especially one from *before* the Interdict of Merlin, would have managed to blow itself up.
+It might have been pure legend. But it was also plausible enough that a civilisation of magic-users, especially one from *before* the Interdict of Merlin, would have managed to blow itself up.
 
-The line of reasoning continued: Atlantis had been an isolated civilization that had somehow brought into being the Source of Magic, and told it to serve only people with the Atlantean genetic marker, the blood of Atlantis.
+The line of reasoning continued: Atlantis had been an isolated civilisation that had somehow brought into being the Source of Magic, and told it to serve only people with the Atlantean genetic marker, the blood of Atlantis.
 
 And by similar logic: The words a wizard spoke, the wand movements, those weren’t complicated enough of themselves to build up the spell effects from scratch—not the way that the three billion base pairs of human DNA actually *were* complicated enough to build a human body from scratch, not the way that computer programs took up thousands of bytes of data.
 
@@ -73,7 +73,7 @@ The ancient forebears of the wizards, thousands of years earlier, had told the S
 
 Harry slumped over at the breakfast table, resting his forehead wearily on his right hand.
 
-There was a story from the dawn days of Artificial Intelligence—back when they were just starting out and no one had yet realized the problem would be difficult—about a professor who had delegated one of his grad students to solve the problem of computer vision.
+There was a story from the dawn days of Artificial Intelligence—back when they were just starting out and no one had yet realised the problem would be difficult—about a professor who had delegated one of his grad students to solve the problem of computer vision.
 
 Harry was beginning to understand how that grad student must have felt.
 
@@ -85,7 +85,7 @@ Who’d been silly enough to build in a spell for *Avada Kedavra* that could onl
 
 Why did wordless Transfiguration require you to make a complete mental separation between the concept of form and concept of material?
 
-Harry might not be done with this problem by the time he graduated Hogwarts. He could still be working on this problem when he was *thirty years old.* Hermione had been right, Harry *hadn’t* realized that on a gut level before. He’d just given an inspiring speech about determination.
+Harry might not be done with this problem by the time he graduated Hogwarts. He could still be working on this problem when he was *thirty years old.* Hermione had been right, Harry *hadn’t* realised that on a gut level before. He’d just given an inspiring speech about determination.
 
 Harry’s mind briefly considered whether to get on a gut level that he might never solve the problem at all, then decided that would be taking things much too far.
 
@@ -93,7 +93,7 @@ Besides, so long as he could get as far as immortality in the first few decades,
 
 What method had the Dark Lord used? Come to think, the fact that the Dark Lord had somehow managed to survive the death of his first body was almost *infinitely* more important than the fact that he’d tried to take over magical Britain—
 
-“Excuse me,” said an expected voice from behind him in very unexpected tones. “At your convenience, Mr. Malfoy requests the favor of a conversation.”
+“Excuse me,” said an expected voice from behind him in very unexpected tones. “At your convenience, Mr. Malfoy requests the favour of a conversation.”
 
 Harry did not choke on his breakfast cereal. Instead he turned around and beheld Mr. Crabbe.
 
@@ -151,7 +151,7 @@ The time was three in the morning, and Fred and George were starting the long wa
 
 “Intermittent one fixed itself again. Other one’s same as ever.”
 
-The Map was an extraordinarily powerful artifact, capable of tracking every sentient being on the school grounds, in real time, by name. Almost certainly, it had been created during the original raising of Hogwarts. It was *not good* that errors were starting to pop up. Chances were that no one except Dumbledore could fix it if it was broken.
+The Map was an extraordinarily powerful artefact, capable of tracking every sentient being on the school grounds, in real time, by name. Almost certainly, it had been created during the original raising of Hogwarts. It was *not good* that errors were starting to pop up. Chances were that no one except Dumbledore could fix it if it was broken.
 
 And the Weasley twins weren’t about to turn the Map over to Dumbledore. It would have been an unforgivable insult to the Marauders—the four unknowns who’d managed to steal part of the *Hogwarts security system*, something probably forged by Salazar Slytherin himself, and twist it into *a tool for student pranking.*
 
@@ -169,7 +169,7 @@ In time, Fred and George clambered out into a dusty cellar, strewn with barrels 
 
 Fred and George waited. It wouldn’t have been polite to do anything else.
 
-Before too long a thin old man in black pajamas clambered down the steps that led into the cellar, yawning. “Hello, boys,” said Ambrosius Flume. “I wasn’t expecting you tonight. Out of stock already?”
+Before too long a thin old man in black pyjamas clambered down the steps that led into the cellar, yawning. “Hello, boys,” said Ambrosius Flume. “I wasn’t expecting you tonight. Out of stock already?”
 
 Fred and George decided that Fred would speak.
 
@@ -243,7 +243,7 @@ Like *that* would scare her.
 
 The Boy-Who-Lived had said that he had *important* work for the Order of Chaos, something serious and secret, more significant and difficult than their usual run of pranks.
 
-And then Harry Potter had launched into a speech that was inspiring, yet vague. A speech to the effect that Fred and George and Lee had tremendous potential if they could just learn to be *weirder.* To make people’s lives *surreal,* instead of just surprising them with the equivalents of buckets of water propped above doors. (Fred and George had exchanged interested looks, they’d never thought of that one.) Harry Potter had invoked a picture of the prank they’d pulled on Neville—which, Harry had mentioned with some remorse, the Sorting Hat had chewed him out on—but which must have made Neville *doubt his own sanity.* For Neville it would have felt like being suddenly transported into an alternate universe. The same way everyone else had felt when they’d seen Snape apologize. That was the *true power of pranking.*
+And then Harry Potter had launched into a speech that was inspiring, yet vague. A speech to the effect that Fred and George and Lee had tremendous potential if they could just learn to be *weirder.* To make people’s lives *surreal,* instead of just surprising them with the equivalents of buckets of water propped above doors. (Fred and George had exchanged interested looks, they’d never thought of that one.) Harry Potter had invoked a picture of the prank they’d pulled on Neville—which, Harry had mentioned with some remorse, the Sorting Hat had chewed him out on—but which must have made Neville *doubt his own sanity.* For Neville it would have felt like being suddenly transported into an alternate universe. The same way everyone else had felt when they’d seen Snape apologise. That was the *true power of pranking.*
 
 *Are you with me?* Harry Potter had cried, and Lee Jordan had answered no.
 
@@ -345,7 +345,7 @@ Fred and George almost fell over, even though they were sitting down.
 
 (The twins never took money for doing anything illegal. Unknown to Ambrosius Flume, they were selling all of his merchandise at zero percent markup. Fred and George wanted to be able to testify—under Veritaserum if necessary—that they had not been profiteering criminals, just providing a public service.)
 
-Harry frowned at them. “But I’m asking you to put in some real work here. A grownup would get paid for doing something like this, and it would *still* count as a favor for a friend. You can’t just hire people for this sort of thing.”
+Harry frowned at them. “But I’m asking you to put in some real work here. A grownup would get paid for doing something like this, and it would *still* count as a favour for a friend. You can’t just hire people for this sort of thing.”
 
 Fred and George shook their heads.
 
