--- a/026.md
+++ b/026.md
@@ -29,7 +29,7 @@ There was a surprisingly long pause.
 
 Professor Quirrell slammed the book shut and it vanished with a small whispering sound. He looked up, then, and Harry flinched.
 
-“I suppose an intelligent conversation would be pleasant for *me* at this point,” said Professor Quirrell in the same biting tone that had invited Harry to enter. “*You* are not likely to find it so, be warned.”
+“I suppose an intelligent conversation would be pleasant for *me* at this point,” said Professor Quirrell in the same biting tone that had invited Harry to enter. *“You* are not likely to find it so, be warned.”
 
 Harry drew a deep breath. “I promise I won’t mind if you snap at me. What happened?”
 
@@ -59,11 +59,11 @@ There was a pause. Professor Quirrell leaned forward and picked up the silver in
 
 “Was the sixth-year Gryffindor raised by Muggles?”
 
-“*Yes.*”
+*“Yes.*”
 
 “Is Dumbledore refusing to expel him because the poor boy didn’t know?”
 
-Professor Quirrell’s hands whitened on the inkwell. “*Do you have a point, Mr. Potter, or are you just stating the obvious?”*
+Professor Quirrell’s hands whitened on the inkwell. *“Do you have a point, Mr. Potter, or are you just stating the obvious?”*
 
 “Professor Quirrell,” said Harry gravely, “all the Muggle-raised students in Hogwarts need a safety lecture in which they are told the things so ridiculously obvious that no wizardborn would ever think to mention them. Don’t cast curses if you don’t know what they do, if you discover something dangerous don’t tell the world about it, don’t brew high-level potions without supervision in a bathroom, the reason why there are underage magic laws, all the basics.”
 
@@ -81,13 +81,13 @@ The inkwell went on screaming and burning in Professor Quirrell’s hands, tiny 
 
 Harry opened his mouth—
 
-“If you’re about to say you’re not scared of me,” said Professor Quirrell, “*don’t.*”
+“If you’re about to say you’re not scared of me,” said Professor Quirrell, *“don’t.*”
 
 “You are the scariest person I know,” Harry said, “and one of the top reasons for that is your control. I simply can’t imagine hearing that you’d hurt someone you had not made a deliberate decision to hurt.”
 
 The fire in Professor Quirrell’s hands winked out, and he carefully placed the ruined inkwell on his desk. “You say the nicest things, Mr. Potter. Have you been taking lessons in flattery? From, perhaps, Mr. Malfoy?”
 
-Harry kept his expression blank, and realized one second too late that it might as well have been a signed confession. Professor Quirrell didn’t care what your expression looked like, he cared which states of mind made it likely.
+Harry kept his expression blank, and realised one second too late that it might as well have been a signed confession. Professor Quirrell didn’t care what your expression looked like, he cared which states of mind made it likely.
 
 “I see,” said Professor Quirrell. “Mr. Malfoy is a useful friend to have, Mr. Potter, and there is much he can teach you, but I hope you have not made the mistake of trusting him with too many confidences.”
 
@@ -173,13 +173,13 @@ First things first. Harry stepped over to the seller’s counter.
 
 Five Sickles dropped onto the counter. Harry had the feeling he could have bargained him down a couple of points, but at this point he didn’t really care.
 
-The shopkeeper’s eyes widened and he seemed to really notice Harry for the first time. “*You!”*
+The shopkeeper’s eyes widened and he seemed to really notice Harry for the first time. *“You!”*
 
-“*Me!”*
+*“Me!”*
 
 “Is it *true?* Are you *really*—”
 
-“*Shut up!* Sorry, I’ve been waiting *all day* to read this in the original newspaper instead of hearing about it secondhand, so please just *hand it over*, all right?”
+*“Shut up!* Sorry, I’ve been waiting *all day* to read this in the original newspaper instead of hearing about it secondhand, so please just *hand it over*, all right?”
 
 The shopkeeper stared at Harry for a moment, then wordlessly reached under the counter and passed over one folded copy of the *Daily Prophet*.
 
@@ -237,7 +237,7 @@ They walked in silence for thirty seconds before Professor Quirrell spoke. “Mi
 
 “Yes.”
 
-“*I* would have trouble doing that.”
+*“I* would have trouble doing that.”
 
 “Really?” said Harry. “Because if my suspicions are correct, this was done by a Hogwarts student.”
 
@@ -249,7 +249,7 @@ They walked in silence for thirty seconds before Professor Quirrell spoke. “Mi
 
 “Indeed,” said Harry, “you would expect the Grand Manager of Gringotts to get involved with that much money changing hands. It seems Mr. Weasley was greatly in debt, and so demanded an additional payment of ten thousand Galleons—”
 
-“*Ten thousand* Galleons for a *Weasley?* You could buy the daughter of a Noble House for that!”
+*“Ten thousand* Galleons for a *Weasley?* You could buy the daughter of a Noble House for that!”
 
 “Excuse me,” Harry said. “I really have to ask at this point, do people actually do that sort of thing around here—”
 
@@ -257,7 +257,7 @@ They walked in silence for thirty seconds before Professor Quirrell spoke. “Mi
 
 “He didn’t have any choice,” said Harry. “Not if he wanted to fulfill the conditions of the prophecy.”
 
-“*Give me that,*” said Professor Quirrell, and the newspaper leaped out of Harry’s hand so fast that he got a paper cut.
+*“Give me that,*” said Professor Quirrell, and the newspaper leaped out of Harry’s hand so fast that he got a paper cut.
 
 Harry automatically put the finger in his mouth to suck on, feeling rather shocked, and turned to remonstrate with Professor Quirrell—
 
@@ -271,11 +271,11 @@ And after a troublingly short time, the paper neatly folded itself up again. Pro
 
 Harry nodded, still stunned.
 
-“The centaurs could have been put under an *Imperius*,” Professor Quirrell said, frowning, “*that* seems understandable. What magic can make, magic can corrupt, and it is not unthinkable that the Great Seal of Gringotts could be twisted to another’s hand. The Unspeakable could have been impersonated with Polyjuice, likewise the Bavarian seer. And with *enough* effort it might be possible to tamper with the proceedings of the Wizengamot. Do you have any idea how that was done?”
+“The centaurs could have been put under an *Imperius*,” Professor Quirrell said, frowning, *“that* seems understandable. What magic can make, magic can corrupt, and it is not unthinkable that the Great Seal of Gringotts could be twisted to another’s hand. The Unspeakable could have been impersonated with Polyjuice, likewise the Bavarian seer. And with *enough* effort it might be possible to tamper with the proceedings of the Wizengamot. Do you have any idea how that was done?”
 
 “I do not have one single plausible hypothesis,” said Harry. “I do know it was done on a total budget of forty Galleons.”
 
-Professor Quirrell stopped short and whirled on Harry. His expression was now completely incredulous. “Forty Galleons will pay a competent ward-breaker to open a path into a home you wish to burglarize! Forty *thousand* Galleons *might* pay a team of the greatest professional criminals in the world to tamper with the proceedings of the Wizengamot!”
+Professor Quirrell stopped short and whirled on Harry. His expression was now completely incredulous. “Forty Galleons will pay a competent ward-breaker to open a path into a home you wish to burglarise! Forty *thousand* Galleons *might* pay a team of the greatest professional criminals in the world to tamper with the proceedings of the Wizengamot!”
 
 Harry shrugged helplessly. “I’ll remember that the next time I want to save thirty-nine thousand, nine hundred and sixty Galleons by finding the right contractor.”
 
@@ -291,11 +291,11 @@ Somewhat to Harry’s surprise, Professor Quirrell made no objection to this.
 
 They walked in the direction of the Gringotts building, thinking, for they were neither of them the sort of person who would give up on the problem without considering it for at least five minutes.
 
-“I have a feeling,” Harry said finally, “that we’re coming at this from the wrong angle. There’s a tale I once heard about some students who came into a physics class, and the teacher showed them a large metal plate near a fire. She ordered them to feel the metal plate, and they felt that the metal nearer the fire was cooler, and the metal further away was warmer. And she said, write down your guess for why this happens. So some students wrote down 'because of how the metal conducts heat', and some students wrote down 'because of how the air moves', and no one said ’this just seems impossible', and the real answer was that before the students came into the room, the teacher turned the plate around.”
+“I have a feeling,” Harry said finally, “that we’re coming at this from the wrong angle. There’s a tale I once heard about some students who came into a physics class, and the teacher showed them a large metal plate near a fire. She ordered them to feel the metal plate, and they felt that the metal nearer the fire was cooler, and the metal further away was warmer. And she said, write down your guess for why this happens. So some students wrote down ‘because of how the metal conducts heat’, and some students wrote down ‘because of how the air moves’, and no one said ‘this just seems impossible’, and the real answer was that before the students came into the room, the teacher turned the plate around.”
 
 “Interesting,” said Professor Quirrell. “That does sound similar. Is there a moral?”
 
-“That your strength as a rationalist is your ability to be more confused by fiction than by reality,” said Harry. “If you’re equally good at explaining any outcome, you have zero knowledge. The students thought they could use words like 'because of heat conduction' to explain anything, even a metal plate being cooler on the side nearer the fire. So they didn’t notice how confused they were, and that meant they couldn’t be more confused by falsehood than by truth. If you tell me that the centaurs were under the *Imperius* Curse, I still have the feeling of something being not quite right. I notice that I’m still confused even after hearing your explanation.”
+“That your strength as a rationalist is your ability to be more confused by fiction than by reality,” said Harry. “If you’re equally good at explaining any outcome, you have zero knowledge. The students thought they could use words like ‘because of heat conduction’ to explain anything, even a metal plate being cooler on the side nearer the fire. So they didn’t notice how confused they were, and that meant they couldn’t be more confused by falsehood than by truth. If you tell me that the centaurs were under the *Imperius* Curse, I still have the feeling of something being not quite right. I notice that I’m still confused even after hearing your explanation.”
 
 “Hm,” said Professor Quirrell.
 
@@ -309,7 +309,7 @@ And just as they were almost to the huge white front of the Gringotts building, 
 
 “Ah. Of *course.* I see it now. Let me guess, the Weasley twins?”
 
-“*What?”* said Harry, his voice going up another octave in pitch. ” *How?”*
+*“What?”* said Harry, his voice going up another octave in pitch. *“How?”*
 
 “I’m afraid I couldn’t say.”
 
@@ -329,7 +329,7 @@ The first part of the mission, to find an Occlumency instructor, had been a succ
 
 The second part of the plan had been a complete failure.
 
-Harry was not allowed to take money out of his vault without Headmaster Dumbledore or some other school official present, and Professor Quirrell had not been given the vault key. Harry’s Muggle parents could not authorize it because they were Muggles, and Muggles had around the same legal standing as children or kittens: they were cute, so if you tortured them in public you could get arrested, but they weren’t *people*. Some reluctant provision had been made for recognizing the parents of Muggleborns as human in a limited sense, but Harry’s adoptive parents did not fall into that legal category.
+Harry was not allowed to take money out of his vault without Headmaster Dumbledore or some other school official present, and Professor Quirrell had not been given the vault key. Harry’s Muggle parents could not authorise it because they were Muggles, and Muggles had around the same legal standing as children or kittens: they were cute, so if you tortured them in public you could get arrested, but they weren’t *people*. Some reluctant provision had been made for recognizing the parents of Muggleborns as human in a limited sense, but Harry’s adoptive parents did not fall into that legal category.
 
 It seemed that Harry was effectively an orphan in the eyes of the wizarding world. As such, the Headmaster of Hogwarts, or his designees *within* the school system, were Harry’s guardians until he graduated. Harry *could* breathe without Dumbledore’s permission, but only so long as the Headmaster did not specifically prohibit it.
 
@@ -363,7 +363,7 @@ The waitress, clad in robes that still looked severe and formal while being rath
 
 Professor Quirrell waved a hand in the direction of the door, and a bolt slid shut. “Note the bolt on the inside. This room, Mr. Potter, is known as Mary’s Room. It happens to be proof against all scrying, and I do mean *all;* Dumbledore himself could detect nothing of what happens here. Mary’s Room is used by two kinds of people. The first sort are engaged in illicit dalliances. And the second sort lead interesting lives.”
 
-“*Really,*” said Harry.
+*“Really,*” said Harry.
 
 Professor Quirrell nodded.
 
@@ -371,17 +371,17 @@ Harry’s lips were parted in anticipation. “It would be a waste to just sit h
 
 Professor Quirrell grinned, then took out his wand and flicked it in the direction of the door. “Of course,” he said, “people who lead interesting lives take precautions more *thorough* than the dalliers. I have just sealed us in. Nothing will now pass in or out of this room—through the crack under the door, for example. And…”
 
-Professor Quirrell then spoke no fewer than four different Charms, none of which Harry recognized.
+Professor Quirrell then spoke no fewer than four different Charms, none of which Harry recognised.
 
 “Even that does not *really* suffice,” said Professor Quirrell. “If we were doing anything of truly great import, it would be necessary to perform another twenty-three checks besides those. If, say, Rita Skeeter knew or guessed that we would come here, it is possible that she could be in this room wearing the true Cloak of Invisibility. Or she could be an Animagus with a tiny form, perhaps. There are tests to rule out such rare possibilities, but to perform all of them would be arduous. Still, I wonder if I should do them anyway, just so as not to teach you bad habits?” And Professor Quirrell tapped a finger on his cheek, looking abstracted.
 
 “It’s fine,” Harry said, “I understand, and I’ll remember.” Though he was a little disappointed that they weren’t doing anything of truly great import.
 
-“Very well,” Professor Quirrell said. He leaned back in his chair, smiling broadly. “You wrought quite well today, Mr. Potter. The basic notion was yours, I’m sure, even if you delegated the execution. I don’t think we’ll be hearing much more from Rita Skeeter after this. Lucius Malfoy will not be pleased with her failure. If she’s smart, she’ll flee the country the instant she realizes she’s been fooled.”
+“Very well,” Professor Quirrell said. He leaned back in his chair, smiling broadly. “You wrought quite well today, Mr. Potter. The basic notion was yours, I’m sure, even if you delegated the execution. I don’t think we’ll be hearing much more from Rita Skeeter after this. Lucius Malfoy will not be pleased with her failure. If she’s smart, she’ll flee the country the instant she realises she’s been fooled.”
 
 A sinking sensation began to dawn in Harry’s stomach. “Lucius was behind Rita Skeeter…?”
 
-“Oh, you didn’t realize that?” said Professor Quirrell.
+“Oh, you didn’t realise that?” said Professor Quirrell.
 
 Harry hadn’t thought about what would happen to Rita Skeeter afterward.
 
@@ -397,7 +397,7 @@ Professor Quirrell smiled dryly. “If you have not dealt with journalists befor
 
 Harry jumped out of his chair with a convulsive movement, he had to find Rita Skeeter and warn her before it was too late—
 
-“*Sit down*,” Professor Quirrell said sharply. “*No*, Lucius won’t kill her. But Lucius makes life *extremely* unpleasant for those who serve him ill. Miss Skeeter will flee and start her life over with a new name. *Sit down,* Mr. Potter; there is nothing you can do at this point, and you have a lesson to learn.”
+*“Sit down,”* Professor Quirrell said sharply. *“No*, Lucius won’t kill her. But Lucius makes life *extremely* unpleasant for those who serve him ill. Miss Skeeter will flee and start her life over with a new name. *Sit down,* Mr. Potter; there is nothing you can do at this point, and you have a lesson to learn.”
 
 Harry sat down, slowly. There was a disappointed, annoyed look on Professor Quirrell’s face that was doing more to stop him than the words.
 
@@ -473,7 +473,7 @@ Professor Quirrell casually threw the book up into the air and caught it again, 
 
 *Yeah,* said Ravenclaw. *Whoever owned the book originally was probably a Death Eater or something. It belongs with us.*
 
-Harry’s mouth opened, then halted that way, an agonized look on his face.
+Harry’s mouth opened, then halted that way, an agonised look on his face.
 
 Professor Quirrell seemed to be quite enjoying himself. He had balanced the book on its corner, on one finger, and was keeping it upright while humming a little tune.
 
