--- a/027.md
+++ b/027.md
@@ -41,7 +41,7 @@ Whoever they’d hired would tell them after the statute of limitations expired,
 
 Their only consolation was that Harry didn’t know they didn’t know.
 
-Not even Mum had questioned them about it, despite the obvious Weasley connection. Whatever had been done, it was far out of the reach of any Hogwarts student… except possibly *one*, who, if certain rumors were true, might have done it by snapping his fingers. *Harry* had been questioned under Veritaserum, he’d told them… with Dumbledore present and giving the Aurors scary looks. The Aurors had asked just enough to determine that Harry hadn’t pulled the prank himself or disappeared anyone, and then gotten the heck out of Hogwarts.
+Not even Mum had questioned them about it, despite the obvious Weasley connection. Whatever had been done, it was far out of the reach of any Hogwarts student… except possibly *one*, who, if certain rumours were true, might have done it by snapping his fingers. *Harry* had been questioned under Veritaserum, he’d told them… with Dumbledore present and giving the Aurors scary looks. The Aurors had asked just enough to determine that Harry hadn’t pulled the prank himself or disappeared anyone, and then gotten the heck out of Hogwarts.
 
 Fred and George had wondered whether to feel insulted about Harry Potter being questioned by the Aurors for *their* prank, but the look on *Harry’s* face, probably for exactly the same reason, made everything worth it.
 
@@ -133,7 +133,7 @@ Oh, this was going to suck.
 
 Harry gritted his teeth. At least the instructor would be Obliviated afterward.
 
-*“Legilimens.*”
+*“Legilimens.”*
 
 There was a pause—
 
@@ -147,7 +147,7 @@ It was their fourth day, on a Sunday evening. When you paid this much, you got y
 
 “Hello, Mr. Bester,” Harry said wearily. “Let’s just get the initial shock out of the way, shall we?”
 
-“You managed to surprise me?” the man said, now sounding slightly interested. “Well then.” He pointed his wand and stared into Harry’s eyes. *“Legilimens.*”
+“You managed to surprise me?” the man said, now sounding slightly interested. “Well then.” He pointed his wand and stared into Harry’s eyes. *“Legilimens.”*
 
 There was a pause, and then the black-robed wizard jerked as if someone had touched him with a cattle prod.
 
@@ -365,7 +365,7 @@ Neville Longbottom stared at the four huge fifth-year bullies in front of him, t
 
 He should have just told Harry Potter no.
 
-“Why are *you* defending him?” said the handsome one, slowly, sounding puzzled with the first hints of offense. “He’s a *Slytherin.* And a *Lestrange.*”
+“Why are *you* defending him?” said the handsome one, slowly, sounding puzzled with the first hints of offense. “He’s a *Slytherin.* And a *Lestrange.”*
 
 “He’s a boy who lost his parents,” said Neville Longbottom. “I know how that is.” He didn’t know where the words had come from. It sounded too cool, like something Harry Potter would say.
 
@@ -617,7 +617,7 @@ Harry immediately turned into someone who’d never heard of the Cloak of Invisi
 
 Severus’s voice was condescending. “You have no idea what I’m talking about, do you, Potter? A rather clumsy try at fishing.”
 
-(Professor Quirrell had remarked over their lunch that Harry really needed to conceal his state of mind better than putting on a blank face when someone discussed a dangerous topic, and had explained about one-level deceptions, two-level deceptions, and so on. So either Severus *was* in fact modeling Harry as a one-level player, which made Severus himself two-level, and Harry’s three-level move had been successful; or Severus was a four-level player and wanted Harry to *think* the deception had been successful. Harry, smiling, had asked Professor Quirrell what level *he* played at, and Professor Quirrell, also smiling, had responded, *One level higher than you*.)
+(Professor Quirrell had remarked over their lunch that Harry really needed to conceal his state of mind better than putting on a blank face when someone discussed a dangerous topic, and had explained about one-level deceptions, two-level deceptions, and so on. So either Severus *was* in fact modelling Harry as a one-level player, which made Severus himself two-level, and Harry’s three-level move had been successful; or Severus was a four-level player and wanted Harry to *think* the deception had been successful. Harry, smiling, had asked Professor Quirrell what level *he* played at, and Professor Quirrell, also smiling, had responded, *One level higher than you*.)
 
 “So you were watching this whole time,” said Harry. “Disillusionment, I think it’s called.”
 
@@ -655,7 +655,7 @@ Severus gave a light, amused laugh. “I’m afraid I wouldn’t know much about
 
 Harry looked at him. That was kind of sad, actually. “I’ll lend you some novels with good people in them, if you like.”
 
-“I should like to ask your advice about something,” Severus said, his voice casual. “I know of another fifth-year Slytherin who was being bullied by Gryffindors. He was wooing a beautiful Muggleborn girl, who came across him being bullied, and tried to rescue him. And he called her a mudblood, and that was the end for them. He apologized, many times, but she never forgave him. Have you any thoughts for what he could have said or done, to win from her the forgiveness you gave Lestrange?”
+“I should like to ask your advice about something,” Severus said, his voice casual. “I know of another fifth-year Slytherin who was being bullied by Gryffindors. He was wooing a beautiful Muggleborn girl, who came across him being bullied, and tried to rescue him. And he called her a mudblood, and that was the end for them. He apologised, many times, but she never forgave him. Have you any thoughts for what he could have said or done, to win from her the forgiveness you gave Lestrange?”
 
 “Erm,” Harry said, “based on only that information, I’m not sure *he* was the main one who had a problem. I’d have told him not to date someone that incapable of forgiveness. Suppose they’d gotten married, can you imagine life in that household?”
 
@@ -699,7 +699,7 @@ Harry’s mouth snapped shut as the *almost died* part sank in, two seconds too 
 
 “Yes,” said Severus, “I was.”
 
-And the terrible tension flooded back into the room like water pressurized at the bottom of the ocean.
+And the terrible tension flooded back into the room like water pressurised at the bottom of the ocean.
 
 Harry couldn’t breathe.
 
