--- a/028.md
+++ b/028.md
@@ -9,7 +9,7 @@
 
 “Okay,” Harry said, swallowing. “Okay, Hermione, it’s enough, you can stop.”
 
-The white sugar pill in front of Hermione still hadn’t changed shape or color at all, even though she was concentrating harder than Harry had ever seen, her eyes squeezed shut, beads of sweat on her forehead, hand trembling as it gripped the wand—
+The white sugar pill in front of Hermione still hadn’t changed shape or colour at all, even though she was concentrating harder than Harry had ever seen, her eyes squeezed shut, beads of sweat on her forehead, hand trembling as it gripped the wand—
 
 “Hermione, *stop!* It’s not going to work, Hermione, I don’t think we can make things that don’t exist yet!”
 
@@ -37,11 +37,11 @@ Hermione sat back up, took it, and studied it, frowning. “These are *all* carb
 
 Harry made a disgusted face. He was still having trouble getting used to that sort of thing, it shouldn’t matter what something was *named* if you knew what it *was.* “They’re called buckytubes, or carbon nanotubes. It’s a kind of fullerene that was discovered just this year. It’s about a hundred times stronger than steel and a sixth of the weight.”
 
-Hermione looked up from the graph paper, her face surprised. “That’s *real?* ”
+Hermione looked up from the graph paper, her face surprised. “That’s *real?”*
 
 “Yeah,” Harry said, “just hard to make the Muggle way. If we could get enough of the stuff, we could use it to build a space elevator all the way up to geosynchronous orbit or higher, and in terms of delta-v that’s halfway to anywhere in the Solar System. Plus we could throw out solar power satellites like confetti.”
 
-Hermione was frowning again. “Is this stuff *safe?* ”
+Hermione was frowning again. “Is this stuff *safe?”*
 
 “I don’t see why it wouldn’t be,” Harry said. “A buckytube is just a graphite sheet wrapped into a circular tube, basically, and graphite is the same stuff used in pencils—”
 
@@ -87,13 +87,13 @@ That got a slight grin out of her. “I mean our research.”
 
 “You’re sweet when you’re mean,” she said. “But Harry, this is nuts, I’m twelve, you’re eleven, it’s *silly* to think we’re going to discover anything that no one’s ever figured out before.”
 
-“Are you really saying we should give up on unraveling the secrets of magic after trying for less than one *month?* ” Harry said, trying to put a note of challenge into his voice. Honestly he was feeling some of the same fatigue as Hermione. None of the *good* ideas ever worked. He’d made just one discovery worth mentioning, the Mendelian pattern, and he couldn’t tell Hermione about it without breaking his promise to Draco.
+“Are you really saying we should give up on unraveling the secrets of magic after trying for less than one *month?”* Harry said, trying to put a note of challenge into his voice. Honestly he was feeling some of the same fatigue as Hermione. None of the *good* ideas ever worked. He’d made just one discovery worth mentioning, the Mendelian pattern, and he couldn’t tell Hermione about it without breaking his promise to Draco.
 
 “No,” Hermione said. Her young face was looking very serious and adult. “I’m saying right now we should be *studying* all the magic that wizards already know, so we can do this sort of thing after we graduate from Hogwarts.”
 
 “Um…” Harry said. “Hermione, I hate to put it this way, but imagine we’d decided to hold off on research until later, and the first thing we tried after we graduated was Transfiguring an Alzheimer’s cure, and it *worked.* We’d feel… I don’t think the word *stupid* would adequately describe how we’d feel. What if there’s something else like that and it does work?”
 
-“That’s not *fair,* Harry!” Hermione said. Her voice was trembling like she was on the verge of breaking out crying. “You can’t *put* that on people! It’s not our *job* to do that sort of thing, we’re *kids!* ”
+“That’s not *fair,* Harry!” Hermione said. Her voice was trembling like she was on the verge of breaking out crying. “You can’t *put* that on people! It’s not our *job* to do that sort of thing, we’re *kids!”*
 
 For a moment Harry wondered what would happen if someone told Hermione she had to fight an immortal Dark Lord, if she would turn into one of the whiny self-pitying heroes that Harry could never stand reading about in his books.
 
@@ -137,7 +137,7 @@ Step One had been to make a list of every magical constraint Harry could remembe
 
 Step Two, mark the constraints that seemed to make the *least* sense from a scientific perspective.
 
-Step Three, prioritize constraints that a wizard would be unlikely to question if they *didn’t* know science.
+Step Three, prioritise constraints that a wizard would be unlikely to question if they *didn’t* know science.
 
 Step Four, come up with avenues for attacking them.
 
@@ -163,7 +163,7 @@ And she closed her eyes and began to mentally recite the rules of Transfiguratio
 
 *“I will never Transfigure anything that looks like food or anything else that goes inside a human body.”*
 
-No, they really *shouldn’t* have tried to Transfigure the pill, or they should’ve at least *realized…* she’d been so caught up in Harry’s brilliant idea that she hadn’t *thought…*
+No, they really *shouldn’t* have tried to Transfigure the pill, or they should’ve at least *realised…* she’d been so caught up in Harry’s brilliant idea that she hadn’t *thought…*
 
 The sick feeling in Hermione’s stomach was getting worse. There was a feeling in her mind of something hovering just on the edge of recognition, a perception about to invert itself, a young woman about to become a crone, a vase about to become two faces…
 
@@ -173,7 +173,7 @@ And she went on remembering the rules of Transfiguration.
 
 Harry’s knuckles had gone white on his wand by the time he stopped trying to Transfigure the air in front of his wand into a paperclip. It wouldn’t have been safe to Transfigure the paperclip into gas, of course, but Harry didn’t see any reason why it would be unsafe the other way around. It just wasn’t supposed to be *possible*. But why not? Air was as real a substance as anything else…
 
-Well, maybe that limitation *did* make sense. Air was disorganized, all the molecules constantly changing their relation to each other. Maybe you couldn’t impose a new form on substance unless the substance was staying still long enough for you to master it, even though the atoms in solids were also constantly vibrating all the time…
+Well, maybe that limitation *did* make sense. Air was disorganised, all the molecules constantly changing their relation to each other. Maybe you couldn’t impose a new form on substance unless the substance was staying still long enough for you to master it, even though the atoms in solids were also constantly vibrating all the time…
 
 The more Harry failed, the colder he felt, the clearer everything seemed to become.
 
@@ -219,7 +219,7 @@ Time to kick it up a notch.
 
 Harry pressed his wand harder against that tiny section of eraser, and tried to see through the illusion that nonscientists thought was reality, the world of desks and chairs, air and erasers and people.
 
-When you walked through a park, the immersive world that surrounded you was something that existed inside your own brain as a pattern of neurons firing. The sensation of a bright blue sky wasn’t something high above you, it was something in your visual cortex, and your visual cortex was in the back of your brain. All the sensations of that bright world were really happening in that quiet cave of bone you called your skull, the place where *you* lived and never, ever left. If you really wanted to say hello to someone, to the *actual person,* you wouldn’t shake their hand, you’d knock gently on their skull and say “How are you doing in there?” That was what people were, that was where they really lived. And the *picture* of the park that you thought you were *walking through* was something that was visualized inside your brain as it processed the signals sent down from your eyes and retina.
+When you walked through a park, the immersive world that surrounded you was something that existed inside your own brain as a pattern of neurons firing. The sensation of a bright blue sky wasn’t something high above you, it was something in your visual cortex, and your visual cortex was in the back of your brain. All the sensations of that bright world were really happening in that quiet cave of bone you called your skull, the place where *you* lived and never, ever left. If you really wanted to say hello to someone, to the *actual person,* you wouldn’t shake their hand, you’d knock gently on their skull and say “How are you doing in there?” That was what people were, that was where they really lived. And the *picture* of the park that you thought you were *walking through* was something that was visualised inside your brain as it processed the signals sent down from your eyes and retina.
 
 It wasn’t a *lie* like the Buddhists thought, there wasn’t something terribly mystical and unexpected behind the veil of Maya, what lay beyond the illusion of the park was just the *actual park*, but it was all still *illusion*.
 
@@ -245,7 +245,7 @@ The concept Harry’s mind had of the eraser as a single object was *obvious non
 
 It was a map that didn’t and *couldn’t* match the territory.
 
-Human beings modeled the world using stratified levels of organization, they had *separate thoughts* about how countries worked, how people worked, how organs worked, how cells worked, how molecules worked, how quarks worked.
+Human beings modelled the world using stratified levels of organisation, they had *separate thoughts* about how countries worked, how people worked, how organs worked, how cells worked, how molecules worked, how quarks worked.
 
 When Harry’s brain needed to think about the eraser, it would think about the rules that governed erasers, like “erasers can get rid of pencil-marks”. Only if Harry’s brain needed to predict what would happen on the lower chemical level, only then would Harry’s brain start thinking—as though it were a separate fact—about rubber molecules.
 
@@ -253,11 +253,11 @@ But that was all in the *mind.*
 
 Harry’s mind might have separate *beliefs* about rules that governed erasers, but there was no *separate law of physics* that governed erasers.
 
-Harry’s mind modeled reality using multiple levels of organization, with different beliefs about each level. But that was all in the *map,* the true territory wasn’t like that, *reality itself* had only a *single* level of organization, the quarks, it was a unified low-level process obeying mathematically simple rules.
+Harry’s mind modelled reality using multiple levels of organisation, with different beliefs about each level. But that was all in the *map,* the true territory wasn’t like that, *reality itself* had only a *single* level of organisation, the quarks, it was a unified low-level process obeying mathematically simple rules.
 
 Or at least that was what Harry had believed before he’d found out about magic, but the eraser wasn’t magical.
 
-And even if the eraser *had* been magical, the idea that there could *really exist* a single solid eraser was *impossible.* Things like erasers *couldn’t* be basic elements of reality, they were too big and complicated to be atoms, they *had* to be made of parts *.* You couldn’t have things that were *fundamentally complicated*. The implicit belief that Harry’s brain had in the eraser as a single object wasn’t just *wrong,* it was a map-territory confusion, the eraser only existed as a separate concept in Harry’s multi-level *model* of the world, not as a separate element of single-level reality.
+And even if the eraser *had* been magical, the idea that there could *really exist* a single solid eraser was *impossible.* Things like erasers *couldn’t* be basic elements of reality, they were too big and complicated to be atoms, they *had* to be made of parts. You couldn’t have things that were *fundamentally complicated*. The implicit belief that Harry’s brain had in the eraser as a single object wasn’t just *wrong,* it was a map-territory confusion, the eraser only existed as a separate concept in Harry’s multi-level *model* of the world, not as a separate element of single-level reality.
 
 …the Transfiguration *still wasn’t happening.*
 
@@ -267,7 +267,7 @@ All right, screw this nineteenth-century garbage.
 
 Reality wasn’t atoms, it wasn’t a set of tiny billiard balls bopping around. That was just another lie. The notion of atoms as little dots was just another convenient hallucination that people clung to because they didn’t want to confront the inhumanly alien shape of the underlying reality. No wonder, then, that his attempts to Transfigure based on that hadn’t worked. If he wanted power, he had to abandon his humanity, and force his thoughts to conform to the true math of quantum mechanics.
 
-There *were no particles,* there were just *clouds of amplitude* in a *multiparticle configuration space* and what his brain fondly imagined to be an eraser was nothing except a gigantic *factor* in a wavefunction that *happened to factorize*, it didn’t have a separate existence any more than there was a particular solid factor of 3 hidden inside the number 6, if his wand was capable of *altering factors in an approximately factorizable wavefunction* then it should damn well be able to alter the slightly *smaller* factor that Harry’s brain visualized as a patch of material on the eraser—
+There *were no particles,* there were just *clouds of amplitude* in a *multiparticle configuration space* and what his brain fondly imagined to be an eraser was nothing except a gigantic *factor* in a wavefunction that *happened to factorize*, it didn’t have a separate existence any more than there was a particular solid factor of 3 hidden inside the number 6, if his wand was capable of *altering factors in an approximately factorizable wavefunction* then it should damn well be able to alter the slightly *smaller* factor that Harry’s brain visualised as a patch of material on the eraser—
 
 * * * * *
 
@@ -289,17 +289,17 @@ She came to the classroom and her fingers slipped on the doorknob at first, too 
 
 Pure shock crossed Harry’s face, and he stood up so fast he almost fell over, stopping only to grab the small pink rectangle from the table, and he tore out of the door, she’d already stepped aside, her wand was already in her hand coming up pointing at the thread—
 
-*“Finite Incantatem!* ”
+*“Finite Incantatem!”*
 
 And Hermione slammed the door shut again, just as the gigantic crash of a hundred kilograms of falling metal came from inside.
 
 She was panting, gasping for air, she’d run all the way here without stopping, she was soaked in sweat and her legs and thighs burned like living flames, she couldn’t have answered Harry’s questions for all the Galleons in the world.
 
-Hermione blinked, and realized that she had started to fall, and Harry had caught her, and was lowering her gently to sit on the floor.
+Hermione blinked, and realised that she had started to fall, and Harry had caught her, and was lowering her gently to sit on the floor.
 
 “…healthy…” she managed to whisper.
 
-*“What?* ” said Harry, looking paler than she’d ever seen him.
+*“What?”* said Harry, looking paler than she’d ever seen him.
 
 “…are you, feeling, healthy…”
 
@@ -317,7 +317,7 @@ And then it was still a while before she could talk again.
 
 “I…” Harry swallowed. “I still don’t see how, I’ve been *thinking* but—”
 
-“I asked if the Transfiguration was safe and *you answered me!* ”
+“I asked if the Transfiguration was safe and *you answered me!”*
 
 There was a pause.
 
@@ -325,13 +325,13 @@ There was a pause.
 
 She could have screamed.
 
-“Harry, don’t you get it?” she said. “It’s made out of tiny fibers, what if it *unraveled,* who *knows* what could go wrong, *we didn’t ask Professor McGonagall!* Don’t you see what we were doing? We were experimenting with Transfiguration. We were *experimenting* with *Transfiguration!* ”
+“Harry, don’t you get it?” she said. “It’s made out of tiny fibres, what if it *unraveled,* who *knows* what could go wrong, *we didn’t ask Professor McGonagall!* Don’t you see what we were doing? We were experimenting with Transfiguration. We were *experimenting* with *Transfiguration!”*
 
 There was another pause.
 
 “Right…” Harry said slowly. “That’s probably one of those things they don’t even bother telling you *not* to do because it’s too obvious. Don’t test brilliant new ideas for Transfiguration by yourselves in an unused classroom without consulting any professors.”
 
-“You could have gotten us killed, Harry!” Hermione knew it wasn’t fair, she’d made the mistake too, but she still felt angry at him, he always sounded so confident and that had dragged her unthinkingly along in his wake. “We could have *spoiled Professor McGonagall’s perfect record!* ”
+“You could have gotten us killed, Harry!” Hermione knew it wasn’t fair, she’d made the mistake too, but she still felt angry at him, he always sounded so confident and that had dragged her unthinkingly along in his wake. “We could have *spoiled Professor McGonagall’s perfect record!”*
 
 “Yes,” said Harry, “let’s not tell her about this, shall we?”
 
@@ -355,9 +355,9 @@ Harry nodded, though his face was still a bit tight.
 
 “And we still have to stop,” said Hermione.
 
-*“Why?* ” said Harry. “Don’t you see what this *means*, Hermione? Wizards *don’t* know everything! There’s too few of them, even fewer who know any science, they haven’t exhausted the low-hanging fruit—”
+*“Why?”* said Harry. “Don’t you see what this *means*, Hermione? Wizards *don’t* know everything! There’s too few of them, even fewer who know any science, they haven’t exhausted the low-hanging fruit—”
 
-“It’s not *safe*,” Hermione said. “If we *can* find out new things it’s even *less* safe! We’re *too young!* We made one big mistake already, next time we could just *die!* ”
+“It’s not *safe*,” Hermione said. “If we *can* find out new things it’s even *less* safe! We’re *too young!* We made one big mistake already, next time we could just *die!”*
 
 Then Hermione flinched.
 
@@ -437,7 +437,7 @@ Minerva frowned. The fact that the concept was literally unimaginable was presen
 
 “Strange things happening at the interface?” said Minerva. “But that should be no different than Transfiguring the object as a whole, into a Form with two different parts…”
 
-Dumbledore nodded. “That is my own thought as well. And Harry, if your theory is correct, it implies that what you want to do is *exactly* like any other Transfiguration, only applied to a part of the subject rather than the whole? No changes *at all?* ”
+Dumbledore nodded. “That is my own thought as well. And Harry, if your theory is correct, it implies that what you want to do is *exactly* like any other Transfiguration, only applied to a part of the subject rather than the whole? No changes *at all?”*
 
 “Yes,” Harry said firmly. “That’s the whole point.”
 
@@ -499,9 +499,9 @@ There was silence.
 
 “Um…” Harry said. “I don’t want to turn anyone over to the Inquisition, but I did tell one other student—”
 
-The word almost exploded from Professor McGonagall’s lips. *“What?* You discussed a completely novel form of Transfiguration with a *student* before consulting a recognized authority? Do you have any idea how *irresponsible* that was?”
+The word almost exploded from Professor McGonagall’s lips. *“What?* You discussed a completely novel form of Transfiguration with a *student* before consulting a recognised authority? Do you have any idea how *irresponsible* that was?”
 
-“I’m sorry,” said Harry. “I didn’t realize.”
+“I’m sorry,” said Harry. “I didn’t realise.”
 
 The boy looked appropriately frightened, and Minerva felt something inside her relax. At least Harry understood how foolish he’d been.
 
@@ -525,7 +525,7 @@ Just before Harry left the workroom, with his hand on the doorhandle, the boy tu
 
 Minerva didn’t let her wry smile show on her face. Of course the boy was apprehensive about the ‘evil Potions Master’, since he had no way of knowing why Severus was to be trusted. It would have been odd to say the least, explaining to Harry that Severus was still in love with his mother.
 
-“I mean, has his behavior changed recently in any way?” said Harry.
+“I mean, has his behaviour changed recently in any way?” said Harry.
 
 “Not that I have seen…” the Headmaster said slowly. “Why do you ask?”
 
@@ -547,13 +547,19 @@ And then the cold shiver went down her spine, as it always did when she remember
 
 It had started out as an ordinary job interview, Sybill Trelawney applying for the position of Professor of Divination.
 
-*THE ONE WITH THE POWER TO VANQUISH THE DARK LORD APPROACHES,\  BORN TO THOSE WHO HAVE THRICE DEFIED HIM,\  BORN AS THE SEVENTH MONTH DIES,\  AND THE DARK LORD WILL MARK HIM AS HIS EQUAL,\  BUT HE WILL HAVE POWER THE DARK LORD KNOWS NOT,\  AND EITHER MUST DESTROY ALL BUT A REMNANT OF THE OTHER,\  FOR THOSE TWO DIFFERENT SPIRITS CANNOT EXIST IN THE SAME WORLD.*
+*THE ONE WITH THE POWER TO VANQUISH THE DARK LORD APPROACHES,*  
+*BORN TO THOSE WHO HAVE THRICE DEFIED HIM,*  
+*BORN AS THE SEVENTH MONTH DIES,*  
+*AND THE DARK LORD WILL MARK HIM AS HIS EQUAL,*  
+*BUT HE WILL HAVE POWER THE DARK LORD KNOWS NOT,*  
+*AND EITHER MUST DESTROY ALL BUT A REMNANT OF THE OTHER,*  
+*FOR THOSE TWO DIFFERENT SPIRITS CANNOT EXIST IN THE SAME WORLD.*
 
 Those dreadful words, spoken in that terrible booming voice, didn’t seem to fit something like partial Transfiguration.
 
 “Perhaps not, then,” Dumbledore said after Minerva tried to explain. “I confess I had been hoping for something that would help in finding Voldemort’s horcrux, wherever he may have hidden it. But…” The old wizard shrugged. “Prophecies are tricky things, Minerva, and it is best to take no chances. The smallest thing may prove decisive if it remains unexpected.”
 
-“And what do you suppose he meant about *Severus?* ” said Minerva.
+“And what do you suppose he meant about *Severus?”* said Minerva.
 
 “There I have no idea,” sighed Dumbledore. “Unless Harry is making a move against Severus, and thought that an open question might be taken seriously where a direct allegation would be dismissed. And if that was indeed what happened, Harry correctly reasoned that I would not trust that it was so. Let us simply keep watch, without prejudice, as he asks.”
 
@@ -567,7 +573,7 @@ Those dreadful words, spoken in that terrible booming voice, didn’t seem to fi
 
 *Aftermath, 2:*
 
-Alissa Cornfoot’s eyes were slightly glazed as she gazed upon the Potions Master giving her class a stern lecture, holding up a tiny bronze bean and saying something about screaming puddles of human flesh. Ever since the start of this year she’d been having trouble listening in Potions. She kept staring at their awful, mean, greasy professor and fantasizing about special detentions. There was probably something really *wrong* with her but she just couldn’t seem to stop doing it—
+Alissa Cornfoot’s eyes were slightly glazed as she gazed upon the Potions Master giving her class a stern lecture, holding up a tiny bronze bean and saying something about screaming puddles of human flesh. Ever since the start of this year she’d been having trouble listening in Potions. She kept staring at their awful, mean, greasy professor and fantasising about special detentions. There was probably something really *wrong* with her but she just couldn’t seem to stop doing it—
 
 “Ow!” Alissa said then.
 
