--- a/029.md
+++ b/029.md
@@ -39,7 +39,7 @@ And the thought had come to Hermione that she should just walk away, but that wo
 
 But she did want to get *back* what she’d accidentally given away by letting herself become known as Harry’s rival. She wanted to be a separate person again instead of Harry Potter’s third leg, was that too much to ask?
 
-It was a hard trap to climb out of once you fell in. No matter how high you scored in class, even if you did something that deserved a special dinnertime announcement, it just meant you were rivaling Harry Potter again.
+It was a hard trap to climb out of once you fell in. No matter how high you scored in class, even if you did something that deserved a special dinnertime announcement, it just meant you were rivalling Harry Potter again.
 
 But she thought she’d come up with a way.
 
@@ -57,7 +57,7 @@ Hermione raised her hand to knock upon that terrible door.
 
 She hesitated.
 
-Hermione realized she was being *silly*, and raised her hand a bit higher.
+Hermione realised she was being *silly*, and raised her hand a bit higher.
 
 She tried to knock again.
 
@@ -95,7 +95,7 @@ Hermione was reading a book called *Magical Mnemonics.*
 
 Harry was reading a book called *The Skeptical Wizard.*
 
-Each had thought it was just one special exception they would make only this one time, and neither had yet realized it was impossible for either of them to ever finish reading all the book titles no matter how hard they tried.
+Each had thought it was just one special exception they would make only this one time, and neither had yet realised it was impossible for either of them to ever finish reading all the book titles no matter how hard they tried.
 
 The quiet of their little nook was broken by two words.
 
@@ -131,7 +131,7 @@ Harry made a shrugging motion with his shoulders, as he lay on the floor looking
 
 Hermione listened, fascinated. “But how do you go from there to the Weasleys’ *pet rat*—”
 
-“Hold on,” said Harry, “I’m getting there. Now, after Pettigrew’s death it came out that he’d been a spy for the Light—not a double agent, just someone who snuck around and found things out. He’d been good at that since he was a teenager, even in Hogwarts he had a reputation for finding out all sorts of secrets. So the conspiracy theory is that Pettigrew became an unregistered Animagus while he was still in Hogwarts, an Animagus of something small that could scurry around and listen to conversations. The main problem being that successful Animagi are rare and doing it as a teenager would be really unlikely, so of course the conspiracy theory says that my father and Black were unregistered Animagi too. And in that conspiracy theory, Pettigrew himself killed the twelve bystanders, turned into his small Animagus form, and ran. So Michael Shermer says there are four additional problems with this. One, Black was the only one who knew where my parents were.” (Harry’s voice was a little hard as he said that.) “Two, Black was a more likely suspect to start with than Pettigrew, there’s a rumor Black deliberately tried to get a student killed during his time at Hogwarts, and he was from this really nasty pureblood family, Bellatrix Black was literally his cousin. Three, Black was twenty times the fighting wizard that Pettigrew was, even if he wasn’t as smart. The duel between them would have been like Professor Quirrell versus Professor Sprout. Pettigrew probably didn’t even get a chance to draw his wand, let alone fake all the evidence the conspiracy theory requires. And four, Black was standing in the street *laughing.*”
+“Hold on,” said Harry, “I’m getting there. Now, after Pettigrew’s death it came out that he’d been a spy for the Light—not a double agent, just someone who snuck around and found things out. He’d been good at that since he was a teenager, even in Hogwarts he had a reputation for finding out all sorts of secrets. So the conspiracy theory is that Pettigrew became an unregistered Animagus while he was still in Hogwarts, an Animagus of something small that could scurry around and listen to conversations. The main problem being that successful Animagi are rare and doing it as a teenager would be really unlikely, so of course the conspiracy theory says that my father and Black were unregistered Animagi too. And in that conspiracy theory, Pettigrew himself killed the twelve bystanders, turned into his small Animagus form, and ran. So Michael Shermer says there are four additional problems with this. One, Black was the only one who knew where my parents were.” (Harry’s voice was a little hard as he said that.) “Two, Black was a more likely suspect to start with than Pettigrew, there’s a rumor Black deliberately tried to get a student killed during his time at Hogwarts, and he was from this really nasty pureblood family, Bellatrix Black was literally his cousin. Three, Black was twenty times the fighting wizard that Pettigrew was, even if he wasn’t as smart. The duel between them would have been like Professor Quirrell versus Professor Sprout. Pettigrew probably didn’t even get a chance to draw his wand, let alone fake all the evidence the conspiracy theory requires. And four, Black was standing in the street *laughing.”*
 
 “But the *rat*—” said Hermione.
 
@@ -183,13 +183,13 @@ Hermione took a piece of parchment, spilled a little bit of ink on it, tore it i
 
 Hermione sharpened her ears and eyes, and said, “Okay, try it.”
 
-“*Everto.*”
+*“Everto.”*
 
-“*Everto.*”
+*“Everto.”*
 
-“*Everto.*”
+*“Everto.”*
 
-“*Everto.*”
+*“Everto.”*
 
 Hermione didn’t think she’d quite caught all the problems. “Can you all try it again?”
 
@@ -225,7 +225,7 @@ Professor Quirrell was *EVIL*.
 
 But she couldn’t find the words, and she knew that Harry would never believe her.
 
-“Hermione, I’ve talked to older students,” Harry said. “Professor Quirrell could be the *only* competent Defense Professor we get in all seven years at Hogwarts. Anything else we can learn later. If we want to study Defense, we have to do it *this year.* The students who sign up for the extracurricular stuff are going to be learning huge amounts, way beyond what the Ministry thinks first-years are supposed to study—did you know we’re going to be learning the Patronus Charm? In *January?”*
+“Hermione, I’ve talked to older students,” Harry said. “Professor Quirrell could be the *only* competent Defence Professor we get in all seven years at Hogwarts. Anything else we can learn later. If we want to study Defence, we have to do it *this year.* The students who sign up for the extracurricular stuff are going to be learning huge amounts, way beyond what the Ministry thinks first-years are supposed to study—did you know we’re going to be learning the Patronus Charm? In *January?”*
 
 “The *Patronus Charm?”* Hermione said, her voice going up in surprise.
 
@@ -299,7 +299,7 @@ Draco shivered.
 
 “I *see*…” Harry said slowly.
 
-“I *don’t,*” said Draco. “Why not Zabini?”
+“I *don’t,”* said Draco. “Why not Zabini?”
 
 Professor Quirrell looked at Draco. “Because, Mr. Malfoy, no matter how hard he tries, he’ll never be able to keep up with you or Mr. Potter.”
 
@@ -331,7 +331,7 @@ Harry and Draco both gasped in horror.
 
 The smile playing around Professor Quirrell’s lips grew wider. “As a matter of fact, I *did* offer to share a few suggestions regarding Miss Granger’s first battles.”
 
-“*Professor Quirrell!”* said Harry.
+*“Professor Quirrell!”* said Harry.
 
 “Oh, don’t worry,” Professor Quirrell said. “She turned me down. Just as I expected.”
 
@@ -371,13 +371,13 @@ Let him not realise, let him not realise…
 
 “You mean rather than attacking you after you’ve already lost some of your forces beating Granger?” said Harry. “Oh, I don’t know. Maybe after I get bored with just winning I’ll try that ‘fair’ thing.”
 
-“Maybe she’ll attack *you,*” Draco said. “*You’re* her rival.”
+“Maybe she’ll attack *you,”* Draco said. *“You’re* her rival.”
 
 “But I’m her *friendly* rival,” Harry said with an evil grin. “I bought her a nice birthday present and everything. You wouldn’t go around sabotaging your friendly rival like that.”
 
 “What about sabotaging your *friend’s* chance at a fair fight?” said Draco angrily. “I thought we were friends!”
 
-“Let me rephrase that,” said Harry. “*Granger* wouldn’t sabotage a friendly rival. But that’s because she has the killing intention of a bowl of wet grapes. *You* would. You *totally* would. And guess what, so would I.”
+“Let me rephrase that,” said Harry. *“Granger* wouldn’t sabotage a friendly rival. But that’s because she has the killing intention of a bowl of wet grapes. *You* would. You *totally* would. And guess what, so would I.”
 
 *DAMN IT!*
 
@@ -483,7 +483,7 @@ It was probably time to change the subject.
 
 “Anyway, are you doing anything special for tomorrow?” said Hermione. “It’s—”
 
-Her voice cut off abruptly as she realized.
+Her voice cut off abruptly as she realised.
 
 “Yes, Hermione,” Harry said a little tightly, “what day is it?”
 
