--- a/030.md
+++ b/030.md
@@ -15,7 +15,7 @@ All the students who were not actually *in* a first-year army were camped out ne
 
 The students were dressed, not in their ordinary school robes, but in Muggle camouflage uniforms that Professor Quirrell had obtained somewhere and supplied in sufficient quantity and variety to fit everyone. It wasn’t that students would have worried about stains and rips, that was what Charms were for. But as Professor Quirrell had explained to the surprised wizardborns, nice dignified clothing was not efficient for hiding in forests or dodging around trees.
 
-And on each uniform’s breast, a patch bearing the name and insignia of your army. A *small* patch. If you wanted your soldiers to wear, say, colored ribbons so that they could identify each other at a distance, and risk the enemy getting their hands on the ribbons, that was all up to you.
+And on each uniform’s breast, a patch bearing the name and insignia of your army. A *small* patch. If you wanted your soldiers to wear, say, coloured ribbons so that they could identify each other at a distance, and risk the enemy getting their hands on the ribbons, that was all up to you.
 
 Harry had tried to get the name Dragon Army.
 
@@ -103,7 +103,7 @@ General Potter walked (not marched) over to where his air force was waiting tens
 
 “Green Forty-One standing by,” Tracey Davis said.
 
-“I want you in the air the instant we hear the bell,” said General Potter. “Do not engage, repeat, do not engage. Evade if under fire.” (Of course you did *not* aim sleep spells at broomsticks; you fired a spell that gave a temporary red glow to whatever it hit. If you hit the broomstick or the rider, they were out of the war.) “Red Leader and Red Five, fly toward Malfoy’s army as fast as you can, stay as high as you can while still seeing them, return the instant you know for sure what they’re doing. Green Leader, do the same for Granger’s army. Green Forty-One, fly above us and watch for any approaching broomsticks or soldiers, you and only you are authorized to fire. And remember, I didn’t say ‘Merlin says’ for any of that, but we *do* really need the information. For Chaos!”
+“I want you in the air the instant we hear the bell,” said General Potter. “Do not engage, repeat, do not engage. Evade if under fire.” (Of course you did *not* aim sleep spells at broomsticks; you fired a spell that gave a temporary red glow to whatever it hit. If you hit the broomstick or the rider, they were out of the war.) “Red Leader and Red Five, fly toward Malfoy’s army as fast as you can, stay as high as you can while still seeing them, return the instant you know for sure what they’re doing. Green Leader, do the same for Granger’s army. Green Forty-One, fly above us and watch for any approaching broomsticks or soldiers, you and only you are authorised to fire. And remember, I didn’t say ‘Merlin says’ for any of that, but we *do* really need the information. For Chaos!”
 
 “For Chaos!” the four echoed with varying degrees of enthusiasm.
 
@@ -131,15 +131,15 @@ The six units unfolded and spun toward Draco; the faces of his broomstick riders
 
 Draco had decided to wait on demanding salutes until after they won their first battle, when Gryffindors and Hufflepuffs would be more willing to salute a Malfoy.
 
-But his soldiers were already standing straight enough, especially the Gryffindors, that Draco wondered if he’d even needed to delay. Gregory had quietly listened, and reported back that Draco’s volunteering to stand by Harry Potter in Defense class, that time when Professor Quirrell had taught Harry how to lose, had marked Draco as an acceptable commander. At least if you happened to be assigned to his army. *Not all Slytherins are alike; there are Slytherins, and then there are Slytherins* was what the Gryffindors in Draco’s army were quoting to their Housemates.
+But his soldiers were already standing straight enough, especially the Gryffindors, that Draco wondered if he’d even needed to delay. Gregory had quietly listened, and reported back that Draco’s volunteering to stand by Harry Potter in Defence class, that time when Professor Quirrell had taught Harry how to lose, had marked Draco as an acceptable commander. At least if you happened to be assigned to his army. *Not all Slytherins are alike; there are Slytherins, and then there are Slytherins* was what the Gryffindors in Draco’s army were quoting to their Housemates.
 
 Draco was frankly *astounded* at how incredibly *easy* that had been. Draco had protested at first about not being assigned any Slytherins, and Professor Quirrell had told him that if he wanted to be the first Malfoy to gain complete political control of the country, he needed to learn how to govern the other three-quarters of the population. It was things like this which reassured Draco that Professor Quirrell had a great deal more sympathy for the good guys than Professor Quirrell was letting on.
 
-The actual battle wouldn’t be easy, especially if Granger did attack the Dragons first. Draco had agonized over whether to commit all his forces against Granger immediately in a preemptive strike, but had worried that (1) Harry had been misleading him completely about what Granger was likely to do, and (2) Harry had been misleading him about waiting until after Granger’s attack to join the battle.
+The actual battle wouldn’t be easy, especially if Granger did attack the Dragons first. Draco had agonised over whether to commit all his forces against Granger immediately in a preemptive strike, but had worried that (1) Harry had been misleading him completely about what Granger was likely to do, and (2) Harry had been misleading him about waiting until after Granger’s attack to join the battle.
 
 Though Dragon Army had a secret weapon, three of them in fact, which might be enough to win even if they were attacked by both armies at once…
 
-It was almost time, and that meant it was time for the pre-battle speech that Draco had composed and memorized.
+It was almost time, and that meant it was time for the pre-battle speech that Draco had composed and memorised.
 
 “The battle is about to begin,” Draco said. His voice was calm and precise. “Remember everything that I and Mr. Crabbe and Mr. Goyle showed you. An army wins because it is disciplined and deadly. General Potter and the Chaos Legion will not be disciplined. Granger and the Sunshine Regiment will not be deadly. We are disciplined, we are deadly, we are Dragons. The battle is about to begin, and we are about to win it.”
 
@@ -161,7 +161,7 @@ The tension rose and rose, as Harry and the nineteen other soldiers who remained
 
 Two broomsticks approached, at speed, from the direction of Draco’s camp, and all the soldiers tensed. They weren’t executing the manoeuvres that were today’s code for a *friendly* broomstick.
 
-“*Scatter and fire!”* roared General Potter, and then suited action to words, scurrying off at top speed toward the forest cover; and then as soon as Harry was among the trees, he spun back, raised his wand, tried to seek out the broomstick in the sky—
+*“Scatter and fire!”* roared General Potter, and then suited action to words, scurrying off at top speed toward the forest cover; and then as soon as Harry was among the trees, he spun back, raised his wand, tried to seek out the broomstick in the sky—
 
 “Clear!” shouted a voice. “They’re heading back!”
 
@@ -179,11 +179,11 @@ Moments later Theodore Nott dived out of the sky and pulled up in the midst of t
 
 A large force concentrating fire on a small force could deplete that force rapidly without taking much damage in return. If twenty soldiers faced ten soldiers, twenty sleep spells would be aimed at the ten soldiers with only ten sleep spells going the other way, so unless every one of those first sleep spells hit its target, the smaller force would lose more people than they could manage to take down with them. *Defeated in detail* was the military term for what happened when you divided your forces like that. What could Hermione *possibly* be thinking…
 
-Then Harry realized.
+Then Harry realised.
 
 *She’s being fair.*
 
-It was going to be a long year in Defense class.
+It was going to be a long year in Defence class.
 
 “All right,” Harry said loudly, so the army could hear. “We’ll wait until the Red Wing reports in, and then we’ll go cloud up some Sunshine.”
 
@@ -191,7 +191,7 @@ It was going to be a long year in Defense class.
 
 Draco listened to the flyers’ reports with his face calm, all his shock concealed inside. What could Granger *possibly* be thinking?
 
-Then Draco realized.
+Then Draco realised.
 
 *It’s a feint.*
 
@@ -239,7 +239,7 @@ as from his lips poured a fearful song of doom.
 
 Harry stared at the bodies scattered across the forest. Something inside him felt a bit queasy, and he had to remind himself hard that they were only sleeping. There were girls among the fallen, and that made it a lot worse somehow, and he would have to be careful never to mention that in front of Hermione or the Aurors would find his remains stuffed into a *small* teapot.
 
-Half of Sunshine army hadn’t put up much of a fight against all of Chaos. The nine ground soldiers had run in screaming inarticulately with Simple Shields raised, circular screens to protect their faces and chests. But you couldn’t fire and hold the shield at the same time, and Harry’s soldiers had simply aimed for the legs. All but one of the Sunnies had fallen over as soon as the cries of “*Somnium!”* filled the air. That last one had dropped her shield and managed to take out one of Harry’s soldiers before being hit by the second wave of sleep spells (the Sleep Hex was safe for multiple hits). The two Sunny broomsticks had been much harder to take down and had accounted for three Chaotics before being auraed by massed ground fire.
+Half of Sunshine army hadn’t put up much of a fight against all of Chaos. The nine ground soldiers had run in screaming inarticulately with Simple Shields raised, circular screens to protect their faces and chests. But you couldn’t fire and hold the shield at the same time, and Harry’s soldiers had simply aimed for the legs. All but one of the Sunnies had fallen over as soon as the cries of *“Somnium!”* filled the air. That last one had dropped her shield and managed to take out one of Harry’s soldiers before being hit by the second wave of sleep spells (the Sleep Hex was safe for multiple hits). The two Sunny broomsticks had been much harder to take down and had accounted for three Chaotics before being auraed by massed ground fire.
 
 Hermione wasn’t among the fallen. Draco must have gotten her and that was making Harry feel *angry* on some completely incomprehensible level, he wasn’t sure if he was feeling protective toward Hermione, or cheated that he hadn’t been the one to do it, or maybe *both.*
 
@@ -281,15 +281,15 @@ This time, Neville silently vowed to himself, his voice was absolutely positivel
 
 “Shields up,” said General Potter, “power to forward deflectors.”
 
-“*Contego,*” murmured the army, and the circular screens sprang into existence before their heads and chests.
+*“Contego,”* murmured the army, and the circular screens sprang into existence before their heads and chests.
 
 A sharp taste filled Neville’s mouth. General Potter wouldn’t have ordered them to cast shields unless they were almost in range. Neville could see the uniformed shapes of Dragons moving through the dense screens of trees, and the Dragons would be seeing them as well—
 
-“*Attack!”* came a cry from the distance, the voice of Draco Malfoy, and General Potter bellowed, “*Charge—*”
+*“Attack!”* came a cry from the distance, the voice of Draco Malfoy, and General Potter bellowed, *“Charge—”*
 
 All the adrenaline in Neville’s blood was unleashed, and his legs took over, sending him flying faster than he’d ever run before, straight toward the enemy, knowing without needing to look that all his comrades were doing the same.
 
-“*Blood for the blood god!”* screamed Neville. “*Skulls for the skull throne! Ia! Shub-Niggurath! The enemy’s gate is sideways!”*
+*“Blood for the blood god!”* screamed Neville. *“Skulls for the skull throne! Ia! Shub-Niggurath! The enemy’s gate is sideways!”*
 
 There was a soundless impact as a sleep spell wasted itself against Neville’s shield. If there’d been other spells fired, they hadn’t hit.
 
@@ -301,39 +301,39 @@ Neville saw the brief look of fear on Wayne Hopkins’s face, as he stood beside
 
 —his racing legs went *straight* past the enemy grouping and toward another three Dragons, their wands coming up on him, their mouths opening—
 
-—not even thinking about it, Neville dived down to the forest floor just as three voices cried “*Somnium!”*
+—not even thinking about it, Neville dived down to the forest floor just as three voices cried *“Somnium!”*
 
 It hurt, hard stones and hard twigs digging into Neville as he rolled, it wasn’t as bad as falling off his broomstick but he’d still hit the ground pretty hard, and then Neville, with sudden insight, lay still and closed his eyes.
 
 “Stop that!” screamed a voice. “Don’t shoot us, we’re Dragons!”
 
-With a flash of glorious satisfaction, Neville realized that he’d managed to get between two groups of Dragons just as one group had fired on him. Harry had talked about this as a tactic for making the enemy afraid to fire, but apparently it worked a bit better than that.
+With a flash of glorious satisfaction, Neville realised that he’d managed to get between two groups of Dragons just as one group had fired on him. Harry had talked about this as a tactic for making the enemy afraid to fire, but apparently it worked a bit better than that.
 
 And not only that, the Dragons believed they’d *gotten* him, since they’d seen Neville fall just as they fired.
 
 Neville counted to twenty inside his head, then opened his eyes a crack.
 
-The three Dragons were very near him, heads spinning rapidly as cries of “*Somnium!”* and *"Skulls for the skull throne!”* filled the air around them. All three had Simple Shields up now.
+The three Dragons were very near him, heads spinning rapidly as cries of *“Somnium!”* and *“Skulls for the skull throne!”* filled the air around them. All three had Simple Shields up now.
 
-Neville’s wand was still in his hand, and it didn’t take much effort to point it at one boy’s boots and whisper “*Somnium.*”
+Neville’s wand was still in his hand, and it didn’t take much effort to point it at one boy’s boots and whisper *“Somnium.”*
 
 Neville quickly closed his eyes and relaxed his hand as he heard the boy fall to the ground.
 
-“*Where’d it come from?”* screamed Justin Finch-Fletchley’s voice, and Neville heard rustles on the leafy forest floor, as of two Dragons spinning around looking for an enemy.
+*“Where’d it come from?”* screamed Justin Finch-Fletchley’s voice, and Neville heard rustles on the leafy forest floor, as of two Dragons spinning around looking for an enemy.
 
-“*Reform ranks!”* bellowed Malfoy’s voice. “*To me, everyone, don’t let them scatter you!”*
+*“Reform ranks!”* bellowed Malfoy’s voice. *“To me, everyone, don’t let them scatter you!”*
 
 Neville’s ears heard the two Dragons actually jump over his prone body as they ran off.
 
 Neville opened his eyes, pushed himself to his feet a bit painfully, and then pointed his wand and said the new charm that General Potter had taught them all. They couldn’t do real illusion spells to confuse the enemy, but even at their age they could—
 
-“*Ventriliquo,*” whispered Neville, pointing the wand to one side of Justin and the other boy, and then yelled, “*For Cthulhu and glory!”*
+*“Ventriliquo,”* whispered Neville, pointing the wand to one side of Justin and the other boy, and then yelled, *“For Cthulhu and glory!”*
 
-Justin and the other boy stopped abruptly, turning their shields toward where Neville had moved his battlecry, and that was when multiple cries of “*Somnium!”* filled the air and the other boy dropped before Neville was finished aiming.
+Justin and the other boy stopped abruptly, turning their shields toward where Neville had moved his battlecry, and that was when multiple cries of *“Somnium!”* filled the air and the other boy dropped before Neville was finished aiming.
 
-“*The last one’s mine!”* yelled Neville, and then he started sprinting straight toward Justin, who’d been mean to him until the older Hufflepuffs straightened him out. Neville was surrounded by his comrades and *that* meant—
+*“The last one’s mine!”* yelled Neville, and then he started sprinting straight toward Justin, who’d been mean to him until the older Hufflepuffs straightened him out. Neville was surrounded by his comrades and *that* meant—
 
-“*Special attack, Chaotic Leap!”* howled Neville as he ran, and felt his body lighten, then lighten twice again, as his comrades got their wands turned toward him and quietly cast the Hover Charm, and Neville raised his left hand and snapped his fingers and then used his legs to push off the ground as hard as he could and *soared* through the air. Sheer shock painted Justin’s face as Neville went *over* the other boy’s shield and pointed his wand down at the form passing beneath him and cried “*Somnium!”*
+*“Special attack, Chaotic Leap!”* howled Neville as he ran, and felt his body lighten, then lighten twice again, as his comrades got their wands turned toward him and quietly cast the Hover Charm, and Neville raised his left hand and snapped his fingers and then used his legs to push off the ground as hard as he could and *soared* through the air. Sheer shock painted Justin’s face as Neville went *over* the other boy’s shield and pointed his wand down at the form passing beneath him and cried *“Somnium!”*
 
 Because he’d felt like it, that was why.
 
@@ -341,7 +341,7 @@ Neville didn’t quite get his feet turned around properly and rather plowed int
 
 And Neville got to his feet, panting. He knew he should be moving, people were yelling “Somnium!” all over the place—
 
-“*I am Neville, the last scion of Longbottom!”* screamed Neville to the sky above, holding his wand pointed straight up as though to challenge the blazing blue heaven itself, knowing that nothing after this day would ever be the same again. “*Neville of Chaos! Face me if you da-*”
+*“I am Neville, the last scion of Longbottom!”* screamed Neville to the sky above, holding his wand pointed straight up as though to challenge the blazing blue heaven itself, knowing that nothing after this day would ever be the same again. *“Neville of Chaos! Face me if you da-”*
 
 (When Neville woke up afterward, he was told that Dragon Army had taken this as their cue to counterattack.)
 
@@ -349,7 +349,7 @@ And Neville got to his feet, panting. He knew he should be moving, people were y
 
 The girl beside Harry slumped to the ground, taking the shot meant for him, and he could hear Mr. Goyle’s distant gloating laugh as his broomstick blasted past them, cutting the air so hard it should have shattered in his wake.
 
-“*Luminos!”* cried one of the boys next to Harry, who hadn’t been able to rebuild the magical strength fast enough to do it earlier, and Mr. Goyle dodged it without a pause.
+*“Luminos!”* cried one of the boys next to Harry, who hadn’t been able to rebuild the magical strength fast enough to do it earlier, and Mr. Goyle dodged it without a pause.
 
 Chaos had only six soldiers left, now, and Dragon Army had two, and the only problem was that one of those soldiers was invincible, and the other one was using up three soldiers just to cover him inside his shield.
 
@@ -367,9 +367,9 @@ Mr. Goyle’s broomstick turned faster than anything should have been able to tu
 
 *SCREW THIS.*
 
-Harry’s wand came up, focusing on Mr. Goyle, Harry’s mind visualized the pattern, and Harry’s lips opened and his voice screamed—
+Harry’s wand came up, focusing on Mr. Goyle, Harry’s mind visualised the pattern, and Harry’s lips opened and his voice screamed—
 
-“*Luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *—”*
+*“Luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *luminos* *—”*
 
 * * * * *
 
@@ -379,7 +379,7 @@ Slowly, Harry sat up. His *magic* was aching, a strange sensation but not an ent
 
 “The general’s awake!” cried a voice, and Harry blinked and focused in that direction.
 
-Four of his soldiers held their wands on a shimmering prismatic hemisphere, and Harry realized that the battle wasn’t over. Right… he hadn’t been hit by a Sleep Hex, just exhausted himself, so when he woke up, he was still in the game.
+Four of his soldiers held their wands on a shimmering prismatic hemisphere, and Harry realised that the battle wasn’t over. Right… he hadn’t been hit by a Sleep Hex, just exhausted himself, so when he woke up, he was still in the game.
 
 Harry suspected he was going to get a lecture from someone-or-other about not exhausting his magic to the point of unconsciousness over a children’s game. But he hadn’t hurt Mr. Goyle when he’d lost his temper, and that was the important thing.
 
@@ -427,7 +427,7 @@ And Draco could apparently exert some control over the angle of reflection at wh
 
 The thought occurred to Harry that they could use Wingardium Leviosa to pile up heavy rocks on the shield until Draco couldn’t sustain it against the pressure… but then the rocks might fall in afterward and hit Draco, and injuring the enemy general for real was not among today’s goals.
 
-“So,” said Harry. “Are there such things as specialized shield-piercing spells?”
+“So,” said Harry. “Are there such things as specialised shield-piercing spells?”
 
 There were.
 
@@ -475,7 +475,7 @@ In sudden, frantic panic, Harry took the jumper cables off the battery and fed t
 
 All of his soldiers were still there and glancing around frantically.
 
-“*Contego,*” Harry said, and his soldiers followed suit, but Harry didn’t even know which direction the shield ought to be pointing in. “Did anyone see where that came from?” Shaken heads. “And General Malfoy, would you mind telling me if *you* got General Granger?”
+*“Contego,”* Harry said, and his soldiers followed suit, but Harry didn’t even know which direction the shield ought to be pointing in. “Did anyone see where that came from?” Shaken heads. “And General Malfoy, would you mind telling me if *you* got General Granger?”
 
 “Why yes,” Draco said acidly, “I mind.”
 
@@ -493,16 +493,16 @@ Harry froze.
 
 And that was when the dreadful, eerie, cheerful chant began to rise, coming from all around them.
 
-“*Don’t be frightened, don’t be sad,*  
-*We’ll only hurt you if you’re bad…*”
+*“Don’t be frightened, don’t be sad,*  
+*We’ll only hurt you if you’re bad…”*
 
-“*Granger cheated!”* burst out Draco inside the shield. “She woke up her soldiers! Why doesn’t Professor Quirrell—”
+*“Granger cheated!”* burst out Draco inside the shield. “She woke up her soldiers! Why doesn’t Professor Quirrell—”
 
 “Let me guess,” Harry said, the sickness already churning in his stomach. He really hated losing. “It was a very easy battle, right? They dropped like flies?”
 
 “Yes,” Draco said. “We got them all on the first shot—”
 
-The look of horrified realization spread from Draco to the Chaos Legionnaires.
+The look of horrified realisation spread from Draco to the Chaos Legionnaires.
 
 “No,” Harry said, “we didn’t.”
 
@@ -528,7 +528,7 @@ And General Granger said, “I can do anything if I study hard enough.”
 
 “Oh now that’s just bu-”
 
-“*Somnium.*”
+*“Somnium.”*
 
 Harry slumped to the ground in mid-sentence.
 
@@ -536,11 +536,11 @@ Harry slumped to the ground in mid-sentence.
 
 “Niceness has triumphed!” cried General Granger.
 
-“*Hooray!”* shouted the Sunshine Soldiers. Even the Gryffindor boys said it, and they said it with pride.
+*“Hooray!”* shouted the Sunshine Soldiers. Even the Gryffindor boys said it, and they said it with pride.
 
 “And what’s the moral of today’s battle?” said General Granger.
 
-“*We can do anything if we study hard enough!”*
+*“We can do anything if we study hard enough!”*
 
 And the survivors of the Sunshine Regiment marched off toward the victory field, singing their marching song as they went:
 
