--- a/033.md
+++ b/033.md
@@ -7,7 +7,7 @@
 
 * * * * *
 
-The terrifying part was how fast the whole thing had spiraled out of control.
+The terrifying part was how fast the whole thing had spiralled out of control.
 
 “Albus,” Minerva said, not even trying to keep the worry out of her voice as the two of them entered the Great Hall, “something has to be done.”
 
@@ -37,13 +37,13 @@ Minerva nodded.
 
 “And that Professor Quirrell will be blamed.”
 
-Minerva nodded again, her face tight. She had long since become wise in the ways that Defense Professors were fired. “Albus,” Minerva said, “we cannot lose Professor Quirrell now, we *cannot!* If he but stays through January our fifth-years will pass their OWLs, if he stays through March our seventh-years will pass their NEWTs, he is remedying years of neglect in months, a whole generation will grow up able to defend themselves in spite of the Dark Lord’s curse—you must stop the battle, Albus! Ban the armies now!”
+Minerva nodded again, her face tight. She had long since become wise in the ways that Defence Professors were fired. “Albus,” Minerva said, “we cannot lose Professor Quirrell now, we *cannot!* If he but stays through January our fifth-years will pass their OWLs, if he stays through March our seventh-years will pass their NEWTs, he is remedying years of neglect in months, a whole generation will grow up able to defend themselves in spite of the Dark Lord’s curse—you must stop the battle, Albus! Ban the armies now!”
 
-“I am not sure the Defense Professor would take that kindly,” said Dumbledore, glancing over toward the Head Table where Quirrell was drooling into his soup. “He did seem most attached to his armies, though when I agreed I thought there would be four in each year.” The old wizard sighed. “A clever man, probably with the best of intentions; but perhaps not clever enough, I fear. And to ban the armies might also trigger the explosion.”
+“I am not sure the Defence Professor would take that kindly,” said Dumbledore, glancing over toward the Head Table where Quirrell was drooling into his soup. “He did seem most attached to his armies, though when I agreed I thought there would be four in each year.” The old wizard sighed. “A clever man, probably with the best of intentions; but perhaps not clever enough, I fear. And to ban the armies might also trigger the explosion.”
 
 “But then Albus, what will you *do?”*
 
-The old wizard favored her with a benign smile. “Why, I shall plot, of course. It’s the new fashion in Hogwarts.”
+The old wizard favoured her with a benign smile. “Why, I shall plot, of course. It’s the new fashion in Hogwarts.”
 
 And they had come too close to the Head Table for Minerva to say anything more.
 
@@ -65,7 +65,7 @@ Draco had tried forbidding anyone in his army to plot except him, and that had j
 
 After being told all the plans, or what his soldiers claimed were their plans, Draco had tried to sketch a plot to win the final battle. It had required considerably more than three different things to go right, and Draco had used *Incendio* on the paper and *Everto* to vanish the ashes, because if Father had seen it he would have been disowned.
 
-Professor Quirrell’s eyelids were half-closed, his chin resting on his hands as he leaned forward onto his desk. “And you, Mr. Potter?” said the Defense Professor. “Are you likewise in agreement?”
+Professor Quirrell’s eyelids were half-closed, his chin resting on his hands as he leaned forward onto his desk. “And you, Mr. Potter?” said the Defence Professor. “Are you likewise in agreement?”
 
 “All we’d need to do is shoot Franz Ferdinand and we could start World War One,” said Harry. “It’s gone to complete chaos. I’m all for it.”
 
@@ -89,7 +89,7 @@ Professor Quirrell’s eyes moved beneath their lids to regard Draco, and then G
 
 “Yes,” said Professor Quirrell, “you’d think that, wouldn’t you. I am not sure that there has ever in history been a quadruple agent, or any army with such a high fraction of real and pretended traitors. We are exploring new realms, Miss Granger, and we cannot turn back now.”
 
-Draco left the Defense Professor’s office with his teeth gritting hard against each other, and Granger looking even more annoyed beside him.
+Draco left the Defence Professor’s office with his teeth gritting hard against each other, and Granger looking even more annoyed beside him.
 
 “I can’t believe you did that, Harry!” said Granger.
 
@@ -99,11 +99,11 @@ Draco traded glances with Granger, knowing that his own face was as tight as her
 
 * * * * *
 
-The terrifying part was how fast the whole thing had spiraled out of control.
+The terrifying part was how fast the whole thing had spiralled out of control.
 
 Hermione stared at the parchment Zabini had given her, feeling utterly and completely helpless.
 
-There were names, and lines connecting the names to other names, and some of the lines were in different colors and…
+There were names, and lines connecting the names to other names, and some of the lines were in different colours and…
 
 “Tell me,” said General Granger, “is there anyone in my army who *isn’t* a spy?”
 
@@ -121,9 +121,9 @@ Hermione closed her eyes for a moment. “We’re going to lose, aren’t we?”
 
 “Look,” Zabini said patiently, “You’re in the lead right now on Quirrell points. We just have to not lose this last battle *completely* and you’ll have enough Quirrell points to win the Christmas wish.”
 
-Professor Quirrell had announced that the final battle would operate on a formal scoring system, which he’d been asked to do to avoid recriminations afterward. Each time you shot someone, the general of your army got two Quirrell points. A gong would ring through the battle area (they didn’t know yet where they would be fighting, though Hermione was hoping for the forest again, where Sunshine did well) and its pitch would tell which army had won the points. And if anyone was faking being hit, the gong would ring out anyway, and then a double gong would ring later, after no fixed time, to hail the retraction. And if you called the name of an army, cried “For Sunshine!” or “For Chaos!” or “For Dragon!", it switched your allegiance to that army…
+Professor Quirrell had announced that the final battle would operate on a formal scoring system, which he’d been asked to do to avoid recriminations afterward. Each time you shot someone, the general of your army got two Quirrell points. A gong would ring through the battle area (they didn’t know yet where they would be fighting, though Hermione was hoping for the forest again, where Sunshine did well) and its pitch would tell which army had won the points. And if anyone was faking being hit, the gong would ring out anyway, and then a double gong would ring later, after no fixed time, to hail the retraction. And if you called the name of an army, cried “For Sunshine!” or “For Chaos!” or “For Dragon!”, it switched your allegiance to that army…
 
-Even Hermione had been able to see the flaw in *that* set of rules. But Professor Quirrell had gone on to announce that if you’d been originally assigned to Sunshine, nobody could shoot you in the name of Sunshine—or rather, they could, but then Sunshine lost a single Quirrell point, symbolized by a triple gong. That prevented you from shooting your own soldiers for points, and discouraged suiciding before the enemy got you, but you could still shoot spies if you had to.
+Even Hermione had been able to see the flaw in *that* set of rules. But Professor Quirrell had gone on to announce that if you’d been originally assigned to Sunshine, nobody could shoot you in the name of Sunshine—or rather, they could, but then Sunshine lost a single Quirrell point, symbolised by a triple gong. That prevented you from shooting your own soldiers for points, and discouraged suiciding before the enemy got you, but you could still shoot spies if you had to.
 
 Right now, Hermione had two hundred and forty-four Quirrell points, and Malfoy had two hundred and nineteen, and Harry had two hundred and twenty-one; and there were twenty-four soldiers in each army.
 
@@ -229,7 +229,7 @@ Suppose, Harry had said, you were playing the game against a magically produced 
 
 Draco had said that if there were two Dracos, of course neither Draco would want anything bad to happen to the other one, not to mention that no Malfoy would let himself become known as a traitor.
 
-Harry had nodded again, and said that this was yet *another* solution to the Prisoner’s Dilemma—people might cooperate because they cared about each other, or because they had senses of honor, or because they wanted to preserve their reputation. Indeed, Harry had said, it was rather difficult to construct a *true* Prisoner’s Dilemma—in real life, people usually cared about the other person, or their honor or their reputation or a Dark Lord’s punishment or *something* besides the prison sentences. But suppose the copy had been of someone *completely* selfish—
+Harry had nodded again, and said that this was yet *another* solution to the Prisoner’s Dilemma—people might cooperate because they cared about each other, or because they had senses of honour, or because they wanted to preserve their reputation. Indeed, Harry had said, it was rather difficult to construct a *true* Prisoner’s Dilemma—in real life, people usually cared about the other person, or their honour or their reputation or a Dark Lord’s punishment or *something* besides the prison sentences. But suppose the copy had been of someone *completely* selfish—
 
 (Pansy Parkinson had been the example they’d used)
 
@@ -257,7 +257,7 @@ Draco hadn’t thought that was going to work.
 
 Draco and Harry talked about it back and forth. They had both agreed much earlier that what they did on the battlefield would *not* count as broken promises in real life—though Draco was a little angry about what Harry had done in Professor Quirrell’s office, and said so.
 
-But if the two of them couldn’t rely on honor or friendship, that *did* leave the question of how to get their armies to work together on beating Sunshine, despite everything Granger might try to break them up. Professor Quirrell’s rules didn’t make it tempting to let Sunshine kill the other army’s soldiers—that just increased the bar you had to pass yourself—but it did tempt each side to steal kills instead of acting like a single army would, or to shoot some of the other side’s soldiers during the confusion of battle…
+But if the two of them couldn’t rely on honour or friendship, that *did* leave the question of how to get their armies to work together on beating Sunshine, despite everything Granger might try to break them up. Professor Quirrell’s rules didn’t make it tempting to let Sunshine kill the other army’s soldiers—that just increased the bar you had to pass yourself—but it did tempt each side to steal kills instead of acting like a single army would, or to shoot some of the other side’s soldiers during the confusion of battle…
 
 * * * * *
 
@@ -287,9 +287,9 @@ And not in boats, either.
 
 They were fighting *underwater*.
 
-The Giant Squid had been temporarily paralyzed; spells had been set in place to keep away the grindylows; Professor Quirrell had gone and talked to the merfolk; and all the soldiers had been issued *potions of underwater action* that allowed them to breathe, see clearly, talk to each other, and swim not quite as fast as a fast walk by kicking their legs.
+The Giant Squid had been temporarily paralysed; spells had been set in place to keep away the grindylows; Professor Quirrell had gone and talked to the merfolk; and all the soldiers had been issued *potions of underwater action* that allowed them to breathe, see clearly, talk to each other, and swim not quite as fast as a fast walk by kicking their legs.
 
-A huge silver sphere hung in the center of the battleground, shining like a small underwater moon. It would help to provide a sense of direction—at first. The moon would slowly go into eclipse as the battle went on, and when it had gone entirely dark, the battle would end if it hadn’t already.
+A huge silver sphere hung in the centre of the battleground, shining like a small underwater moon. It would help to provide a sense of direction—at first. The moon would slowly go into eclipse as the battle went on, and when it had gone entirely dark, the battle would end if it hadn’t already.
 
 War in water. You couldn’t defend a perimeter, attackers could come at you from any direction, and even with the potion you couldn’t see very far in the darkness of the lake.
 
@@ -341,7 +341,7 @@ A hollow, booming bell echoed through the water, and on the instant, Zabini and 
 
 General Granger swallowed a lump in her throat as she watched them go. She was risking everything on this, dividing her army instead of just trying to take as many enemy soldiers with them as possible.
 
-The thing to realize, Zabini had told her, was that no army would move until they had a plan that let them expect victory. Sunshine couldn’t just plan to win themselves, they had to make both other armies *think* they would win until it was too late.
+The thing to realise, Zabini had told her, was that no army would move until they had a plan that let them expect victory. Sunshine couldn’t just plan to win themselves, they had to make both other armies *think* they would win until it was too late.
 
 Ernie and Ron still looked like they were in shock. Susan was gazing after the disappearing soldiers with a calculating look. Her army, what was left of it, just looked bewildered, traceries of light dappling on their uniforms as they all drifted just below the sunlit surface of the lake.
 
@@ -407,7 +407,7 @@ The other shoal of fish, Dragon Army, was doing the same thing.
 
 *“Now!”* shouted General Chaos.
 
-*“For Sunshine!"* shouted all the soldiers in both armies, and charged downward.
+*“For Sunshine!”* shouted all the soldiers in both armies, and charged downward.
 
 * * * * *
 
@@ -443,7 +443,7 @@ Captain Weasley spun and raised his wand toward Neville and fired. But Neville w
 
 A grimly determined look came over Captain Weasley’s face, and he arrowed straight up toward Neville, mouthing the word *Contego,* though the shield wasn’t visible in the water.
 
-The two enemy champions shot toward each other like arrows released from bows, each aimed to split the other down the middle. They had dueled many times before, but this time would pay for all.
+The two enemy champions shot toward each other like arrows released from bows, each aimed to split the other down the middle. They had duelled many times before, but this time would pay for all.
 
 (Far away by the lakeside, a hundred breaths were held.)
 
@@ -549,7 +549,7 @@ Draco’s head darted around frantically, trying to weigh up what was happening;
 
 It was happening *again!*
 
-*“Prismatis!”* shouted Draco, raising his wand, and that shield you could see even through the water, a sparkling multicolored flat wall wide enough to shield Draco and the five other Dragons with him from the Chaotic force that had just started firing on them as they swam past, and *that* let the other five Dragons turn *their* attentions back to the Chaotic force they’d been chasing—
+*“Prismatis!”* shouted Draco, raising his wand, and that shield you could see even through the water, a sparkling multicoloured flat wall wide enough to shield Draco and the five other Dragons with him from the Chaotic force that had just started firing on them as they swam past, and *that* let the other five Dragons turn *their* attentions back to the Chaotic force they’d been chasing—
 
 There was a tense moment as sleep spell after sleep spell crashed into Draco’s Prismatic Wall, and Draco was hoping to Merlin that none of those four Chaotics had learned the Breaking Drill Hex—
 
@@ -567,7 +567,7 @@ It looked like everyone was having trouble aiming while swimming, too, the battl
 
 “What is it?” said Padma Patil, as she and her force swam over toward Draco.
 
-Padma was his second-in-command; she was clever and powerful, and better yet, she hated Granger and saw Harry as a rival, which made her *trustworthy.* Working with Padma was making him realize the truth of the old adage that Ravenclaw was sister to Slytherin; Draco had been surprised when his father had told him it was an acceptable House for his future wife, but now he saw the sense of it.
+Padma was his second-in-command; she was clever and powerful, and better yet, she hated Granger and saw Harry as a rival, which made her *trustworthy.* Working with Padma was making him realise the truth of the old adage that Ravenclaw was sister to Slytherin; Draco had been surprised when his father had told him it was an acceptable House for his future wife, but now he saw the sense of it.
 
 “Wait until we’re all here,” Draco said. The truth was, he needed to catch his breath. That was the trouble with being the general *and* the most powerful wizard, you had to keep using magic.
 
@@ -587,7 +587,7 @@ Draco gritted his teeth. More traitor problems. He needed to talk to Professor Q
 
 There was the triple bell of a one-point loss from Dragon, and then Kellah’s limp body began to float away in the water.
 
-Draco *had* heard the word ’recursion’ by this point, and he knew a Harry Potter plot when he saw one.
+Draco *had* heard the word ‘recursion’ by this point, and he knew a Harry Potter plot when he saw one.
 
 (Unfortunately Draco had *not* heard of autoimmune disorders, and the thought did *not* readily occur to him that a clever virus would begin its attack by creating symptoms of an autoimmune disorder so as to get the body to distrust its own immune system…)
 
@@ -597,11 +597,11 @@ And then—
 
 There was the bell of Sunshine scoring two points.
 
-*“What?”* said Draco and Zabini around the same time; their heads swiveled around. No one seemed to have gotten hit, and all the Sunshine soldiers were present and accounted for. (Except Parvati, who had been shot by some still-unknown traitor in Padma’s squad; and of course Padma had shot Parvati again in case she was faking, so it wasn’t her…)
+*“What?”* said Draco and Zabini around the same time; their heads swivelled around. No one seemed to have gotten hit, and all the Sunshine soldiers were present and accounted for. (Except Parvati, who had been shot by some still-unknown traitor in Padma’s squad; and of course Padma had shot Parvati again in case she was faking, so it wasn’t her…)
 
 “A Sunny traitor in Chaos?” said Zabini, sounding puzzled. “But all the ones I knew about were supposed to strike during Chaos’s attack on Sunshine—”
 
-“No!” said Padma in a tone of sudden realization. “That was *Chaos* executing a spy!”
+“No!” said Padma in a tone of sudden realisation. “That was *Chaos* executing a spy!”
 
 *“What?”* said Zabini. “But why—”
 
@@ -665,7 +665,7 @@ And Harry Potter’s body floated away, his expression of shock and horror quick
 
 “On second thought,” Parvati said cheerfully, “make that Gryffindors for Sunshine.”
 
-She started to laugh, more exhiliarated than she’d ever been in her life, she’d *finally* gotten to assassinate and replace her twin sister and she’d wanted to do that since *forever,* and this had been *perfect,* it had all been *perfect*—
+She started to laugh, more exhilarated than she’d ever been in her life, she’d *finally* gotten to assassinate and replace her twin sister and she’d wanted to do that since *forever,* and this had been *perfect,* it had all been *perfect*—
 
 —and then her wand spun around in a lightning motion just as Zabini’s wand turned to point at her.
 
@@ -699,7 +699,7 @@ She stared at him for a long moment.
 
 And then—
 
-*“Somni-*” she started to say, and then realized she hadn’t said *for Dragon,* and frantically cut herself off—
+*“Somni-*” she started to say, and then realised she hadn’t said *for Dragon,* and frantically cut herself off—
 
 * * * * *
 
