--- a/034.md
+++ b/034.md
@@ -1,7 +1,7 @@
 # Chapter 34
 ## Coordination Problems, Pt 2
 
-Minerva and Dumbledore together had applied their combined talent to conjure the grand stage toward which Quirrell now slowly trudged; it was, at its core, sturdy wood, but the outer surfaces shone with glitter of marble inlaid with platinum and studded with gems of every House color. Neither she nor the Headmaster was any Founder of Hogwarts, but the conjuration only needed to last a few hours. Minerva ordinarily enjoyed the few occasions when she had the occasion to tire herself out on large Transfigurations; she should have enjoyed the many small chances for artistry, and the illusion of opulence; but this time she had done the work with the dreadful feeling of digging her own grave.
+Minerva and Dumbledore together had applied their combined talent to conjure the grand stage toward which Quirrell now slowly trudged; it was, at its core, sturdy wood, but the outer surfaces shone with glitter of marble inlaid with platinum and studded with gems of every House colour. Neither she nor the Headmaster was any Founder of Hogwarts, but the conjuration only needed to last a few hours. Minerva ordinarily enjoyed the few occasions when she had the occasion to tire herself out on large Transfigurations; she should have enjoyed the many small chances for artistry, and the illusion of opulence; but this time she had done the work with the dreadful feeling of digging her own grave.
 
 But Minerva was feeling a little better now. There’d been one brief moment when the explosion might’ve come; but Dumbledore had already been standing up and applauding warmly, and no one had proven foolish enough to riot in front of the Headmaster.
 
@@ -65,7 +65,7 @@ Draco controlled the anger flushing through him. That had been a *stupid* move o
 
 “If you think my father, Lord Malfoy, can be manipulated by *you* that easily,” Draco said coldly, “you have a surprise coming, Harry Potter.”
 
-And Draco realized as the words finished leaving his mouth that he’d just backed *his own father* squarely into the corner, more or less without even meaning to. Father probably *wasn’t* going to like this, not the tiniest bit, but now it would be impossible for him to say so… Draco would have to apologise for that, it *had* been an honest accident, but it was strange to think that he’d done it at all.
+And Draco realised as the words finished leaving his mouth that he’d just backed *his own father* squarely into the corner, more or less without even meaning to. Father probably *wasn’t* going to like this, not the tiniest bit, but now it would be impossible for him to say so… Draco would have to apologise for that, it *had* been an honest accident, but it was strange to think that he’d done it at all.
 
 “Then go ahead and defeat the evil General Chaos,” Harry said, still looking amused. “I can’t win against both your armies—not if you *really* work together. But I wonder if perhaps I could break you up before then.”
 
@@ -173,7 +173,7 @@ Draco turned back to look at Professor Quirrell again, and was surprised to see 
 
 There was considerable laughter from the audience, including a chuckle from Draco. He hadn’t thought Granger played that game.
 
-“Well, um,” said Granger, sounding like she was suddenly stumbling over a memorized speech, “I meant to say, that…” She took a deep breath. “There were soldiers from every House in my army, and I don’t mean to slight any of them. But Houses should still count for something, too. It was sad when students in the same House were hexing each other just because they were in different armies. People should be able to rely on whoever’s in their House. That’s why Godric Gryffindor, and Salazar Slytherin, and Rowena Ravenclaw, and Helga Hufflepuff created the four Houses of Hogwarts in the first place. I’m the General of Sunshine, but even before that, I’m Hermione Granger of Ravenclaw, and I’m proud to be part of a House that’s eight hundred years old.”
+“Well, um,” said Granger, sounding like she was suddenly stumbling over a memorised speech, “I meant to say, that…” She took a deep breath. “There were soldiers from every House in my army, and I don’t mean to slight any of them. But Houses should still count for something, too. It was sad when students in the same House were hexing each other just because they were in different armies. People should be able to rely on whoever’s in their House. That’s why Godric Gryffindor, and Salazar Slytherin, and Rowena Ravenclaw, and Helga Hufflepuff created the four Houses of Hogwarts in the first place. I’m the General of Sunshine, but even before that, I’m Hermione Granger of Ravenclaw, and I’m proud to be part of a House that’s eight hundred years old.”
 
 “Well said, Miss Granger!” said Dumbledore’s booming voice.
 
