--- a/035.md
+++ b/035.md
@@ -7,7 +7,7 @@ The Defence Professor’s voice was very calm, and that unnerved Harry a good de
 
 “I am trying,” said Professor Quirrell quietly, “to make allowances for the fact that you are young. That I myself, at the same age, was a quite extraordinary fool. You speak with adult style and meddle in adult games, and sometimes I forget that you are only a meddler. I hope, Mr. Potter, that your childish meddling has not just killed you, ruined your country, and lost the next war.”
 
-It was very hard for Harry to control his breathing. “Professor Quirrell, I said a good deal less than I wished to say, but I had to say something. Your proposals are extremely alarming to anyone who has the slightest familiarity with Muggle history over the last century. The Italian fascists, some very nasty people, got their name from the *fasces,* a bundle of rods bound together to symbolize the idea that unity is strength—”
+It was very hard for Harry to control his breathing. “Professor Quirrell, I said a good deal less than I wished to say, but I had to say something. Your proposals are extremely alarming to anyone who has the slightest familiarity with Muggle history over the last century. The Italian fascists, some very nasty people, got their name from the *fasces,* a bundle of rods bound together to symbolise the idea that unity is strength—”
 
 “So the nasty Italian fascists believed that unity is stronger than division,” said Professor Quirrell. Sharpness was beginning to creep into his voice. “Perhaps they also believed that the sky is blue, and advocated a policy of not dropping rocks on your head.”
 
@@ -87,7 +87,7 @@ And the Defence Professor inclined his head with some irony, and then strode off
 
 Harry trudged slowly toward the Ravenclaw dorm, eyes unseeing of walls, paintings, or other students; he went up stairs and down ramps without slowing, speeding, or noticing where he trod.
 
-It had taken him more than a minute after Professor Quirrell’s departure to realize that his only source of information about Dumbledore being involved was (a) Blaise Zabini, who he would have to be an absolute gaping idiot to trust again, and (b) Professor Quirrell, who could have easily faked a plot in Dumbledore’s style, and who might also think that a little student rivalry was a fine thing; and who had, if you stepped back and blurred out the details, just proposed turning the country into a magical dictatorship.
+It had taken him more than a minute after Professor Quirrell’s departure to realise that his only source of information about Dumbledore being involved was (a) Blaise Zabini, who he would have to be an absolute gaping idiot to trust again, and (b) Professor Quirrell, who could have easily faked a plot in Dumbledore’s style, and who might also think that a little student rivalry was a fine thing; and who had, if you stepped back and blurred out the details, just proposed turning the country into a magical dictatorship.
 
 And it was also possible that Dumbledore *was* the one behind Zabini, and that Professor Quirrell had been sincerely trying to fight the Dark Mark in kind, and prevent the repetition of a performance he saw as pathetic. Trying to make sure that Harry didn’t end up fighting the Dark Lord alone, while everyone else hid, frightened, trying to stay out of the line of fire, waiting for Harry to save them.
 
@@ -195,7 +195,7 @@ Hermione was just leaving the girl’s bathroom where she sometimes hid to think
 
 She let out a little shriek before she realised the cat had spoken in Professor McGonagall’s voice.
 
-Even so she hadn’t been frightened, only startled; the cat was bright and brilliant and beautiful, glowing with a white silver radiance like moon-colored sunlight, and she couldn’t imagine being scared.
+Even so she hadn’t been frightened, only startled; the cat was bright and brilliant and beautiful, glowing with a white silver radiance like moon-coloured sunlight, and she couldn’t imagine being scared.
 
 “What are you?” said Hermione.
 
