--- a/036.md
+++ b/036.md
@@ -3,7 +3,7 @@
 
 Wrenching disorientation, that was how it felt to walk out of Platform Nine and Three-Quarters into the rest of Earth, the world that Harry had once thought was the only real world. People dressed in casual shirts and pants, instead of the more dignified robes of wizards and witches. Scattered bits of trash here and there around the benches. A forgotten smell, the fumes of burned gasoline, raw and sharp in the air. The ambiance of the King’s Cross train station, less bright and cheerful than Hogwarts or Diagon Alley; the people seemed smaller, more afraid, and likely would have eagerly traded their problems for a dark wizard to fight. Harry wanted to cast *Scourgify* for the dirt, and *Everto* for the garbage, and if he’d known the spell, a Bubble-Head Charm so he wouldn’t have to breathe the air. But he couldn’t use his wand, in this place…
 
-This, Harry realized, must be what it felt like to go from a First World country to a Third World country.
+This, Harry realised, must be what it felt like to go from a First World country to a Third World country.
 
 Only it was the Zeroth World which Harry had left, the wizarding world, of Cleansing Charms and house elves; where, between the healer’s arts and your own magic, you could hit one hundred and seventy before old age really started catching up with you.
 
@@ -19,7 +19,7 @@ They didn’t know *anything*.
 
 They didn’t know…
 
-“Harry?” called a thin, blonde woman whose perfectly smooth and unblemished skin made her look a good deal younger than thirty-three; and Harry realized with a start that it *was* magic, he hadn’t known the signs before but he could see them now. And whatever sort of potion lasted that long, it must have been terribly dangerous, because most witches didn’t do that to themselves, they weren’t that desperate…
+“Harry?” called a thin, blonde woman whose perfectly smooth and unblemished skin made her look a good deal younger than thirty-three; and Harry realised with a start that it *was* magic, he hadn’t known the signs before but he could see them now. And whatever sort of potion lasted that long, it must have been terribly dangerous, because most witches didn’t do that to themselves, they weren’t that desperate…
 
 There was water gathering in Harry’s eyes.
 
@@ -39,7 +39,7 @@ Of course Dad thought he was joking.
 
 It hadn’t hurt quite so much when his parents didn’t believe in him, back when no one *else* had believed in him either, back when Harry hadn’t *known* how it felt to be taken seriously by people like Headmaster Dumbledore and Professor Quirrell.
 
-And that was when Harry realized that the Boy-Who-Lived only existed in magical Britain, that there wasn’t any such person in Muggle London, just a cute little eleven-year-old boy going home for Christmas.
+And that was when Harry realised that the Boy-Who-Lived only existed in magical Britain, that there wasn’t any such person in Muggle London, just a cute little eleven-year-old boy going home for Christmas.
 
 “Excuse me,” Harry said, his voice trembling, “I’m going to break down and cry now, it doesn’t mean there was anything wrong at school.”
 
@@ -165,7 +165,7 @@ The boy swivelled again to regard Hermione. “I’m afraid, Miss Granger,” th
 
 “Excuse us, please,” said her daughter in a very firm tone, and grabbed the boy by his left sleeve, and dragged him into the hallway—Roberta swivelled helplessly to track them as they went past her, the boy gave her a cheery wave—and then Hermione pulled the boy into the basement access and slammed the door behind her.
 
-“I, ah, I apologize for…” said Mrs. Verres in a faltering voice.
+“I, ah, I apologise for…” said Mrs. Verres in a faltering voice.
 
 “I’m sorry,” said the Professor, smiling fondly, “Harry can be a bit touchy about that sort of thing. But I expect he’s right about us not being interested in their conversation.”
 
@@ -175,7 +175,7 @@ The most terrible Dark Lord in history had tried to kill that boy, and the burnt
 
 Her possible future son-in-law.
 
-Roberta had been increasingly apprehensive about giving her daughter over to witchcraft—especially after she’d read the books, put the dates together, and realized that her magical mother had probably been killed at the height of Grindelwald’s terror, *not* died giving birth to her as her father had always claimed. But Professor McGonagall had made other visits after her first trip, to “see how Miss Granger is doing”; and Roberta couldn’t help but think that if Hermione said her parents were being troublesome about her witching career, something would be done to *fix* them…
+Roberta had been increasingly apprehensive about giving her daughter over to witchcraft—especially after she’d read the books, put the dates together, and realised that her magical mother had probably been killed at the height of Grindelwald’s terror, *not* died giving birth to her as her father had always claimed. But Professor McGonagall had made other visits after her first trip, to “see how Miss Granger is doing”; and Roberta couldn’t help but think that if Hermione said her parents were being troublesome about her witching career, something would be done to *fix* them…
 
 Roberta put her best smile on her face, and did what she could to spread some pretended Christmas cheer.
 
