--- a/039.md
+++ b/039.md
@@ -67,7 +67,7 @@ Now the Headmaster was giving Harry a strange look.
 
 “I mean,” said Harry, “it’s entirely consistent with the way Professor Quirrell usually acts…” Harry trailed off. Why *had* he put it that way?
 
-The Headmaster nodded. “So you have the same sense I do; that it is an excuse. A very *reasonable* excuse, to be sure; more so than you may realize. Often, wizards seemingly unable to cast a Patronus Charm will succeed in the presence of an actual Dementor, going from not a single flicker of light to a full corporeal Patronus. Why this should be, no one knows; but it is so.”
+The Headmaster nodded. “So you have the same sense I do; that it is an excuse. A very *reasonable* excuse, to be sure; more so than you may realise. Often, wizards seemingly unable to cast a Patronus Charm will succeed in the presence of an actual Dementor, going from not a single flicker of light to a full corporeal Patronus. Why this should be, no one knows; but it is so.”
 
 Harry frowned. “Then I really don’t see why you’re suspicious—”
 
@@ -173,7 +173,7 @@ Harry stared at the Headmaster in surprise.
 
 Harry stared down at his hands. The truth was that Harry hadn’t read up on the Dark Lord yet, and right now he hadn’t the tiniest clue. And somehow that didn’t seem like an answer the Headmaster wanted to hear. “Too many Dark rituals, maybe? In the beginning he thought he’d do just one, but it sacrificed part of his good side, and that made him less reluctant to perform other Dark rituals, so he did more and more rituals in a positive feedback cycle until he ended up as a tremendously powerful monster—”
 
-“No!” Now the Headmaster’s voice was agonized. “I can’t believe that, Harry! There has to be something more to it than just that!”
+“No!” Now the Headmaster’s voice was agonised. “I can’t believe that, Harry! There has to be something more to it than just that!”
 
 *Why should there be?* thought Harry, but he didn’t say it, because it was clear that the Headmaster thought the universe was a story and had a plot, and that huge tragedies weren’t allowed to happen except for equally huge, significant reasons. “I’m sorry, Headmaster. The Dark Lord doesn’t seem like much of a dark mirror to me, not at all. There isn’t anything I find even the *tiniest* bit tempting about nailing the skins of Yermy Wibble’s family to a newsroom wall.”
 
@@ -203,7 +203,7 @@ Harry’s mind searched hastily for something else Deeply Wise to say that would
 
 Harry stared at his own hands, where they lay in his lap. Maybe he should just shut up while he was ahead.
 
-“But you *have* answered my question,” said Dumbledore more softly, as though to himself. “I should have realized that would be a Slytherin’s key. For his ambition, all for the sake of his ambition; and *that* I know, though not *why*…” For a time Dumbledore stared off into nothingness; then he straightened, and his eyes seemed to focus on Harry again.
+“But you *have* answered my question,” said Dumbledore more softly, as though to himself. “I should have realised that would be a Slytherin’s key. For his ambition, all for the sake of his ambition; and *that* I know, though not *why*…” For a time Dumbledore stared off into nothingness; then he straightened, and his eyes seemed to focus on Harry again.
 
 “And you, Harry,” said the Headmaster, “you name yourself a *scientist?”* His voice was laced with surprise and mild disapproval.
 
@@ -301,7 +301,7 @@ Harry reached up and wiped at his cheeks, while the glass things of the office s
 
 The physical manifestation of the barrier between worlds was a great stone archway, old and tall and coming to a sharp point, with a tattered black veil like the surface of a pool of water, stretched between the stones; rippling, always, from the constant and one-way passage of the souls. If you stood by the Veil you could hear the voices of the dead calling, always calling in whispers barely on the wrong side of comprehension, growing louder and more numerous if you stayed and tried to hear, as they tried to communicate; and if you listened too long, you would go to meet them, and in the moment you touched the Veil you would be sucked through, and never be heard from again.
 
-“That doesn’t even sound like an *interesting* fraud,” Harry said, his voice calmer now that there was nothing there to make him hope, or make him angry for having hopes dashed. “Someone built a stone archway, made a little black rippling surface between it that Vanished anything it touched, and enchanted it to whisper to people and hypnotize them.”
+“That doesn’t even sound like an *interesting* fraud,” Harry said, his voice calmer now that there was nothing there to make him hope, or make him angry for having hopes dashed. “Someone built a stone archway, made a little black rippling surface between it that Vanished anything it touched, and enchanted it to whisper to people and hypnotise them.”
 
 “Harry…” the Headmaster said, starting to look rather worried. “I can tell you the truth, but if you refuse to hear it…”
 
@@ -339,7 +339,7 @@ And Dumbledore told Harry to draw forth the Cloak of Invisibility from his pouch
 
 Dumbledore appeared to be fighting a struggle within himself. “Harry,” the old wizard said, his voice rising, “this is a dangerous road you are walking, I am not sure I do the right thing by saying this, but I *must* wrench you from this way! Harry, *how could Voldemort have survived the death of his body if he did not have a soul?”*
 
-And *that* was when Harry realized that there was exactly one person who’d *originally* told Professor McGonagall that the Dark Lord was still alive in the first place; and it was the crazy Headmaster of their madhouse of a school, who thought the world ran on cliches.
+And *that* was when Harry realised that there was exactly one person who’d *originally* told Professor McGonagall that the Dark Lord was still alive in the first place; and it was the crazy Headmaster of their madhouse of a school, who thought the world ran on cliches.
 
 “Good question,” Harry said, after some internal debate about how to proceed. “Maybe he found some way of duplicating the power of the Resurrection Stone, only he loaded it in advance with a *complete* copy of his brain state. Or something like that.” Harry was suddenly far from sure that he was trying to come up with an explanation for something that had *actually happened*. “Actually, can you just go ahead and tell me everything you know about how the Dark Lord survived and what it might take to kill him?” *If he even still exists as more than Quibbler headlines.*
 
@@ -381,7 +381,7 @@ The old wizard nodded. “I am less afraid than I was, but still greatly worried
 
 The old wizard’s face was peaceful. “I am not perfect, Harry, but I think I have accepted my death as part of myself.”
 
-“Uh huh,” Harry said. “See, there’s this little thing called *cognitive dissonance,* or in plainer English, *sour grapes.* If people were hit on the heads with truncheons once a month, and no one could do anything about it, pretty soon there’d be all sorts of philosophers, *pretending to be wise* as you put it, who found all sorts of *amazing benefits* to being hit on the head with a truncheon once a month. Like, it makes you tougher, or it makes you happier on the days when you’re *not* getting hit with a truncheon. But if you went up to someone who *wasn’t* getting hit, and you asked them if they wanted to *start*, in exchange for those *amazing benefits,* they’d say no. And if you *didn’t* have to die, if you came from somewhere that no one had ever even *heard* of death, and I suggested to you that it would be an *amazing wonderful great idea* for people to get wrinkled and old and eventually cease to exist, why, you’d have me hauled right off to a lunatic asylum! So why would anyone possibly think any thought so silly as that death is a *good* thing? Because you’re afraid of it, because you don’t *really* want to die, and that thought hurts so much inside you that you have to rationalize it away, do something to numb the pain, so you won’t have to think about it—”
+“Uh huh,” Harry said. “See, there’s this little thing called *cognitive dissonance,* or in plainer English, *sour grapes.* If people were hit on the heads with truncheons once a month, and no one could do anything about it, pretty soon there’d be all sorts of philosophers, *pretending to be wise* as you put it, who found all sorts of *amazing benefits* to being hit on the head with a truncheon once a month. Like, it makes you tougher, or it makes you happier on the days when you’re *not* getting hit with a truncheon. But if you went up to someone who *wasn’t* getting hit, and you asked them if they wanted to *start*, in exchange for those *amazing benefits,* they’d say no. And if you *didn’t* have to die, if you came from somewhere that no one had ever even *heard* of death, and I suggested to you that it would be an *amazing wonderful great idea* for people to get wrinkled and old and eventually cease to exist, why, you’d have me hauled right off to a lunatic asylum! So why would anyone possibly think any thought so silly as that death is a *good* thing? Because you’re afraid of it, because you don’t *really* want to die, and that thought hurts so much inside you that you have to rationalise it away, do something to numb the pain, so you won’t have to think about it—”
 
 “No, Harry,” the old wizard said. His face was gentle, his hand trailed through a lighted pool of water that made small musical chimes as his fingers stirred it. “Though I can understand how you must think so.”
 
