--- a/040.md
+++ b/040.md
@@ -49,7 +49,7 @@ The curtains were taking on a faintly blue pattern, and a dim tracery of elabora
 
 “I should hope not,” said Professor Quirrell, still in that very calm tone. “I would be extremely put out to discover that the Headmaster had convinced you to throw away your life on some fool plot by telling you that death is the next great adventure.”
 
-“I don’t think the Headmaster believed it himself, actually,” Harry said. He sipped his own tea again. “He asked me what I could possibly do with eternity, gave me the usual line about it being boring, and he didn’t seem to see any conflict between that and his own claim to have an immortal soul. In fact, he gave me a whole long lecture about how awful it was to want immortality before he claimed to have an immortal soul. I can’t quite visualize what must have been going on inside his head, but I don’t think he *actually* had a mental model of himself continuing forever in the afterlife…”
+“I don’t think the Headmaster believed it himself, actually,” Harry said. He sipped his own tea again. “He asked me what I could possibly do with eternity, gave me the usual line about it being boring, and he didn’t seem to see any conflict between that and his own claim to have an immortal soul. In fact, he gave me a whole long lecture about how awful it was to want immortality before he claimed to have an immortal soul. I can’t quite visualise what must have been going on inside his head, but I don’t think he *actually* had a mental model of himself continuing forever in the afterlife…”
 
 The temperature of the room seemed to be dropping.
 
