--- a/041.md
+++ b/041.md
@@ -81,10 +81,10 @@ Longbottom had managed to hex them *both* before falling himself.
 And now it was Draco and Granger and Padma and Samuel and Harry, and by
 the looks of Samuel, his Prismatic Wall couldn’t last much longer.
 
-Draco had already leveled his wand at Harry, waiting for the Prismatic
+Draco had already levelled his wand at Harry, waiting for the Prismatic
 Wall to fall of its own accord; there was no need to waste a Breaking
-Drill Hex before then. Padma leveled her own wand at Samuel, Granger
-leveled hers at Harry…
+Drill Hex before then. Padma levelled her own wand at Samuel, Granger
+levelled hers at Harry…
 
 Harry was still hiding his hands behind his back, instead of aiming his
 wand; and looking at them with a face that could have been carved out of
@@ -102,8 +102,8 @@ when I’m fighting seriously, and I’ll stay beaten; but lose, and we’ll
 be doing this all over again next time.”
 
 The boy brought his hands forward, and Draco saw that Harry was wearing
-strange gloves, with a peculiar grayish material on the fingertips, and
-buckles that stapped the gloves tightly to his wrists.
+strange gloves, with a peculiar greyish material on the fingertips, and
+buckles that strapped the gloves tightly to his wrists.
 
 Beside Draco, the Sunshine General gasped in horror; and Draco, without
 even asking why, fired a Breaking Drill Hex.
