--- a/042.md
+++ b/042.md
@@ -210,7 +210,7 @@ Something flickered in Remus’s eyes, but the older man shook his head, and sai
 
 “That means there *is* something,” said Harry.
 
-That wry smile appeared again beneath the salt-and-pepper mustache. “You have a bit of Peter in you yourself, I see. But it’s not important, Harry.”
+That wry smile appeared again beneath the salt-and-pepper moustache. “You have a bit of Peter in you yourself, I see. But it’s not important, Harry.”
 
 “I’m a Ravenclaw, I’m not *supposed* to resist the temptation of secrets. And,” Harry said more seriously, “if it was worth Black getting caught, I can’t help but think it might matter.”
 
