--- a/043.md
+++ b/043.md
@@ -85,7 +85,7 @@ Harry had already started to feel pessimistic, and he wasn’t even in front of 
 
 “I bet you can do it and I can’t,” Harry said in a whisper. “I bet that’s what happens.”
 
-“It felt wrong to me,” Hermione said, her voice even quieter than his. “I tried it this morning and I realized. When I was doing the brandish at the end, even before I said the words, it felt wrong.”
+“It felt wrong to me,” Hermione said, her voice even quieter than his. “I tried it this morning and I realised. When I was doing the brandish at the end, even before I said the words, it felt wrong.”
 
 Harry didn’t say anything. He’d felt the same thing, right from the start, though it had taken another five attempts using five other happy thoughts before he’d been able to acknowledge it to himself. Every time he tried to brandish his wand, it had felt hollow; the spell he was trying to learn didn’t fit him.
 
@@ -99,7 +99,7 @@ Godric Gryffindor had been a good man, not a happy one.
 
 Harry didn’t believe in angst, he couldn’t stand reading about whiny heroes, he knew a billion other people in the world would have given anything to trade places with him, and…
 
-And on his deathbed, Godric had told Helga (for Salazar had abandoned him, and Rowena passed before) that he didn’t regret any of it, and he was *not* warning his students not to follow in his footsteps, no one was *ever* to say he’d told anyone not to follow in his footsteps. If it had been the right thing for *him* to do, then he wouldn’t tell anyone else to choose wrongly, not even the youngest student in Hogwarts. And yet for those who *did* follow in his footsteps, he hoped they would remember that Gryffindor had told his House that it was all right for them to be happier than him. That red and gold would be bright warm colors, from now on.
+And on his deathbed, Godric had told Helga (for Salazar had abandoned him, and Rowena passed before) that he didn’t regret any of it, and he was *not* warning his students not to follow in his footsteps, no one was *ever* to say he’d told anyone not to follow in his footsteps. If it had been the right thing for *him* to do, then he wouldn’t tell anyone else to choose wrongly, not even the youngest student in Hogwarts. And yet for those who *did* follow in his footsteps, he hoped they would remember that Gryffindor had told his House that it was all right for them to be happier than him. That red and gold would be bright warm colours, from now on.
 
 And Helga had promised him, weeping, that when she was Headmistress she would make sure of it.
 
@@ -155,7 +155,7 @@ Forty seconds of Dementor exposure at five paces might *possibly* have been enou
 
 It was harsh training even by the standards of Hogwarts, where the way you learned to fly on a hippogriff was by being tossed on one and told to get going. Harry was no fan of overprotectiveness, and if you looked at the difference in maturity between a fourth-year in Hogwarts and a fourteen-year-old Muggle, it was clear that Muggles were smothering their children… but even Harry had started to wonder if this was pushing it. Not every hurt could be healed afterward.
 
-But if you couldn’t cast the spell under those conditions, it meant you couldn’t rely on using the Patronus Charm to defend yourself; overconfidence was even more dangerous to wizards than to Muggles. Dementors could drain your magic and your physical vitality, not just your happy thoughts, which meant you might *not* be able to Apparate away if you waited too long, or if you didn’t recognize the approaching fear until the Dementor was within range for its attack. (During his reading, Harry had discovered with considerable horror that some books claimed the Dementor’s Kiss would *eat your soul* and that this was the reason for the permanent mindless coma into which it put the victims. And that wizards who *believed this* had deliberately used the Dementor’s Kiss to *execute criminals.* It was a certainty that some called criminals were innocent, and even if they weren’t, *destroying their souls?* If Harry had believed in souls, he would have… drawn a blank, he just couldn’t think of an appropriate response to that.)
+But if you couldn’t cast the spell under those conditions, it meant you couldn’t rely on using the Patronus Charm to defend yourself; overconfidence was even more dangerous to wizards than to Muggles. Dementors could drain your magic and your physical vitality, not just your happy thoughts, which meant you might *not* be able to Apparate away if you waited too long, or if you didn’t recognise the approaching fear until the Dementor was within range for its attack. (During his reading, Harry had discovered with considerable horror that some books claimed the Dementor’s Kiss would *eat your soul* and that this was the reason for the permanent mindless coma into which it put the victims. And that wizards who *believed this* had deliberately used the Dementor’s Kiss to *execute criminals.* It was a certainty that some called criminals were innocent, and even if they weren’t, *destroying their souls?* If Harry had believed in souls, he would have… drawn a blank, he just couldn’t think of an appropriate response to that.)
 
 The Headmaster was taking security seriously, and so were the three Aurors standing guard. Their leader was an Asianish-looking man, solemn without being grim, Auror Komodo, whose wand never left his hand. His Patronus, an orangutan of solid moonlight, paced back and forth between the Dementor and the first-years awaiting their turn; beside the orangutan moved the bright white panther of Auror Butnaru, a man with a piercing gaze, long black hair in a ponytail, and a long braided goatee. Those two Aurors, and their two Patronuses, were all watching the Dementor. On the opposite side of the students was the resting Auror Goryanof, tall and thin and pale and unshaven, sitting back on a chair he’d conjured without word or wand, and maintaining an absentminded pokerface as he scanned the entire scene. Professor Quirrell had shown up not long after the first-years began their attempts, and his eyes never strayed far from Harry. The tiny Professor Flitwick, who had been a champion duellist, was fiddling absently with his wand; and *his* eyes, peering out from within the huge puffy beard that served as his face, stayed focused on Professor Quirrell.
 
@@ -237,7 +237,7 @@ Hermione straightened her shoulders, and followed him.
 
 “What did you see under the cloak?” Harry said to Anthony.
 
-Anthony looked at Harry, surprised, and then answered, “A very tall man who was dead, I mean, sort of dead-shaped and dead-colored… it hurt to see him and I knew that was the Dementor trying to get at me.”
+Anthony looked at Harry, surprised, and then answered, “A very tall man who was dead, I mean, sort of dead-shaped and dead-coloured… it hurt to see him and I knew that was the Dementor trying to get at me.”
 
 Harry looked back out at where Hermione was confronting the cage and the cloak.
 
@@ -263,7 +263,7 @@ Even after Harry had shoved the chocolate into Hermione’s mouth and she’d ch
 
 *She can’t have been permanently Demented,* Harry thought desperately at the confusion inside him, the horrible fear and deathly fury beginning to twist around each other, *she can’t have been, she wasn’t exposed for even ten seconds let alone forty—*
 
-But she could be *temporarily* Demented, as Harry realized in that moment, there wasn’t any rule that you couldn’t be *temporarily* injured by a Dementor in just ten seconds if you were sensitive enough.
+But she could be *temporarily* Demented, as Harry realised in that moment, there wasn’t any rule that you couldn’t be *temporarily* injured by a Dementor in just ten seconds if you were sensitive enough.
 
 Then Hermione’s eyes seemed to focus, and dart around, and settle on him.
 
@@ -271,7 +271,7 @@ Then Hermione’s eyes seemed to focus, and dart around, and settle on him.
 
 Harry was suddenly afraid to ask what he shouldn’t do, was *he* in her worst memories, or some sleep’s nightmare that she was now reliving in waking life?
 
-*“Don’t go near it!*“ said Hermione. Her hand reached out, grabbed him by the lapel of his robes. “You mustn’t go near it, Harry! *It spoke to me, Harry, it knows you, it knows you’re here!”*
+*“Don’t go near it!”* said Hermione. Her hand reached out, grabbed him by the lapel of his robes. “You mustn’t go near it, Harry! *It spoke to me, Harry, it knows you, it knows you’re here!”*
 
 “What—” Harry said, and then cursed himself for asking.
 
@@ -301,7 +301,7 @@ Then she started crying.
 
 It should have been Harry, but he’d hesitated, because his hands were all chocolatey; and then Ernie and Susan were there, helping Hermione from where she’d fallen on the grass, leading her toward the snacks table.
 
-Five bars of chocolate later, Hermione seemed to be all right again, and she went over and apologized to Professor Quirrell; but she was always watching Harry, every time that he glanced in her direction. He’d stepped toward her only once, and stopped when she’d stepped away. Her eyes had silently apologized, and silently pleaded for him to leave her be.
+Five bars of chocolate later, Hermione seemed to be all right again, and she went over and apologised to Professor Quirrell; but she was always watching Harry, every time that he glanced in her direction. He’d stepped toward her only once, and stopped when she’d stepped away. Her eyes had silently apologised, and silently pleaded for him to leave her be.
 
 * * * * *
 
@@ -487,13 +487,13 @@ Then the blazing white phoenix appeared again, like it was flying before them fr
 
 *“It still feeds on him, even here! How? If you know, Hermione Granger, you must tell me! Tell me!”*
 
-The senior Auror turned to stare at her, and so did many students. Professor Flitwick didn’t turn, he was now leveling his wand on Professor Quirrell, who was holding out clearly empty hands.
+The senior Auror turned to stare at her, and so did many students. Professor Flitwick didn’t turn, he was now levelling his wand on Professor Quirrell, who was holding out clearly empty hands.
 
 Seconds ticked past, uncounted.
 
 She couldn’t remember it, she couldn’t remember the nightmare clearly, she couldn’t remember why she had thought it was possible, why she had been afraid—
 
-Hermione realized then what she ought to do, and it was the hardest decision of her life.
+Hermione realised then what she ought to do, and it was the hardest decision of her life.
 
 What if whatever had happened to Harry, happened to her too?
 
