--- a/045.md
+++ b/045.md
@@ -239,7 +239,7 @@ And Harry’s eyes stared directly at that which lay beneath the tattered cloak,
 
 The fear it exuded stole away all happy thoughts, its closeness drained your power and strength, its kiss would destroy everything that you were.
 
-*I know you now*, Harry thought as his wand twitched once, twice, thrice and four times, as his fingers slid exactly the right distances, *I comprehend your nature, you symbolize Death, through some law of magic you are a shadow that Death casts into the world.*
+*I know you now*, Harry thought as his wand twitched once, twice, thrice and four times, as his fingers slid exactly the right distances, *I comprehend your nature, you symbolise Death, through some law of magic you are a shadow that Death casts into the world.*
 
 *And Death is not something I will ever embrace.*
 
@@ -251,7 +251,7 @@ The fear it exuded stole away all happy thoughts, its closeness drained your pow
 
 *And people won’t have to say goodbye any more…*
 
-The wand rose up and leveled straight at the Dementor.
+The wand rose up and levelled straight at the Dementor.
 
 *“EXPECTO PATRONUM!”*
 
