--- a/048.md
+++ b/048.md
@@ -3,9 +3,9 @@
 
 It was Saturday, the first morning of February, and at the Ravenclaw table, a boy bearing a breakfast plate heaped high with vegetables was nervously inspecting his servings for the slightest trace of meat.
 
-It *might* have been an overreaction. After he’d gotten over the raw shock, Harry’s common sense had woken up and hypothesized that “Parseltongue” was probably just a linguistic user interface for controlling snakes…
+It *might* have been an overreaction. After he’d gotten over the raw shock, Harry’s common sense had woken up and hypothesised that “Parseltongue” was probably just a linguistic user interface for controlling snakes…
 
-…after all, snakes couldn’t *really* be human-level intelligent, *someone* would have noticed by now. The smallest-brained creatures Harry had ever heard of with anything like linguistic ability were the African grey parrots taught by Irene Pepperberg. And that was unstructured protolanguage, in a species that played complex games of adultery and needed to model other parrots. While according to what Draco had been able to remember, snakes spoke to Parselmouths in what sounded like normal human language—i.e., full-blown recursive syntactical grammar. That had taken *time* for hominids to evolve, with huge brains and strong social selection pressures. Snakes didn’t have much society at all that Harry had ever heard. And with thousands upon thousands of different species of snakes all over the world, how could they all use the *same* version of their supposed language, “Parseltongue"?
+…after all, snakes couldn’t *really* be human-level intelligent, *someone* would have noticed by now. The smallest-brained creatures Harry had ever heard of with anything like linguistic ability were the African grey parrots taught by Irene Pepperberg. And that was unstructured protolanguage, in a species that played complex games of adultery and needed to model other parrots. While according to what Draco had been able to remember, snakes spoke to Parselmouths in what sounded like normal human language—i.e., full-blown recursive syntactical grammar. That had taken *time* for hominids to evolve, with huge brains and strong social selection pressures. Snakes didn’t have much society at all that Harry had ever heard. And with thousands upon thousands of different species of snakes all over the world, how could they all use the *same* version of their supposed language, “Parseltongue”?
 
 Of course that was all merely common sense, in which Harry was starting to lose faith entirely.
 
@@ -117,7 +117,7 @@ Hermione just shook her head, and turned another page.
 
 “It’s not just Ron,” Hermione said in almost a whisper. “Lots of people are saying it, Harry. Even Mandy is giving me worried looks when she thinks I’m not looking. Isn’t it funny? I keep worrying that Professor Quirrell is sucking *you* into the darkness, and now people are warning me just the same way I try to warn you.”
 
-“Well, *yeah,*” said Harry. “Doesn’t that reassure you a bit about me and Professor Quirrell?”
+“Well, *yeah,”* said Harry. “Doesn’t that reassure you a bit about me and Professor Quirrell?”
 
 “In a word,” said Hermione, “no.”
 
