--- a/050.md
+++ b/050.md
@@ -89,7 +89,7 @@ Her wand was shaking in her hand.
 
 “You did not choose sides when you went to Ravenclaw, girl. You choose your side by the way you live your life, what you do to other people and what you do to yourself. Will you illuminate others’ lives, or darken them? That is the choice between Light and Dark, not any word the Sorting Hat cries out. And the hard part, Padma Patil, is not saying ‘Light’, the hard part is deciding which is which, and admitting it to yourself when you begin down the wrong road.”
 
-There was silence. It went on for a time, and Padma realized that she had been dismissed.
+There was silence. It went on for a time, and Padma realised that she had been dismissed.
 
 Padma almost dropped her wand, when she tried to put it back into her pocket. She almost fell, when she took a step forward away from the wall, and turned to go—
 
@@ -177,13 +177,13 @@ Padma’s gaze flicked to the Ravenclaw table, where one boy was watching them w
 
 Harry was starting to sweat. He’d never actually heard Hermione scream at him before, and it was quite loud in the empty classroom.
 
-“I—but—but I *was* nice!” Harry protested. “I practically *redeemed* her, Padma was going down the wrong path and I turned her off it! I probably changed her whole life to be happier! Besides, you should’ve heard the *original* version of what Professor Quirrell suggested I do—” at which point Harry realized what he was saying and closed his mouth a second too late.
+“I—but—but I *was* nice!” Harry protested. “I practically *redeemed* her, Padma was going down the wrong path and I turned her off it! I probably changed her whole life to be happier! Besides, you should’ve heard the *original* version of what Professor Quirrell suggested I do—” at which point Harry realised what he was saying and closed his mouth a second too late.
 
 Hermione clutched at her chestnut curls, a gesture Harry hadn’t seen from her before. “What’d *he* say to do? *Kill* her?”
 
 The defence Professor had suggested that Harry identify all the key influential students inside and outside his year and try to gain control of the entire Hogwarts rumour mill, remarking that this was a generally useful and amusing challenge for any true Slytherin attending Hogwarts.
 
-“Nothing like *that,*” Harry said quickly, “he just said in a general way that I should get influence over the people spreading rumors, and *I* decided that the *nice* version of that would be to just inform Padma directly about the meaning of what she was doing, and the possible consequences of her actions, instead of trying to threaten her or anything like that—”
+“Nothing like *that,*” Harry said quickly, “he just said in a general way that I should get influence over the people spreading rumours, and *I* decided that the *nice* version of that would be to just inform Padma directly about the meaning of what she was doing, and the possible consequences of her actions, instead of trying to threaten her or anything like that—”
 
 *“You call that not threatening someone?”* Hermione’s hands were pulling at her hair now.
 
@@ -229,7 +229,7 @@ When Professor Flitwick asked Harry if he was responsible for what had happened 
 
 And Harry couldn’t help but think that this was advice that Professor Quirrell would never give him.
 
-Harry couldn’t help but think that if he’d done it Professor Quirrell’s way, the normal *Slytherin* way, a mixture of positive and negative incentives to bring Padma and the other rumor-mongers under his explicit control, then Padma wouldn’t have talked about it, and Hermione would have never found out…
+Harry couldn’t help but think that if he’d done it Professor Quirrell’s way, the normal *Slytherin* way, a mixture of positive and negative incentives to bring Padma and the other rumour-mongers under his explicit control, then Padma wouldn’t have talked about it, and Hermione would have never found out…
 
 …in which case Padma wouldn’t have been redeemed, she would have stayed on the wrong path, and she herself would have suffered from that eventually. It wasn’t as if Harry had *lied* to Padma in any way, when he was Time-Turned and invisible and using the Ventriloquism Charm.
 
