--- a/053.md
+++ b/053.md
@@ -37,7 +37,7 @@ The part of him that Harry had placed in control of his facial expressions looke
 
 Bellatrix’s eyes remained fixed on Harry, she said no word.
 
-*"Ssay ssomething in Parsseltongue,"* hissed the snake.
+*“Ssay ssomething in Parsseltongue,”* hissed the snake.
 
 Harry’s face turned to the snake, to make it clear that he was addressing it, and hissed, *“One two three four five ssix sseven eight nine ten.”*
 
@@ -75,7 +75,7 @@ The cringing servant opened the door to Bellatrix’s cage, and pulled a tiny ne
 
 Soon another living skeleton lay upon the floor, motionless. Afterward the servant seemed to hesitate for a moment, until from the empty air hissed an impatient command. Then the servant pointed his wand at Bellatrix and spoke a word, and the living skeleton lying on the bed was naked, and the skeleton lying on the floor was clothed in her faded dress.
 
-The servant tore a small strip of cloth from the dress, as it lay upon the seeming corpse; and from his own robes, the fearful man then produced an empty glass flask with small traces of golden fluid clinging to its inside. This flask was concealed in a corner, the strip of skirt laid over it, the leached cloth nearly blending with the gray metal wall.
+The servant tore a small strip of cloth from the dress, as it lay upon the seeming corpse; and from his own robes, the fearful man then produced an empty glass flask with small traces of golden fluid clinging to its inside. This flask was concealed in a corner, the strip of skirt laid over it, the leached cloth nearly blending with the grey metal wall.
 
 Another wave of the servant’s wand floated the human skeleton lying on the bed into the air, and in almost the same motion clothed her in new black robes. An ordinary-looking bottle of chocolate milk was put into her hand, and a chill whisper ordered Bellatrix to grasp the bottle and begin drinking it, which she did, her face still looking only puzzled.
 
