--- a/055.md
+++ b/055.md
@@ -195,7 +195,7 @@ The door of the Cabinet burst open with a bang, and into the room strode a heavy
 
 “Get into the air, now!” Amelia barked over her shoulder at the female Auror trio following behind her with police broomsticks, they must have all been crushed in there, waiting for Li to activate the Cabinet. “I want more aerial coverage on this place! And make sure you keep up your anti-Disillusionment Charms!” Then her head turned toward him. “Report, Auror Li! Do we know how they got in yet?”
 
-Another Auror trio holding broomsticks materialized in the Vanishing Cabinet and strode out after them even as Li began talking.
+Another Auror trio holding broomsticks materialised in the Vanishing Cabinet and strode out after them even as Li began talking.
 
 They were followed by a trio of Hit Wizards in full battle gear.
 
@@ -245,7 +245,7 @@ The snake did not stir.
 
 “Shall I try again, my Lord?” she whispered.
 
-“No,” Harry said. He swallowed the sick feeling. Harry had decided to say the hell with it and try to revive Professor Quirrell after he’d realized that the Dementors had probably alerted the Aurors by now. His high, cold voice went on, unperturbed, “Do you think you are able to perform a Memory Charm, dear Bella?”
+“No,” Harry said. He swallowed the sick feeling. Harry had decided to say the hell with it and try to revive Professor Quirrell after he’d realised that the Dementors had probably alerted the Aurors by now. His high, cold voice went on, unperturbed, “Do you think you are able to perform a Memory Charm, dear Bella?”
 
 Bellatrix paused, and then said, hesitantly, “I think so, my Lord.”
 
@@ -297,7 +297,7 @@ That ought to have been *impossible.*
 
 It chilled her blood, contemplating that. It was like…
 
-Amelia took a deep breath, and spoke once more, in a voice of steel command. “And when you catch them, make bloody sure they’re the real criminals and not our own people forced to take Polyjuice. Anyone behaves oddly, check them for the Imperius Curse. Keep each other in sight at all times. Don’t assume an Auror uniform is friendly if you don’t recognize the face.” She turned to the communications specialist. “Tell the broomsticks. If one of the brooms peels off for no reason, *half* of them are to hunt it down while the *rest* keep patrolling. And change the harmonics on everything changeable, they may have stolen our keys.” Then back to the rest of the room. “No Auror is above suspicion unless they have no family left to threaten.”
+Amelia took a deep breath, and spoke once more, in a voice of steel command. “And when you catch them, make bloody sure they’re the real criminals and not our own people forced to take Polyjuice. Anyone behaves oddly, check them for the Imperius Curse. Keep each other in sight at all times. Don’t assume an Auror uniform is friendly if you don’t recognise the face.” She turned to the communications specialist. “Tell the broomsticks. If one of the brooms peels off for no reason, *half* of them are to hunt it down while the *rest* keep patrolling. And change the harmonics on everything changeable, they may have stolen our keys.” Then back to the rest of the room. “No Auror is above suspicion unless they have no family left to threaten.”
 
 She saw it, the cold looks that came over the older faces, saw some of the younger Aurors flinch, and knew that they understood.
 
@@ -309,7 +309,7 @@ But she said it out loud, just to be sure.
 
 Harry walked in silence through the gas-lit grey corridor, invisible beside Bellatrix and the silver shape following them, trying to think of a better plan.
 
-At first, when he’d realized that the Aurors probably knew already, and that moreover, Professor Quirrell wasn’t waking up…
+At first, when he’d realised that the Aurors probably knew already, and that moreover, Professor Quirrell wasn’t waking up…
 
 His thoughts *had* frozen up there, for a second.
 
