--- a/056.md
+++ b/056.md
@@ -194,7 +194,7 @@ It was strange, to feel himself split in two like this, the track of his thought
 
 The Patronus brightened again, the world spun around Harry or it was his own mind that was spinning?
 
-*Take my hand,* Harry thought and visualized, *come with me, and we will do this thing together…*
+*Take my hand,* Harry thought and visualised, *come with me, and we will do this thing together…*
 
 There was a lurch in Harry’s mind, like his brain had taken one step to the left, or the universe had taken one step to the right.
 
@@ -212,7 +212,7 @@ Without another word, the old wizard turned and strode back the way he came.
 
 * * * * *
 
-Harry stood straight and upright, feeling the fear wash over him and around him. Some tiny part of him might have been eroded a little by the waves of emptiness that broke continually upon his unmoving stone, but his limbs were not cold, and his magic was with him. In time those waves might corrode him and consume him, sneaking through whatever tiny part of him still cowered before Death instead of using its fear to energize itself for battle. But that doom would take time, with the shadows of Death far away and uncaring of him. The flaw, the crack, the fault-line that was in him had been repaired, and the stars blazed brightly in his mind, vast and unafraid, and brilliant in the midst of cold and darkness.
+Harry stood straight and upright, feeling the fear wash over him and around him. Some tiny part of him might have been eroded a little by the waves of emptiness that broke continually upon his unmoving stone, but his limbs were not cold, and his magic was with him. In time those waves might corrode him and consume him, sneaking through whatever tiny part of him still cowered before Death instead of using its fear to energise itself for battle. But that doom would take time, with the shadows of Death far away and uncaring of him. The flaw, the crack, the fault-line that was in him had been repaired, and the stars blazed brightly in his mind, vast and unafraid, and brilliant in the midst of cold and darkness.
 
 To anyone else’s eyes, it would have seemed that the boy stood alone in the dimly lit metal corridor, wearing that strange smile.
 
