--- a/057.md
+++ b/057.md
@@ -102,7 +102,7 @@ Harry gestured to her, the signal he had set up in advance which meant, *repeat 
 
 “Bellatrix?” Harry said, making his voice sound amused. “She escaped a while ago.”
 
-A moment later, Harry realized that he should have said that Bellatrix was among the Aurors in the top level, that would have caused more confusion—
+A moment later, Harry realised that he should have said that Bellatrix was among the Aurors in the top level, that would have caused more confusion—
 
 No, it was wrong to think of the Dementors as trickable, they were merely *things,* they were controlled only by *expectations—*
 
