--- a/058.md
+++ b/058.md
@@ -143,7 +143,7 @@ Her Auror team had gotten around three-quarters of the way down Azkaban, as had 
 
 And then there was a distant sound, like a tiny ‘tink’ noise coming from far away. Like a very loud sound coming from the second-to-lowest floor, say.
 
-Amelia looked at Dumbledore before she realized, before she managed to stop herself.
+Amelia looked at Dumbledore before she realised, before she managed to stop herself.
 
 The old wizard shrugged, gave her a small smile, said, “Since you asked it, Amelia,” and went off yet again.
 
@@ -317,7 +317,7 @@ Aurors on fast racing broomsticks angled out of the sky, diving straight down to
 
 *You see this?*
 
-From the decaying pit in the center of Azkaban, over a hundred Dementors rose into the air, appearing to some as a great mass of corpses, a flying graveyard; appearing to another as a conglomerate of absences that seemed to form one vast rip in the world as they slid upward.
+From the decaying pit in the centre of Azkaban, over a hundred Dementors rose into the air, appearing to some as a great mass of corpses, a flying graveyard; appearing to another as a conglomerate of absences that seemed to form one vast rip in the world as they slid upward.
 
 *This…*
 
