--- a/059.md
+++ b/059.md
@@ -34,7 +34,7 @@ For another thing, accelerating upward at four gravities meant that he had aroun
 
 And even if they were two and a half of the *longest* seconds in the history of Time, that wasn’t enough room to do much thinking.
 
-There was time only to see the lights of the Aurors’ curses arrowing down at him, slightly angle the broomstick to avoid them, realize that the broomstick was simply continuing on with mostly the same momentum instead of going in the direction he pointed it, and activate the wordless concepts
+There was time only to see the lights of the Aurors’ curses arrowing down at him, slightly angle the broomstick to avoid them, realise that the broomstick was simply continuing on with mostly the same momentum instead of going in the direction he pointed it, and activate the wordless concepts
 
 \**crap\**
 
@@ -42,7 +42,7 @@ and
 
 \**Newton\**
 
-whereupon Harry angled the broomstick much harder and then they started to very quickly approach the wall so he angled it back the other way and there were more lights coming down and the Dementors were sliding smoothly up toward them along with some kind of giant winged creature of white-golden flame so Harry wrenched the broomstick back toward the sky but now he was still sliding toward another wall so he tilted the broom slightly and he stopped approaching but he was too close so he tilted it again and then the distant Aurors on their broomsticks weren’t very distant at all and he was going to crash into that woman so he spun his broomstick straight away from her and then in another instant he realized his rocket was an extremely powerful flamethrower and in a fraction of a second it would be pointing directly at the Auror so he spun the broomstick sideways as he kept going up and he couldn’t remember if it was pointing at any Aurors now but at least it wasn’t pointing at *her*
+whereupon Harry angled the broomstick much harder and then they started to very quickly approach the wall so he angled it back the other way and there were more lights coming down and the Dementors were sliding smoothly up toward them along with some kind of giant winged creature of white-golden flame so Harry wrenched the broomstick back toward the sky but now he was still sliding toward another wall so he tilted the broom slightly and he stopped approaching but he was too close so he tilted it again and then the distant Aurors on their broomsticks weren’t very distant at all and he was going to crash into that woman so he spun his broomstick straight away from her and then in another instant he realised his rocket was an extremely powerful flamethrower and in a fraction of a second it would be pointing directly at the Auror so he spun the broomstick sideways as he kept going up and he couldn’t remember if it was pointing at any Aurors now but at least it wasn’t pointing at *her*
 
 Harry missed another Auror by about a meter, zipping past him on a sideways-pointed flamethrower moving upward at, Harry would later guess, around 300 kilometres per hour.
 
@@ -306,9 +306,9 @@ The Defence Professor reached again into his robes and tossed the witch a bag th
 
 Then she stood up, and the pale skeletal woman floated off the ground beside her. “I’m heading back,” said the witch. “I can’t start my work here.”
 
-“Wait,” said the Defence Professor, and with a gesture retrieved his wand from Bellatrix’s hand and harness. Then his hand pointed the wand at Bellatrix, and moved in a small circular gesture, accompanied by a quiet, *“Obliviate*.”
+“Wait,” said the Defence Professor, and with a gesture retrieved his wand from Bellatrix’s hand and harness. Then his hand pointed the wand at Bellatrix, and moved in a small circular gesture, accompanied by a quiet, *“Obliviate.”*
 
-*“That’s it*,” snapped the witch, “I’m taking her out of here before anyone does her any more damage—” One arm came around to hug the bony form of Bellatrix Black to her side, and they both disappeared with the loud POP! of Apparition.
+*“That’s it,”* snapped the witch, “I’m taking her out of here before anyone does her any more damage—” One arm came around to hug the bony form of Bellatrix Black to her side, and they both disappeared with the loud POP! of Apparition.
 
 And there was silence in that lumpy place, but for the gentle rush of the passing waves, and a little breath of wind.
 
