--- a/060.md
+++ b/060.md
@@ -39,7 +39,7 @@ A faint smile twitched on the Defence Professor’s lips. “You know, Mr. Potte
 
 “I don’t understand,” Harry said, his voice was shaking, he’d read about the classic experiment on the psychology of prisons, the ordinary college students who had turned sadistic as soon as they were assigned the role of prison guards; only now he realised that the experiment hadn’t examined the right question, the one most important question, they hadn’t looked at the key people, not the prison guards but *everyone else,* “I really don’t understand, Professor Quirrell, how can people just stand by and let this happen, *why* is the country of magical Britain *doing this*—” Harry’s voice stopped.
 
-The Defence Professor’s eyes appeared to be the same colour as always, in the pale blue light, for that light was the same color as Quirinus Quirrell’s irises, those never-thawing chips of ice. “Welcome, Mr. Potter, to your first encounter with the realities of politics. What do the wretched creatures in Azkaban have to offer any faction? Who would benefit from aiding them? A politician who openly sided with them would associate themselves with criminals, with weakness, with distasteful things that people would rather not think about. Alternatively, the politician could demonstrate their might and cruelty by calling for longer sentences; to make a display of strength requires a victim to crush beneath you, after all. And the populace applauds, for it is their instinct to back the winner.” A coldly amused laugh. “You see, Mr. Potter, no one ever quite believes that *they* will go to Azkaban, so they see no harm in it for themselves. As for what they inflict on others… I suppose you were once told that people care about that sort of thing? It is a lie, Mr. Potter, people don’t care in the slightest, and if you had not led a vastly sheltered childhood you would have noticed that long ago. Console yourself with this: those now prisoner in Azkaban voted for the same Ministers of Magic who pledged to move their cells closer to the Dementors. I admit, Mr. Potter, that I see little hope for democracy as an effective form of government, but I admire the poetry of how it makes its victims complicit in their own destruction.”
+The Defence Professor’s eyes appeared to be the same colour as always, in the pale blue light, for that light was the same colour as Quirinus Quirrell’s irises, those never-thawing chips of ice. “Welcome, Mr. Potter, to your first encounter with the realities of politics. What do the wretched creatures in Azkaban have to offer any faction? Who would benefit from aiding them? A politician who openly sided with them would associate themselves with criminals, with weakness, with distasteful things that people would rather not think about. Alternatively, the politician could demonstrate their might and cruelty by calling for longer sentences; to make a display of strength requires a victim to crush beneath you, after all. And the populace applauds, for it is their instinct to back the winner.” A coldly amused laugh. “You see, Mr. Potter, no one ever quite believes that *they* will go to Azkaban, so they see no harm in it for themselves. As for what they inflict on others… I suppose you were once told that people care about that sort of thing? It is a lie, Mr. Potter, people don’t care in the slightest, and if you had not led a vastly sheltered childhood you would have noticed that long ago. Console yourself with this: those now prisoner in Azkaban voted for the same Ministers of Magic who pledged to move their cells closer to the Dementors. I admit, Mr. Potter, that I see little hope for democracy as an effective form of government, but I admire the poetry of how it makes its victims complicit in their own destruction.”
 
 Harry’s recently cohered self was threatening to shatter into fragments again, the words falling like hammerstrikes on his consciousness, driving him back, step by step, over the precipice where lurked some vast abyss; and he was trying to find something to save himself, some clever retort that would refute the words, but it did not come.
 
