--- a/086.md
+++ b/086.md
@@ -5,7 +5,7 @@
 
 (International news headlines of April 7th, 1992:)
 
-#### *Toronto Magical Tribune:*
+##### *Toronto Magical Tribune:*
 
 ENTIRE BRITISH WIZENGAMOT  
 REPORTS SEEING ‘BOY-WHO-LIVED’  
@@ -17,7 +17,7 @@ EXPERT ON MAGICAL CREATURES:
 FRANCE, GERMANY ACCUSE BRITAIN  
 OF MAKING THE WHOLE THING UP
 
-#### *New Zealand Spellcrafter’s Diurnal Notice:*
+##### *New Zealand Spellcrafter’s Diurnal Notice:*
 
 WHAT DROVE BRITISH LEGISLATURE INSANE?  
 COULD OUR GOVERNMENT BE NEXT?
@@ -25,22 +25,24 @@ COULD OUR GOVERNMENT BE NEXT?
 EXPERTS LIST TOP 28 REASONS  
 TO BELIEVE IT’S ALREADY HAPPENED
 
-#### *American Mage:*
+##### *American Mage:*
 
 WEREWOLF CLAN TO BECOME  
 FIRST INHABITANTS OF WYOMING
 
-*The Quibbler:*
+##### *The Quibbler:*
 
 MALFOY FLEES HOGWARTS  
 AS VEELA POWERS AWAKEN
 
-*Daily Prophet:*
+##### *Daily Prophet:*
 
 LEGAL TRICKS FREE  
 “MAD MUGGLEBORN”  
 AS POTTER THREATENS MINISTRY  
 WITH ATTACK ON AZKABAN
+
+* * * *
 
 *Hypothesis: Voldemort*  
 *(April 8th, 1992, 7:22pm)*
