--- a/008.md
+++ b/008.md
@@ -37,7 +37,7 @@ Hermione opened her mouth to reply to this, but then she couldn’t think of any
 
 The imputation that this boy thought she was *scared* of him made her hand send the door sliding shut, jamming it into the wall with unnecessary force. She spun around and saw a young face with bright, laughing green eyes, and an angry red-dark scar set into his forehead that reminded her of something in the back of her mind but right now she had more important things to think about. “I didn’t say I was Hermione Granger!”
 
-“*I* didn’t say you *said* you were Hermione Granger, I just said you were Hermione Granger. If you’re asking how I know, it’s because I know everything. Good evening ladies and gentlemen, my name is Harry James Potter-Evans-Verres or Harry Potter for short, I know that probably doesn’t mean anything to *you* for a change—”
+*“I* didn’t say you *said* you were Hermione Granger, I just said you were Hermione Granger. If you’re asking how I know, it’s because I know everything. Good evening ladies and gentlemen, my name is Harry James Potter-Evans-Verres or Harry Potter for short, I know that probably doesn’t mean anything to *you* for a change—”
 
 Hermione’s mind finally made the connection. The scar on his forehead, the shape of a lightning bolt. “Harry Potter! You’re in *Modern Magical History* and *The Rise and Fall of the Dark Arts* and *Great Wizarding Events of the Twentieth Century.*” It was actually the very first time in her whole life that she’d *met* someone from inside a *book,* and it was a rather odd feeling.
 
@@ -51,7 +51,7 @@ Hermione Granger’s mind flashed back, she hadn’t realised she would be teste
 
 The boy’s mouth was hanging open. “Were you told to wait for Harry Potter on the train to Hogwarts, or something like that?”
 
-“No,” Hermione said. “Who told you about *me?* ”
+“No,” Hermione said. “Who told you about *me?”*
 
 “Professor McGonagall and I believe I see why. Do you have an eidetic memory, Hermione?”
 
@@ -91,7 +91,7 @@ The boy looked at her in surprise, as though he’d been expecting some other an
 
 That sounded a bit more interesting. “And?”
 
-The boy stared at her incredulously. “*And?* That’s not *enough?* ”
+The boy stared at her incredulously. *“And?* That’s not *enough?”*
 
 “And what do you want from me?” said Hermione.
 
@@ -115,7 +115,7 @@ It came just as Hermione was in the middle of swallowing, and she choked and cou
 
 Onto her brand new, never-worn witch’s robes, on the very first day of school.
 
-Hermione actually screamed. It was a high-pitched sound that sounded like an air raid siren in the closed compartment. “*Eek! My clothes!* ”
+Hermione actually screamed. It was a high-pitched sound that sounded like an air raid siren in the closed compartment. *“Eek! My clothes!”*
 
 “Don’t panic!” said the boy. “I can fix it for you. Just watch!” He raised a hand and snapped his fingers.
 
@@ -133,7 +133,7 @@ She rose hastily to her feet. “I, I, I need to go the toilet, wait here all ri
 
 The boy’s smile faded. “It was just a trick, Hermione. I’m sorry, I didn’t mean to scare you.”
 
-Her hand halted on the door handle. “A *trick?* ”
+Her hand halted on the door handle. “A *trick?”*
 
 “Yes,” said the boy. “You asked me to demonstrate my intelligence. So I did something apparently impossible, which is always a good way to show off. I can’t *really* do anything just by snapping my fingers.” The boy paused. “At least I don’t *think* I can, I’ve never actually tested it experimentally.” The boy raised his hand and snapped his fingers again. “Nope, no banana.”
 
@@ -302,7 +302,7 @@ The boy looked like he might faint with gratitude.
 
 “Hold on,” came the voice of the *other* boy—Harry Potter. “I’m not sure that’s the best way to do it.”
 
-At this Neville looked like he might cry, and Hermione swung around, angered. If Harry Potter was the sort of person who’d abandon a little boy just because he didn’t want to be interrupted… “What? Why *not?* ”
+At this Neville looked like he might cry, and Hermione swung around, angered. If Harry Potter was the sort of person who’d abandon a little boy just because he didn’t want to be interrupted… “What? Why *not?”*
 
 “Well,” said Harry Potter, “It’s going to take a while to check the whole train by hand, and we might miss the toad anyway, and if we didn’t find it by the time we’re at Hogwarts, he’d be in trouble. So what would make a lot more sense is if he went directly to the front carriage, where the prefects are, and asked a prefect for help. That was the first thing I did when I was looking for you, Hermione, although they didn’t actually know. But they might have spells or magic items that would make it a lot easier to find a toad. We’re only first-years.”
 
@@ -310,13 +310,13 @@ That… *did* make a lot of sense.
 
 “Do you think you can make it to the prefects’ carriage on your own?” asked Harry Potter. “I’ve sort of got reasons for not wanting to show my face too much.”
 
-Suddenly Neville gasped and took a step back. “I remember that voice! You’re one of the Lords of Chaos! *You’re the one who gave me chocolate!* ”
+Suddenly Neville gasped and took a step back. “I remember that voice! You’re one of the Lords of Chaos! *You’re the one who gave me chocolate!”*
 
 What? What what *what?*
 
-Harry Potter turned his head from the window and rose dramatically. “I *never!* ” he said, voice full of indignation. “Do I look like the sort of villain who would give sweets to a child?”
+Harry Potter turned his head from the window and rose dramatically. “I *never!”* he said, voice full of indignation. “Do I look like the sort of villain who would give sweets to a child?”
 
-Neville’s eyes widened. “*You’re* Harry Potter? *The* Harry Potter? *You?* ”
+Neville’s eyes widened. *“You’re* Harry Potter? *The* Harry Potter? *You?”*
 
 “No, just *a* Harry Potter, there are three of me on this train—”
 
@@ -338,11 +338,11 @@ She didn’t like at all where this was going.
 
 Okay, she *hadn’t* guessed right about where this was going.
 
-The burning fire of indignation that was one of Hermione’s primary engines sputtered into life, even though part of her *did* sort of see what they’d been trying to do. “That’s awful! *You’re* awful! That poor boy! What you did was *mean!* ”
+The burning fire of indignation that was one of Hermione’s primary engines sputtered into life, even though part of her *did* sort of see what they’d been trying to do. “That’s awful! *You’re* awful! That poor boy! What you did was *mean!”*
 
 “I think the word you’re looking for is *enjoyable,* and in any case you’re asking the wrong question. The question is, did it do more good than harm, or more harm than good? If you have any arguments to contribute to *that* question I’m glad to hear them, but I won’t entertain any other criticisms until that one is settled. I certainly agree that what I did *looks* all terrible and bullying and mean, since it involves a scared little boy and so on, but that’s hardly the key issue now is it? That’s called *consequentialism,* by the way, it means that whether an act is right or wrong isn’t determined by whether it *looks* bad, or mean, or anything like that, the only question is how it will turn out in the end—what are the consequences.”
 
-Hermione opened her mouth to say something utterly *searing* but unfortunately she seemed to have neglected the part where she thought of something to say before opening her mouth. All she could come up with was, “What if he has *nightmares?* ”
+Hermione opened her mouth to say something utterly *searing* but unfortunately she seemed to have neglected the part where she thought of something to say before opening her mouth. All she could come up with was, “What if he has *nightmares?”*
 
 “Honestly, I don’t think he needed our help to have nightmares, and if he has nightmares about *this* instead, then it’ll be nightmares involving horrible monsters who give you chocolate and that was sort of the whole *point*.”
 
@@ -362,13 +362,13 @@ The Boy-Who-Lived’s face changed. His lips set in a thin line. His voice, when
 
 “N-no, his badge was r-red and gold.”
 
-“*Red and gold!* ” burst out Hermione. “But those are *Gryffindor’s* colours!”
+*“Red and gold!”* burst out Hermione. “But those are *Gryffindor’s* colours!”
 
 Harry Potter *hissed* at that, a frightening sort of sound that could have come from a live snake and made both her and Neville flinch. “I *suppose,”* Harry Potter spat, “that finding some first-year’s toad isn’t *heroic* enough to be worthy of a *Gryffindor* prefect. Come on, Neville, *I’ll* come with you this time, we’ll see if the Boy-Who-Lived gets more attention. First we’ll find a prefect who ought to know a spell, and if that doesn’t work, we’ll find a prefect who isn’t afraid of getting their hands dirty, and if *that* doesn’t work, I’ll start recruiting my fans and if we have to we’ll take apart the whole train screw by screw.”
 
 The Boy-Who-Lived stood up and grabbed Neville’s hand in his, and Hermione realised with a sudden brain hiccough that they were nearly the same size, even though some part of her had insisted that Harry Potter was a foot taller than that, and Neville at least six inches shorter.
 
-“*Stay!* ” Harry Potter snapped at her—no, wait, at his *trunk*—and he closed the door behind him firmly as he left.
+*“Stay!”* Harry Potter snapped at her—no, wait, at his *trunk*—and he closed the door behind him firmly as he left.
 
 She probably should have gone with them, but in just a brief moment Harry Potter had turned so scary that she was actually rather glad she hadn’t thought to suggest it.
 
