--- a/014.md
+++ b/014.md
@@ -135,7 +135,7 @@ McGonagall’s lips were twitching in that way she had when she was trying not t
 
 “Oh, good, very good, that. And if someone bumps into me the Time-Turner will *not* break and will *not* trap the whole castle of Hogwarts in an endlessly repeating loop of Thursdays.”
 
-“Well, they *can* be fragile…” said McGonagall. “And I do think I’ve heard about strange things happening if they’re broken. But nothing like *that!* "
+“Well, they *can* be fragile…” said McGonagall. “And I do think I’ve heard about strange things happening if they’re broken. But nothing like *that!”*
 
 “Perhaps,” Harry said when he could speak again, “you ought to provide your time machines with some sort of *protective shell*, rather than *leaving the glass exposed*, so as to *prevent that from happening*.”
 
@@ -143,7 +143,7 @@ McGonagall looked quite struck. “That’s an excellent idea, Mr. Potter. I sha
 
 *That’s it, it’s official now, they’ve ratified it in Parliament, everyone in the wizarding world is completely stupid.*
 
-“And while I hate to get all *PHILOSOPHICAL,*” Harry desperately tried to lower his voice to something under a shriek, “has anyone thought about the *IMPLICATIONS* of going back six hours and doing something that changes time which would pretty much *DELETE ALL THE PEOPLE AFFECTED* and *REPLACE THEM WITH DIFFERENT VERSIONS—*"
+“And while I hate to get all *PHILOSOPHICAL,*” Harry desperately tried to lower his voice to something under a shriek, “has anyone thought about the *IMPLICATIONS* of going back six hours and doing something that changes time which would pretty much *DELETE ALL THE PEOPLE AFFECTED* and *REPLACE THEM WITH DIFFERENT VERSIONS—*”
 
 “Oh, you can’t *change* time!” Professor McGonagall interrupted. “Good heavens, Mr. Potter, do you think these would be allowed students if *that* was possible? What if someone tried to change their test scores?”
 
@@ -247,7 +247,7 @@ Terry Boot scowled at Harry. “You’d better not be planning to go through any
 
 Harry held up one hand. “I swear that I intend to do nothing of the sort to any of your things, that I only intend to access objects that I myself own, that I have no pranking or otherwise questionable intentions towards any of you, and that I do not anticipate those intentions changing before I get to breakfast in the Great Hall.”
 
-Terry frowned. “Wait, is that—"
+Terry frowned. “Wait, is that—”
 
 “Don’t worry,” said Penelope Clearwater, who was there to guide them. “There were no loopholes. Well-worded, Potter, you should be a lawyer.”
 
