--- a/015.md
+++ b/015.md
@@ -1,6 +1,6 @@
 ###### Love as thou Rowling.
 
-> Today’s historical tidbit: The ancient Hebrews considered the boundary of a day to be sunset rather than dawn, so they said “evening and morning" not “morning and evening". (And as many reviewers noted, modern Jewish halacha asserts the same.)
+> Today’s historical tidbit: The ancient Hebrews considered the boundary of a day to be sunset rather than dawn, so they said “evening and morning” not “morning and evening”. (And as many reviewers noted, modern Jewish halacha asserts the same.)
 
 # Chapter 15
 ## Conscientiousness
@@ -113,7 +113,7 @@ Professor McGonagall leaned forwards, her face very hard. “You will absolutely
 
 “And *above all*,” said Professor McGonagall, “you will not Transfigure any living subject, *especially yourselves.* It will make you very sick and possibly dead, depending on how you Transfigure yourself and how long you maintain the change.” Professor McGonagall paused. “Mr. Potter is currently holding up his hand because he has seen an Animagus transformation—specifically, a human transforming into a cat and back again. But an Animagus transformation is not *free* Transfiguration.”
 
-Professor McGonagall took a small piece of wood out of her pocket. With a tap of her wand it became a glass ball. Then she said “ *Crystferrium!* " and the glass ball became a steel ball. She tapped it with her wand one last time and the steel ball became a piece of wood once more. *“Crystferrium* transforms a subject of solid glass into a similarly shaped target of solid steel. It cannot do the reverse, nor can it transform a desk into a pig. The most general form of Transfiguration—free Transfiguration, which you will be learning here—is capable of transforming any subject into any target, at least so far as physical form is concerned. For this reason, free Transfiguration must be done wordlessly. Using Charms would require different words for every different transformation between subject and target.”
+Professor McGonagall took a small piece of wood out of her pocket. With a tap of her wand it became a glass ball. Then she said *“Crystferrium!”* and the glass ball became a steel ball. She tapped it with her wand one last time and the steel ball became a piece of wood once more. *“Crystferrium* transforms a subject of solid glass into a similarly shaped target of solid steel. It cannot do the reverse, nor can it transform a desk into a pig. The most general form of Transfiguration—free Transfiguration, which you will be learning here—is capable of transforming any subject into any target, at least so far as physical form is concerned. For this reason, free Transfiguration must be done wordlessly. Using Charms would require different words for every different transformation between subject and target.”
 
 Professor McGonagall gave her students a sharp look. *“Some* teachers begin with Transfiguration Charms and move on to free Transfiguration afterwards. Yes, that would be much easier in the beginning. But it can set you in a poor mold which impairs your abilities later. Here you will learn free Transfiguration from the *very start*, which requires that you cast the spell wordlessly, by holding the subject form, the target form, and the transformation within your own mind.”
 
@@ -189,7 +189,7 @@ Harry’s mouth snapped shut. He sent his best Death Glare at McGonagall but she
 
 “Yes, definitely an announcement at dinner,” Professor McGonagall mused. “But it wouldn’t do to offend the Slytherins, so the announcement should be brief. Just the number of points and the fact of the record… and if anyone comes to you for help with their schoolwork and is disappointed that you haven’t even started reading your textbooks, you can always refer them to Miss Granger.”
 
-*“Professor!* " said Hermione in a rather high-pitched voice.
+*“Professor!”* said Hermione in a rather high-pitched voice.
 
 Professor McGonagall ignored her. “My, I wonder how long it will take before Miss Granger does something deserving of a dinnertime announcement? I look forward to seeing it, whatever it may be.”
 
@@ -215,4 +215,4 @@ There was a slight pause.
 
 “2:47PM on Saturday it is, then. I’m sure I’ll find the time somewhere.”
 
-And there was evening and there was morning, the first day. 
+And there was evening and there was morning, the first day.
