--- a/020.md
+++ b/020.md
@@ -5,7 +5,7 @@
 
 * * * * *
 
-Harry stared up at the gray ceiling of the small room, from where he lay on the portable yet soft bed that had been placed there. He’d eaten quite a lot of Professor Quirrell’s snacks—intricate confections of chocolate and other substances, dusted with sparkling sprinkles and jeweled with tiny sugar gems, looking highly expensive and proving, in fact, to be quite tasty. Harry hadn’t felt the least bit guilty about it either, *this* he had *earned*.
+Harry stared up at the grey ceiling of the small room, from where he lay on the portable yet soft bed that had been placed there. He’d eaten quite a lot of Professor Quirrell’s snacks—intricate confections of chocolate and other substances, dusted with sparkling sprinkles and jewelled with tiny sugar gems, looking highly expensive and proving, in fact, to be quite tasty. Harry hadn’t felt the least bit guilty about it either, *this* he had *earned*.
 
 He hadn’t tried to sleep. Harry had a feeling that he wouldn’t like what happened when he closed his eyes.
 
@@ -45,11 +45,11 @@ They walked across the now-deserted stage to Professor Quirrell’s desk, which 
 
 Professor Quirrell looked at Harry. “Mr. Potter,” he said solemnly, with only a slight grin, “a word of advice. There is such a thing as a performance which is too perfect. Real people who have just been beaten and humiliated for fifteen minutes do not stand up and graciously forgive their enemies. It is the sort of thing you do when you’re trying to *convince* everyone you’re not Dark, not—”
 
-“*I can’t believe this! You can’t have every possible observation confirm your theory!* ”
+*“I can’t believe this! You can’t have every possible observation confirm your theory!”*
 
 “And that was a *trifle* too much indignation.”
 
-“*What on Earth do I have to do to convince you?* ”
+*“What on Earth do I have to do to convince you?”*
 
 “To convince me that you harbor no ambitions of becoming a Dark Lord?” said Professor Quirrell, now looking outright amused. “I suppose you could just raise your right hand.”
 
@@ -97,7 +97,7 @@ Harry waited in silence for a full minute. He used that time to stand up, which 
 
 “And needs to be trained, yes.” That strange expression was still on Professor Quirrell’s face. “Mr. Potter, if you truly do not wish to be the next Dark Lord, then what was the ambition which the Sorting Hat tried to convince you to abandon, the ambition for which you were Sorted into Slytherin?”
 
-“I was Sorted into *Ravenclaw!* ”
+“I was Sorted into *Ravenclaw!”*
 
 “Mr. Potter,” said Professor Quirrell, now with a much more usual-looking dry smile, “I know you are accustomed to everyone around you being a fool, but please do not mistake me for one of them. The likelihood that the Sorting Hat would play its first prank in eight hundred years while it was upon your head is so small as to not be worth considering. I suppose it is barely possible that you snapped your fingers and invented some simple and clever way to defeat the anti-tampering spells upon the Hat, though I myself can think of no such method. But by far the most probable explanation is that Dumbledore decided he was not happy with the Hat’s choice for the Boy-Who-Lived. This is evident to anyone with the tiniest smidgin of common sense, so your secret is safe at Hogwarts.”
 
@@ -111,7 +111,7 @@ Harry wasn’t a fool either. “Can I consider you to have said yes?”
 
 “Very good, Mr. Potter. You may indeed so consider.”
 
-“*Professor Quirrell—*”
+*“Professor Quirrell—*”
 
 “I won’t repeat what you’re about to say,” Professor Quirrell said, smiling.
 
@@ -187,11 +187,11 @@ Professor Quirrell was looking at Harry as if he’d just turned into a cat.
 
 Harry nodded.
 
-“A *scientist?* ” repeated Professor Quirrell.
+“A *scientist?”* repeated Professor Quirrell.
 
-“Yes,” Harry said. “I shall achieve my objectives through the power… of *Science!* ”
+“Yes,” Harry said. “I shall achieve my objectives through the power… of *Science!”*
 
-“A *scientist!* ” said Professor Quirrell. There was genuine indignation on his face, and his voice had grown stronger and sharper. “You could be the best of all my students! The greatest fighting wizard to come out of Hogwarts in five decades! I cannot picture you wasting your days in a white lab coat doing pointless things to rats!”
+“A *scientist!”* said Professor Quirrell. There was genuine indignation on his face, and his voice had grown stronger and sharper. “You could be the best of all my students! The greatest fighting wizard to come out of Hogwarts in five decades! I cannot picture you wasting your days in a white lab coat doing pointless things to rats!”
 
 “Hey!” said Harry. “There’s more to science than that! Not that there’s anything *wrong* with experimenting on rats, of course. But science *is* how you go about understanding and controlling the universe—”
 
@@ -203,7 +203,7 @@ Harry nodded.
 
 Harry was feeling a bit lost here. “What are we talking about here, nuclear weapons?”
 
-“*Yes*, nuclear weapons!” Professor Quirrell was almost shouting now. “Even He-Who-Must-Not-Be-Named never used those, perhaps because he didn’t want to rule over a heap of ash! They never should have been made! And it will only get worse with time!” Professor Quirrell was standing up straight instead of leaning on his desk. “There are gates you do not open, there are seals you do not breach! The fools who can’t resist meddling are killed by the lesser perils early on, and the survivors all know that there are secrets you *do not share* with anyone who lacks the intelligence and the discipline to discover them for themselves! Every powerful wizard knows that! Even the most terrible Dark Wizards know that! And those idiot Muggles can’t seem to figure it out! The eager little fools who discovered the secret of nuclear weapons didn’t keep it to themselves, they told their *fool* politicians and now *we* must live under the constant threat of annihilation!”
+*“Yes*, nuclear weapons!” Professor Quirrell was almost shouting now. “Even He-Who-Must-Not-Be-Named never used those, perhaps because he didn’t want to rule over a heap of ash! They never should have been made! And it will only get worse with time!” Professor Quirrell was standing up straight instead of leaning on his desk. “There are gates you do not open, there are seals you do not breach! The fools who can’t resist meddling are killed by the lesser perils early on, and the survivors all know that there are secrets you *do not share* with anyone who lacks the intelligence and the discipline to discover them for themselves! Every powerful wizard knows that! Even the most terrible Dark Wizards know that! And those idiot Muggles can’t seem to figure it out! The eager little fools who discovered the secret of nuclear weapons didn’t keep it to themselves, they told their *fool* politicians and now *we* must live under the constant threat of annihilation!”
 
 This was a rather different way of looking at things than Harry had grown up with. It had never occurred to him that nuclear physicists should have formed a conspiracy of silence to keep the secret of nuclear weapons from anyone not smart enough to be a nuclear physicist. The thought was intriguing, if nothing else. Would they have had secret passwords? Would they have had masks?
 
@@ -265,7 +265,7 @@ And then the stars vanished, and the classroom returned.
 
 Then the heavy oaken doors of the classroom blasted off their hinges and skittered across the marble floor with a high-pitched shriek.
 
-“*QUIRINUS! HOW DARE YOU!* ”
+*“QUIRINUS! HOW DARE YOU!”*
 
 Like a vast thundercloud, an ancient and powerful wizard blew into the room, a look of such incandescent rage upon his face that the stern look he had earlier turned upon Harry seemed like nothing.
 
@@ -273,7 +273,7 @@ There was a wrench of disorientation in Harry’s mind as the part that wanted t
 
 *None* of Harry’s facets were happy about having their star-gazing interrupted. “Headmaster Albus Percival—” Harry started to say in icy tones.
 
-*WHAM.* Professor Quirrell’s hand came down hard upon his desk. “*Mr. Potter!* ” barked Professor Quirrell. “This is the *Headmaster of Hogwarts* and you are a mere student! You will address him appropriately!”
+*WHAM.* Professor Quirrell’s hand came down hard upon his desk. *“Mr. Potter!”* barked Professor Quirrell. “This is the *Headmaster of Hogwarts* and you are a mere student! You will address him appropriately!”
 
 Harry looked at Professor Quirrell.
 
@@ -289,11 +289,11 @@ Slowly, Dumbledore’s expression changed from something that would vaporize ste
 
 Harry nodded. “He knew exactly what was wrong with me and he showed me how to fix it.”
 
-“Harry, *what are you talking about?* ”
+“Harry, *what are you talking about?”*
 
 “I was teaching him how to lose,” Professor Quirrell said dryly. “It’s an important life skill.”
 
-It was apparent that Dumbledore still didn’t understand, but his voice had lowered in register. “Harry…” he said slowly. “If there’s any threat the Defense Professor has offered you to prevent you from complaining—”
+It was apparent that Dumbledore still didn’t understand, but his voice had lowered in register. “Harry…” he said slowly. “If there’s any threat the Defence Professor has offered you to prevent you from complaining—”
 
 *You lunatic, after today of all days do you really think I—*
 
@@ -315,7 +315,7 @@ The old wizard straightened up. “Never mind, then. I think you’re fine.”
 
 Professor Quirrell coughed, loudly and deliberately. Harry looked at the professor, and saw that Professor Quirrell was staring sharply at Dumbledore.
 
-“*Ah-hem!* ” Professor Quirrell said again.
+*“Ah-hem!”* Professor Quirrell said again.
 
 Dumbledore and Professor Quirrell locked eyes, and something seemed to pass between them.
 
@@ -327,13 +327,13 @@ Dumbledore sighed and turned back to Harry. “I apologize for invading your men
 
 The confusion lasted just exactly as long as it took Harry to understand what had just happened.
 
-“*You—!* ”
+*“You—!”*
 
 “Gently, Mr. Potter,” said Professor Quirrell. His face was hard, however, as he stared at Dumbledore.
 
 “Legilimency is sometimes mistaken for common sense,” said the Headmaster. “But it leaves traces which another skillful Legilimens can detect. That was all I looked for, Mr. Potter, and I asked you an irrelevant question to ensure you wouldn’t think about anything important while I looked.”
 
-“*You should have asked first!* ”
+*“You should have asked first!”*
 
 Professor Quirrell shook his head. “No, Mr. Potter, the Headmaster had some justification for his concerns, and had he asked for permission you would have thought of exactly those things you did not wish him to see.” Professor Quirrell’s voice grew sharper. “I am rather more concerned, Headmaster, that you saw no need to tell him afterward!”
 
@@ -363,11 +363,11 @@ Dumbledore looked at Harry.
 
 “So that’s how it is to be…” the old wizard said slowly. Something strange passed across his face. “Harry… you must realize that if you choose this man as your teacher and your friend, your first mentor, then one way or another you will lose him, and the manner in which you lose him may or may not allow you to ever get him back.”
 
-That hadn’t occurred to Harry. But there *was* that jinx on the Defense position… one which had apparently worked with perfect regularity for decades…
+That hadn’t occurred to Harry. But there *was* that jinx on the Defence position… one which had apparently worked with perfect regularity for decades…
 
 “Probably,” said Professor Quirrell quietly, “but he will have the full use of me while I last.”
 
-Dumbledore sighed. “I suppose it is economical, at least, since as the Defense Professor you’re *already* doomed in some unknown fashion.”
+Dumbledore sighed. “I suppose it is economical, at least, since as the Defence Professor you’re *already* doomed in some unknown fashion.”
 
 Harry had to work hard to suppress his expression as he realized what Dumbledore had actually been implying.
 
@@ -399,7 +399,7 @@ Harry imagined himself looking over a list of thirty-seven things not to do once
 
 “You decided that if you had to follow the *whole* list *all* the time, there wouldn’t be much point in becoming a Dark Lord in the first place,” Harry said.
 
-“*Precisely*,” said Professor Quirrell. He was grinning. “So I am going to violate rule two—which was simply ‘don’t brag’—and tell you about something I have done. I don’t see how the knowledge could do any harm. And I strongly suspect you would have figured it out anyway, once we knew each other well enough. Nonetheless… I shall have your oath never to speak of what I am about to tell.”
+*“Precisely*,” said Professor Quirrell. He was grinning. “So I am going to violate rule two—which was simply ‘don’t brag’—and tell you about something I have done. I don’t see how the knowledge could do any harm. And I strongly suspect you would have figured it out anyway, once we knew each other well enough. Nonetheless… I shall have your oath never to speak of what I am about to tell.”
 
 “You have it!” Harry had a feeling this was going to be *really* good.
 
@@ -437,7 +437,7 @@ A further thought occurred to Harry. “You didn’t add any extra information t
 
 Which made Harry rather suspicious, considering that it’d taken less than a minute for *Harry* to think of it.
 
-“Maybe you included a holographic message like in *Star Wars?* ” said Harry. “Or… hm. A portrait seems to store a whole human brain’s worth of information… you couldn’t have added any extra mass to the probe, but maybe you could’ve turned an existing part into a portrait of yourself? Or you found a volunteer dying of a terminal illness, snuck them into NASA, and cast a spell to make sure their *ghost* ended up in the plaque—”
+“Maybe you included a holographic message like in *Star Wars?”* said Harry. “Or… hm. A portrait seems to store a whole human brain’s worth of information… you couldn’t have added any extra mass to the probe, but maybe you could’ve turned an existing part into a portrait of yourself? Or you found a volunteer dying of a terminal illness, snuck them into NASA, and cast a spell to make sure their *ghost* ended up in the plaque—”
 
 “Mr. Potter,” Professor Quirrell said, his voice suddenly sharp, “a spell requiring a human death would certainly be classified by the Ministry as Dark Arts, regardless of circumstances. Students should not be heard talking about such things.”
 
@@ -445,9 +445,9 @@ And the amazing thing about the way Professor Quirrell said it was how perfectly
 
 “Got it,” Harry said. “I won’t talk with anyone else about that idea.”
 
-“Please be discreet about the whole matter, Mr. Potter,” Professor Quirrell said. “I prefer to go through my life without attracting public notice. You will find nothing in the newspapers about Quirinus Quirrell until I decided it was time for me to teach Defense at Hogwarts.”
+“Please be discreet about the whole matter, Mr. Potter,” Professor Quirrell said. “I prefer to go through my life without attracting public notice. You will find nothing in the newspapers about Quirinus Quirrell until I decided it was time for me to teach Defence at Hogwarts.”
 
-That seemed a little sad, but Harry understood. Then Harry realized the implications. “So just how much awesome stuff *have* you done that no one else knows about—”
+That seemed a little sad, but Harry understood. Then Harry realised the implications. “So just how much awesome stuff *have* you done that no one else knows about—”
 
 “Oh, some,” said Professor Quirrell. “But I think that’s quite enough for today, Mr. Potter, I confess I am feeling a bit tired—”
 
