--- a/021.md
+++ b/021.md
@@ -1,7 +1,7 @@
 ###### Rowling is whoever does Rowling’s job.
 
 # Chapter 21
-## Rationalization
+## Rationalisation
 
 * * * * *
 
@@ -17,7 +17,7 @@ She’d done better than him in every single class they’d taken. (Except for b
 
 If you were Good, you weren’t supposed to enjoy winning this much.
 
-It had started on the day of the train ride, though it had taken a while for the whirlwind to sink in. It wasn’t until later that night that Hermione had begun to realize just *how much* she’d let that boy walk all over her.
+It had started on the day of the train ride, though it had taken a while for the whirlwind to sink in. It wasn’t until later that night that Hermione had begun to realise just *how much* she’d let that boy walk all over her.
 
 Before she’d met Harry Potter she hadn’t had anyone she’d wanted to crush. If someone wasn’t doing as well as her in class, it was her job to help them, not rub it in. That was what it meant to be Good.
 
@@ -55,7 +55,7 @@ The tension was unbearable. If it had been anyone else, *anyone* else, his defea
 
 But this was Harry Potter, and you couldn’t rule out the possibility that he would, sometime in the next few seconds, raise a hand and snap his fingers.
 
-With sudden terror she realized how Harry Potter might be able to do exactly that. It would be *just like him* to have *already finished reading* the second half of the book earlier…
+With sudden terror she realised how Harry Potter might be able to do exactly that. It would be *just like him* to have *already finished reading* the second half of the book earlier…
 
 Hermione’s vision began to swim. She tried to make herself breathe, and found that she simply couldn’t.
 
@@ -69,19 +69,19 @@ Harry Potter carefully placed a bookmark into his book, closed it, and laid it a
 
 “I would like to note for the benefit of posterity,” said the Boy-Who-Lived in a clear voice, “that I had only half a book left, and that I ran into a number of unexpected delays—”
 
-“*You lost!”* shrieked Hermione. “You *did!* You *lost our contest!”*
+*“You lost!”* shrieked Hermione. “You *did!* You *lost our contest!”*
 
 There was a collective exhalation as everyone started breathing again.
 
 Harry Potter shot her a Look of Flaming Fire, but she was floating in a halo of pure white happiness and nothing could touch her.
 
-“*Do you realize what kind of week I’ve had?”* said Harry Potter. “Any lesser being would have been hard-pressed to read eight Dr. Seuss books!”
+*“Do you realise what kind of week I’ve had?”* said Harry Potter. “Any lesser being would have been hard-pressed to read eight Dr. Seuss books!”
 
-“*You* set the time limit.”
+*“You* set the time limit.”
 
-Harry’s Look of Flaming Fire grew even hotter. “I did not have any logical way of knowing I’d have to save the entire school from Professor Snape, or get beaten up in Defense class, and if I told you how I lost all the time between 5pm and dinner on Thursday you would think I was insane—”
+Harry’s Look of Flaming Fire grew even hotter. “I did not have any logical way of knowing I’d have to save the entire school from Professor Snape, or get beaten up in Defence class, and if I told you how I lost all the time between 5pm and dinner on Thursday you would think I was insane—”
 
-“Awww, it sounds like *someone* fell prey to the *planning fallacy.*”
+“Awww, it sounds like *someone* fell prey to the *planning fallacy.”*
 
 Raw shock showed on Harry Potter’s face.
 
@@ -91,7 +91,7 @@ Raw shock showed on Harry Potter’s face.
 
 “But you still lose,” said Hermione. She held a hand to her chin and looked contemplative. “Now what exactly should you lose, I wonder?”
 
-“*What?”*
+*“What?”*
 
 “You lost the bet,” Hermione explained, “so you have to pay a forfeit.”
 
@@ -99,13 +99,13 @@ Raw shock showed on Harry Potter’s face.
 
 “Really?” said Hermione Granger. She put a thoughtful look on her face. Then, as if the idea had only just then occurred to her, “We’ll take a vote, then. Everyone in Ravenclaw who thinks Harry Potter has to pay up, raise your hand!”
 
-“*What?”* shrieked Harry Potter again.
+*“What?”* shrieked Harry Potter again.
 
 He spun around and saw that he was surrounded by a sea of raised hands.
 
 And if Harry Potter had looked *more carefully*, he would have noticed that an awful lot of the onlookers seemed to be girls and that practically every female in the room had their hand raised.
 
-“Stop!” wailed Harry Potter. “You don’t know what she’s going to ask! Don’t you *realize* what she’s doing? She’s getting you to make an advance commitment now, and then the pressure of consistency will make you agree with whatever she says afterward!”
+“Stop!” wailed Harry Potter. “You don’t know what she’s going to ask! Don’t you *realise* what she’s doing? She’s getting you to make an advance commitment now, and then the pressure of consistency will make you agree with whatever she says afterward!”
 
 “Don’t worry,” said the prefect Penelope Clearwater. “If she asks for something unreasonable, we can just change our minds. Right, everyone?”
 
@@ -133,7 +133,7 @@ Draco had already heard about Harry’s loss, and the forfeit Granger had claime
 
 “I understand,” Draco said. “I’m sorry.” There was nothing else he *could* say if he wanted Harry Potter to be friends with him.
 
-“I am not asking for understanding or sorrow,” said the dark silhouette, still with that deadly calm. “But I have just spent two full hours in the presence of Hermione Granger, dressed in such clothing as was provided me, visiting such fascinating places in Hogwarts as a tiny burbling waterfall of what looked to me like snot, accompanied by a number of other girls who insisted on such helpful activities as strewing our path with Transfigured rose petals. I have been on a date, scion of Malfoy. My *first* date. *And when I call that favor due, you will pay it.*”
+“I am not asking for understanding or sorrow,” said the dark silhouette, still with that deadly calm. “But I have just spent two full hours in the presence of Hermione Granger, dressed in such clothing as was provided me, visiting such fascinating places in Hogwarts as a tiny burbling waterfall of what looked to me like snot, accompanied by a number of other girls who insisted on such helpful activities as strewing our path with Transfigured rose petals. I have been on a date, scion of Malfoy. My *first* date. *And when I call that favor due, you will pay it.”*
 
 Draco nodded solemnly. Before arriving he had taken the wise precaution of learning every available detail of Harry’s date, so that he could get all of his hysterical laughing done before their appointed meeting time, and would not commit a *faux pas* by giggling continuously until he lost consciousness.
 
@@ -143,7 +143,7 @@ Draco nodded solemnly. Before arriving he had taken the wise precaution of learn
 
 “Or if you’re seen on a second date?” Draco said, allowing just a tiny note of skepticism into his voice.
 
-“*There will be no second date,*” said the green-lit silhouette in a voice so fearsome that it sounded, not only like a Death Eater, but like Amycus Carrow that one time just before Father told him to stop it, he wasn’t the Dark Lord.
+*“There will be no second date,”* said the green-lit silhouette in a voice so fearsome that it sounded, not only like a Death Eater, but like Amycus Carrow that one time just before Father told him to stop it, he wasn’t the Dark Lord.
 
 Of course it *was* still a young boy’s high unbroken voice and when you combined that with the *actual words*, well, it just didn’t work. If Harry Potter *did* become the next Dark Lord someday, Draco would use a Pensieve to store a copy of this memory somewhere safe, and Harry Potter would never dare betray him.
 
@@ -191,7 +191,7 @@ There was a pause, as the shadowy figure stood there with its mouth open for a s
 
 “No,” said the shadowy figure, voice rising in frustration, “no, no, no! Then you get the *wrong answer* and you can’t go to the Moon that way! Nature isn’t a person, you can’t trick them into believing something else, if you try to tell the Moon it’s made of cheese you can argue for days and it won’t change the Moon! What you’re talking about is *rationalization*, like starting with a sheet of paper, moving straight down to the bottom line, using ink to write ‘and *therefore,* the Moon is made of cheese’, and then moving back up to write all sorts of clever arguments above. But either the Moon is made of cheese or it isn’t. The moment you wrote the bottom line, it was already true or already false. Whether or not the whole sheet of paper ends up with the right conclusion or the wrong conclusion is fixed the instant you write down the bottom line. If you’re trying to pick between two expensive trunks, and you like the shiny one, it doesn’t matter what clever arguments you come up with for buying it, the *real* rule you used to *choose which trunk to argue for* was ‘pick the shiny one’, and however effective that rule is at picking good trunks, that’s the kind of trunk you’ll get. Rationality *can’t* be used to argue for a fixed side, its only possible use is *deciding which side to argue*. Science isn’t for *convincing* anyone that the blood purists are right. That’s *politics!* The power of science comes from *finding out the way Nature really is that can’t be changed by arguing!* What science *can* do is tell us *how blood really works,* how wizards really inherit their powers from their parents, and whether Muggleborns are really weaker or stronger—”
 
-“*Stronger!”* said Draco. He had been trying to follow this, a puzzled frown on his face, he could see how it *sort* of made sense but it certainly wasn’t like anything he’d ever heard before. And then Harry Potter had said something Draco couldn’t possibly let pass. “You think mudbloods are *stronger?”*
+*“Stronger!”* said Draco. He had been trying to follow this, a puzzled frown on his face, he could see how it *sort* of made sense but it certainly wasn’t like anything he’d ever heard before. And then Harry Potter had said something Draco couldn’t possibly let pass. “You think mudbloods are *stronger?”*
 
 “I think nothing,” said the shadowy figure. “I know nothing. I believe nothing. My bottom line is not yet written. I will figure out how to test the magical strength of Muggleborns, and the magical strength of purebloods. If my tests tell me that Muggleborns are weaker, I will believe they are weaker. If my tests tell me that Muggleborns are stronger, I will believe they are stronger. Knowing this and other truths, I will gain some measure of power—”
 
@@ -217,7 +217,7 @@ Draco paused. He hadn’t been expecting that, he’d thought he saw the trap bu
 
 “Really.”
 
-“*Yes!* That’s the price *anyone* has to pay to become a scientist!”
+*“Yes!* That’s the price *anyone* has to pay to become a scientist!”
 
 Draco held up a hand. He had to think.
 
@@ -225,7 +225,7 @@ The shadowy, green-lit figure waited.
 
 It didn’t take long to think about, though. If you discarded all the confusing parts… then Harry Potter was planning to mess around with something that could cause a gigantic political explosion, and it would be insane to just walk away and let him do it on his own. “We’ll study blood,” said Draco.
 
-“*Excellent*,” said the figure, and smiled. “Congratulations on being willing to ask the question.”
+*“Excellent*,” said the figure, and smiled. “Congratulations on being willing to ask the question.”
 
 “Thanks,” Draco said, not quite managing to keep the irony out of his voice.
 
@@ -237,13 +237,13 @@ There was a slight pause, and then the figure nodded. “Fair point.”
 
 “Look, Harry,” said Draco without much hope, “I thought the idea was to take all the things that Muggles know, combine them with things that wizards know, and become masters of both worlds. Wouldn’t it be a lot easier to just study all the things that Muggles *already* found out, like the Moon stuff, and use *that* power—”
 
-“*No,*” said the figure with a sharp shake of his head, sending green shadows moving around his nose and eyes. His voice had turned very grim. “If you cannot learn the scientist’s art of accepting reality, then I *must not* tell you what that acceptance has discovered. It would be like a powerful wizard telling you of those gates which must not be opened, and those seals which must not be broken, before you had proven your intelligence and discipline by surviving the lesser perils.”
+*“No,”* said the figure with a sharp shake of his head, sending green shadows moving around his nose and eyes. His voice had turned very grim. “If you cannot learn the scientist’s art of accepting reality, then I *must not* tell you what that acceptance has discovered. It would be like a powerful wizard telling you of those gates which must not be opened, and those seals which must not be broken, before you had proven your intelligence and discipline by surviving the lesser perils.”
 
 A chill went down Draco’s spine and he shuddered involuntarily. He knew it had been visible even in the dim light. “All right,” said Draco. “I understand.” Father had told him that many times. When a more powerful wizard told you that you weren’t ready to know, you didn’t pry any further if you wanted to live.
 
 The figure inclined his head. “Indeed. But there is something else you should understand. The first scientists, being Muggles, lacked your traditions. In the beginning they simply did not comprehend the notion of dangerous knowledge, and thought that all things known should be spoken freely. When their searches turned dangerous, they told their politicians of things that should have stayed secret—don’t look like that, Draco, it wasn’t simple stupidity. They did have to be smart enough to uncover the secret in the first place. But they were Muggles, it was the first time they’d found anything *really* dangerous, and they didn’t *start out* with a tradition of secrecy. There was a war going on, and the scientists on one side worried that if they *didn’t* talk, the scientists of the *enemy* country would tell *their* politicians first…” The voice trailed off significantly. “They didn’t destroy the world. But it was close. And *we* are not going to repeat that mistake.”
 
-“Right,” Draco said, his voice now very firm. “*We* won’t. We’re wizards, and studying science doesn’t make us Muggles.”
+“Right,” Draco said, his voice now very firm. *“We* won’t. We’re wizards, and studying science doesn’t make us Muggles.”
 
 “As you say,” said the green-lit silhouette. “We will establish our *own* Science, a magical Science, and that Science will have smarter traditions from the very start.” The voice grew hard. “The knowledge I share with you will be taught alongside the disciplines of accepting truth, the level of this knowledge will be keyed to your progress in those disciplines, and you will share that knowledge with no one else who has not learned those disciplines. Do you accept this?”
 
@@ -275,7 +275,7 @@ There was a very short pause.
 
 “I mean, what if someone is like ‘okay, now everyone pull up their robes over their right arms’ and our guy is like ‘whoops, sorry, looks like I’m a spy’—”
 
-*“Forget I said anything,*” said Draco, sweat suddenly springing out all over his body. He needed a distraction, *fast*—“And what do we call ourselves? The Science Eaters?”
+*“Forget I said anything,”* said Draco, sweat suddenly springing out all over his body. He needed a distraction, *fast*—“And what do we call ourselves? The Science Eaters?”
 
 “No,” said the shadowy figure slowly. “That doesn’t sound right…”
 
@@ -293,7 +293,7 @@ A silent figure trudged wearily through the halls of Hogwarts in the direction o
 
 Harry had gone straight from the meeting with Draco to dinner, and stayed at dinner barely long enough to choke down a few fast gulps of food before going off to bed.
 
-It wasn’t even 7pm yet, but it was well past bedtime for Harry. He’d realized *last* night that he wouldn’t be able to use the Time-Turner on Saturday until after the book-reading contest was already over. But he could still use the Time-Turner on *Friday* night, and gain time that way. So Harry had pushed himself to stay awake until 9pm on Friday, when the protective shell opened, and then used the four hours remaining on the Time-Turner to spin back to 5pm and collapse into sleep. He’d woken up around 2am on Saturday morning, just as planned, and read for the next twelve hours straight… and it still hadn’t been enough. And now Harry would be going to sleep rather early for the next few days, until his sleep cycle caught up again.
+It wasn’t even 7pm yet, but it was well past bedtime for Harry. He’d realised *last* night that he wouldn’t be able to use the Time-Turner on Saturday until after the book-reading contest was already over. But he could still use the Time-Turner on *Friday* night, and gain time that way. So Harry had pushed himself to stay awake until 9pm on Friday, when the protective shell opened, and then used the four hours remaining on the Time-Turner to spin back to 5pm and collapse into sleep. He’d woken up around 2am on Saturday morning, just as planned, and read for the next twelve hours straight… and it still hadn’t been enough. And now Harry would be going to sleep rather early for the next few days, until his sleep cycle caught up again.
 
 The portrait on the door asked Harry some dumb riddle meant for eleven-year-olds that he answered without the words even passing through his conscious mind, and then Harry staggered up the stairs to his dorm room, changed into his pajamas and collapsed into bed.
 
@@ -313,7 +313,7 @@ Harry picked up the note and read:
 
 *So that you may find some extra time in which to study Occlumency, I have enclosed 2 Galleons, which is the price of answer sheets and homework for the first-year History of Magic class (Professor Binns having given the same tests and same assignments every year since he died). Your newfound friends the Weasley twins should be able to sell you a copy. It goes without saying that you must not get caught with it in your possession.*
 
-*Of Professor Quirrell I know little. He is a Slytherin and a Defense Professor, and that is two marks against him. Consider carefully any advice he gives you, and tell him nothing you do not wish known.*
+*Of Professor Quirrell I know little. He is a Slytherin and a Defence Professor, and that is two marks against him. Consider carefully any advice he gives you, and tell him nothing you do not wish known.*
 
 *Dumbledore only pretends to be insane. He is extremely intelligent, and if you continue to step into closets and vanish, he will certainly deduce your possession of an invisibility cloak if he has not done so already. Avoid him whenever possible, hide the Cloak of Invisibility somewhere safe (NOT your pouch) any time you cannot avoid him, and step with great care in his presence.*
 
@@ -383,9 +383,9 @@ There was a pause, as the Ravenclaw table stared at them.
 
 “That’s not right,” said someone. “Harry Potter was born on the thirty-first of Jul-”
 
-“*HE IS COMING*,” said a huge hollow voice that cut through all conversation like a sword of ice. “*THE ONE WHO WILL TEAR APART THE VERY—*”
+*“HE IS COMING*,” said a huge hollow voice that cut through all conversation like a sword of ice. *“THE ONE WHO WILL TEAR APART THE VERY—”*
 
-Dumbledore had leapt out of his throne and run straight over the Head Table and seized hold of the woman speaking those awful words, Fawkes had appeared in a flash, and all three of them vanished in a crack of fire.
+Dumbledore had leapt out of his throne and run straight over the Head Table and seised hold of the woman speaking those awful words, Fawkes had appeared in a flash, and all three of them vanished in a crack of fire.
 
 There was a shocked pause…
 
@@ -397,7 +397,7 @@ There was a shocked pause…
 
 Harry sighed.
 
-He stood up from his seat, raised his voice, and said very loudly over the conversations that were starting up, “*It’s not about me! Obviously! I’m not coming here, I’m already here!”*
+He stood up from his seat, raised his voice, and said very loudly over the conversations that were starting up, *“It’s not about me! Obviously! I’m not coming here, I’m already here!”*
 
 Harry sat back down again.
 
@@ -405,7 +405,7 @@ The people who had been looking at him turned away again.
 
 Someone else at the table said, “Then who *is* it about?”
 
-And with a dull, leaden sensation, Harry realized who *wasn’t* already at Hogwarts.
+And with a dull, leaden sensation, Harry realised who *wasn’t* already at Hogwarts.
 
 Call it a wild guess, but Harry had a feeling the undead Dark Lord would be showing up one of these days.
 
@@ -461,9 +461,9 @@ Harry stared down at the blank sheet of paper. *Let’s see…*
 
 After leaving his parents at the train station, he’d…
 
-…gotten acquainted with a boy raised by Darth Vader, become friends with the three most infamous pranksters in Hogwarts, met Hermione, then there’d been the Incident with the Sorting Hat… Monday he’d been given a time machine to treat his sleep disorder, gotten a legendary invisibility cloak from an unknown benefactor, rescued seven Hufflepuffs by staring down five scary older boys one of whom had threatened to break his finger, realized that he possessed a mysterious dark side, learned to cast *Frigideiro* in Charms class, and gotten started on his rivalry with Hermione… Tuesday had introduced Astronomy taught by Professor Aurora Sinistra who was nice, and History of Magic taught by a ghost who ought to be exorcised and replaced with a tape recorder… Wednesday, he’d been pronounced the Most Dangerous Student in the Classroom… Thursday, let’s not even think about Thursday… Friday, the Incident in Potions Class, followed by his blackmailing the Headmaster, followed by the Defense Professor having him beaten up in class, followed by the Defense Professor turning out to be the most awesome human being who still walked the face of the Earth… Saturday he’d lost a bet and gone on his first date and started redeeming Draco… and then this morning Professor Trelawney’s unheard prophecy might or might not indicate that an immortal Dark Lord was about to attack Hogwarts.
+…gotten acquainted with a boy raised by Darth Vader, become friends with the three most infamous pranksters in Hogwarts, met Hermione, then there’d been the Incident with the Sorting Hat… Monday he’d been given a time machine to treat his sleep disorder, gotten a legendary invisibility cloak from an unknown benefactor, rescued seven Hufflepuffs by staring down five scary older boys one of whom had threatened to break his finger, realised that he possessed a mysterious dark side, learned to cast *Frigideiro* in Charms class, and gotten started on his rivalry with Hermione… Tuesday had introduced Astronomy taught by Professor Aurora Sinistra who was nice, and History of Magic taught by a ghost who ought to be exorcised and replaced with a tape recorder… Wednesday, he’d been pronounced the Most Dangerous Student in the Classroom… Thursday, let’s not even think about Thursday… Friday, the Incident in Potions Class, followed by his blackmailing the Headmaster, followed by the Defence Professor having him beaten up in class, followed by the Defence Professor turning out to be the most awesome human being who still walked the face of the Earth… Saturday he’d lost a bet and gone on his first date and started redeeming Draco… and then this morning Professor Trelawney’s unheard prophecy might or might not indicate that an immortal Dark Lord was about to attack Hogwarts.
 
-Harry mentally organized his material, and started writing.
+Harry mentally organised his material, and started writing.
 
 *Dear Mum and Dad:*
 
