--- a/032.md
+++ b/032.md
@@ -1,11 +1,11 @@
 # Chapter 32
 ## Interlude: Personal Financial Management
 
-“But Headmaster,” Harry argued, some of his desperation leaking into his voice, “leaving all of my assets in one undiversified vault full of gold coins—it’s crazy, Headmaster! It’s like, I don’t know, doing Transfiguration experiments without consulting a recognized authority! You just don’t do that with money!”
+“But Headmaster,” Harry argued, some of his desperation leaking into his voice, “leaving all of my assets in one undiversified vault full of gold coins—it’s crazy, Headmaster! It’s like, I don’t know, doing Transfiguration experiments without consulting a recognised authority! You just don’t do that with money!”
 
 From the lined face of the old wizard—underneath a festive holiday hat like a catastrophic automobile collision between cars of green and red cloth—a grave, sad look peered out at Harry.
 
-“I’m sorry, Harry,” said Dumbledore, “and I do apologize, but allowing you control over your own finances would give you far too much independence of action.”
+“I’m sorry, Harry,” said Dumbledore, “and I do apologise, but allowing you control over your own finances would give you far too much independence of action.”
 
 Harry’s mouth opened and no sound came out. He was, literally, speechless.
 
