--- a/038.md
+++ b/038.md
@@ -170,7 +170,7 @@ There was a long pause, then. The grey eyes searched him.
 
 Harry met the gaze, and said nothing.
 
-Lucius raised his cane a few centimeters and struck it hard on the ground.
+Lucius raised his cane a few centimetres and struck it hard on the ground.
 
 The world vanished in a pale haze, all sounds went quiet, there was nothing in the universe but Harry and Lucius Malfoy and the snake-headed cane.
 
