--- a/046.md
+++ b/046.md
@@ -87,7 +87,7 @@ Harry shook his head, and Professor Quirrell nodded acceptance.
 
 Harry said nothing for a second while he tried to think of a reply, and then gave up when he realised he’d already answered.
 
-“Interesting…” Professor Quirrell said. “Mr. Potter, it is not out of the question that there *was* a plot at work today. Your wand ending up that close to the Dementor’s cage *could* have been an accident. Or one of the Aurors could have been Imperiused, Confunded, or Legilimized to exert an influence. Flitwick and myself should not be excluded as suspects, in your calculation. One notes that Professor Snape canceled all his classes today, and I suspect he is powerful enough to Disillusion himself; the Aurors cast detection charms early on, but they did not repeat them immediately before your turn. But most easily of all, Mr. Potter, the deed could have been plotted by Dumbledore himself; and if he *did*, why, he might also take steps in advance to cast your suspicion elsewhere.”
+“Interesting…” Professor Quirrell said. “Mr. Potter, it is not out of the question that there *was* a plot at work today. Your wand ending up that close to the Dementor’s cage *could* have been an accident. Or one of the Aurors could have been Imperiused, Confunded, or Legilimised to exert an influence. Flitwick and myself should not be excluded as suspects, in your calculation. One notes that Professor Snape canceled all his classes today, and I suspect he is powerful enough to Disillusion himself; the Aurors cast detection charms early on, but they did not repeat them immediately before your turn. But most easily of all, Mr. Potter, the deed could have been plotted by Dumbledore himself; and if he *did*, why, he might also take steps in advance to cast your suspicion elsewhere.”
 
 They walked on for a few steps.
 
@@ -159,7 +159,7 @@ Tracey’s face was a picture in stunned realisation.
 
 “Of course it does,” stated Millicent from where she was practicing some sort of Charm while looking out a window at the swirling waters of the Hogwarts Lake. “First kiss gets the prince.”
 
-*“It wasn’t their first kiss!”* shouted Daphne. “Hermione was *already* his true love! That’s why *she* could bring him back!” Then Daphne realized what she’d just said and winced internally, but as the saying went, you had to fit the tongue to the ear.
+*“It wasn’t their first kiss!”* shouted Daphne. “Hermione was *already* his true love! That’s why *she* could bring him back!” Then Daphne realised what she’d just said and winced internally, but as the saying went, you had to fit the tongue to the ear.
 
 “Whoa, whoa, whoa, what?” said Gregory, swinging his feet off Pansy’s lap. “What’s this? Miss Bulstrode didn’t tell that part.”
 
