--- a/047.md
+++ b/047.md
@@ -107,7 +107,7 @@ Draco felt that certain weariness again. If Harry had asked at any other time, i
 
 …It probably *was* a good idea to discharge that favour on something innocuous, all the more so if it was time to break with Harry Potter. “All right.”
 
-Harry drew a wand from his robes, and laid it against the globe. “Not really the best colour for learning the Patronus Charm,” Harry said. “Green light the exact shade of the Killing Curse, I mean. But silver is a Slytherin colour too, isn’t it? *Dulak.*” The light went out, and Harry whispered the first two phrases of the Continual Light enchantment, recasting that part of it, though neither of them could have cast the whole thing by themselves. Then Harry tapped the globe again, and the room lit with a silver radiance, brilliant but still soft and gentle. Colour returned to the desks and chairs, and to Harry’s slightly sweaty face beneath his shock of black hair.
+Harry drew a wand from his robes, and laid it against the globe. “Not really the best colour for learning the Patronus Charm,” Harry said. “Green light the exact shade of the Killing Curse, I mean. But silver is a Slytherin colour too, isn’t it? *Dulak.”* The light went out, and Harry whispered the first two phrases of the Continual Light enchantment, recasting that part of it, though neither of them could have cast the whole thing by themselves. Then Harry tapped the globe again, and the room lit with a silver radiance, brilliant but still soft and gentle. Colour returned to the desks and chairs, and to Harry’s slightly sweaty face beneath his shock of black hair.
 
 It took that long for Draco to realise the implication. “You saw a *Killing Curse* cast since the last time we met? When—how—”
 
@@ -151,7 +151,7 @@ Finally—
 
 “It means you love your father,” Harry’s voice said. Which was just what Draco had been thinking, and trying not to cry in front of Harry. It was too right, just too right—
 
-Before Draco, on the floor, was the shining form of a snake that Draco recognized; a Blue Krait, a snake first brought to their manor by Lord Abraxas Malfoy after a visit to some faraway land, and Father had kept a Blue Krait in the ophidiarium ever since. The thing about the Blue Krait was that the bite wouldn’t hurt much. Father had said that, and told Draco that he was *never* allowed to pet the snake, no matter who was watching. The venom killed your nerves so fast that you didn’t have time to feel pain as the poison spread. You could die of it even after using Healing Charms. It ate other snakes. It was as Slytherin as any creature could possibly be.
+Before Draco, on the floor, was the shining form of a snake that Draco recognised; a Blue Krait, a snake first brought to their manor by Lord Abraxas Malfoy after a visit to some faraway land, and Father had kept a Blue Krait in the ophidiarium ever since. The thing about the Blue Krait was that the bite wouldn’t hurt much. Father had said that, and told Draco that he was *never* allowed to pet the snake, no matter who was watching. The venom killed your nerves so fast that you didn’t have time to feel pain as the poison spread. You could die of it even after using Healing Charms. It ate other snakes. It was as Slytherin as any creature could possibly be.
 
 That was why a Blue Krait head had been forged into the handle of Father’s cane.
 
@@ -177,7 +177,7 @@ The shining creature winked out, the turmoil rising in Draco making it impossibl
 
 And *that* was when Draco *finally* realised.
 
-*“You did get Sorted into Slytherin!”* Draco said. “You *did,* and afterwards you, you somehow, you *snapped your fingers—*” Draco had once asked Father if it would be cleverer to get Sorted into some other House so that everyone would trust him, and Father had smiled and said that he’d thought of that too at Draco’s age, but there was no way to fool the Sorting Hat…
+*“You did get Sorted into Slytherin!”* Draco said. “You *did,* and afterwards you, you somehow, you *snapped your fingers—”* Draco had once asked Father if it would be cleverer to get Sorted into some other House so that everyone would trust him, and Father had smiled and said that he’d thought of that too at Draco’s age, but there was no way to fool the Sorting Hat…
 
 …not until *Harry Potter* came along.
 
@@ -341,7 +341,7 @@ Draco started to open his mouth, and Harry said, “Don’t. Don’t stain the h
 
 Draco’s breathing was harsh. “All right,” Draco said in an uneven voice, “I’ll tell you what Dumbledore did.” From Draco’s robes came a wand, and Draco said “Quietus”, then “Quietus” again, but he got the pronunciation wrong a second time, and finally Harry took out his own wand and did it.
 
-“There,” said Draco hoarsely, “once upon a time there, there was a girl, and her name was Narcissa, and she was the prettiest, the smartest, the most cunning girl that was ever Sorted into Slytherin, and my father loved her, and they married, and she wasn’t a Death Eater, she wasn’t a fighter, *all she ever did was love Father—*” Draco stopped there, because he was crying.
+“There,” said Draco hoarsely, “once upon a time there, there was a girl, and her name was Narcissa, and she was the prettiest, the smartest, the most cunning girl that was ever Sorted into Slytherin, and my father loved her, and they married, and she wasn’t a Death Eater, she wasn’t a fighter, *all she ever did was love Father—”* Draco stopped there, because he was crying.
 
 Harry felt sick to his stomach. Draco had never talked about his *mother*, not once, he should have noticed that earlier. “She… got in the way of a curse?”
 
@@ -475,9 +475,9 @@ The stars shining brightly, in the clear air.
 
 Harry had said that being under the stars would help him.
 
-Draco touched his chest with his wand, slid his fingers in a practiced motion, and said, *“Thermos.*” A warmth spread through him, starting from his heart; the wind went on blowing on his face, but he was no longer cold.
+Draco touched his chest with his wand, slid his fingers in a practiced motion, and said, *“Thermos.”* A warmth spread through him, starting from his heart; the wind went on blowing on his face, but he was no longer cold.
 
-*“Thermos,*” Harry’s voice said behind him.
+*“Thermos,”* Harry’s voice said behind him.
 
 They went together to the railing, to look down at the ground a long way below. Draco tried to figure if they were in one of the towers that could be seen from outside, and found that right now he couldn’t quite seem to picture how Hogwarts looked from outside. But the ground below was always the same; he could see the Forbidden Forest as a vague outline, and moonlight glittering from the Hogwarts Lake.
 
@@ -493,7 +493,7 @@ There was a silence, and then Draco realised that he was expected to answer. “
 
 It would have been something to laugh at, if Draco hadn’t known that some Muggles had already left, without even using magic.
 
-“To pass your test,” Harry said, “I’m going to have to say what it means to *me,* that thought, the whole thing, not the shorter version I tried to explain to you before. But you should be able to see it’s the same idea, only more general. So *my* version of the thought, Draco, is that when we go out into the stars, we might find other people there. And if so, they certainly won’t look like we do. There might be things out there that are grown from crystal, or big pulsating blobs… or they might be made of magic, now that I think about it. So with all that strangeness, how do you recognize a *person?* Not by the shape, not by how many arms or legs it has. Not by the sort of substance it’s made out of, whether that’s flesh or crystal or stuff I can’t imagine. You would have to recognize them as people from their *minds*. And even their minds wouldn’t work just like ours do. But anything that lives and thinks and knows itself and doesn’t want to die, it’s sad, Draco, it’s sad if that person has to die, because it doesn’t want to. Compared to what might be out there, every human being who ever lived, we’re all like brothers and sisters, you could hardly even tell us apart. The ones out there who met *us,* they wouldn’t see British or French, they wouldn’t be able to tell the difference, they’d just see a human being. Humans who can love, and hate, and laugh, and cry; and to *them*, the ones out there, that would make us all as alike as peas in the same pod. *They* would be different, though. *Really* different. But that wouldn’t stop us, and it wouldn’t stop them, if we both wanted to be friends together.”
+“To pass your test,” Harry said, “I’m going to have to say what it means to *me,* that thought, the whole thing, not the shorter version I tried to explain to you before. But you should be able to see it’s the same idea, only more general. So *my* version of the thought, Draco, is that when we go out into the stars, we might find other people there. And if so, they certainly won’t look like we do. There might be things out there that are grown from crystal, or big pulsating blobs… or they might be made of magic, now that I think about it. So with all that strangeness, how do you recognise a *person?* Not by the shape, not by how many arms or legs it has. Not by the sort of substance it’s made out of, whether that’s flesh or crystal or stuff I can’t imagine. You would have to recognise them as people from their *minds*. And even their minds wouldn’t work just like ours do. But anything that lives and thinks and knows itself and doesn’t want to die, it’s sad, Draco, it’s sad if that person has to die, because it doesn’t want to. Compared to what might be out there, every human being who ever lived, we’re all like brothers and sisters, you could hardly even tell us apart. The ones out there who met *us,* they wouldn’t see British or French, they wouldn’t be able to tell the difference, they’d just see a human being. Humans who can love, and hate, and laugh, and cry; and to *them*, the ones out there, that would make us all as alike as peas in the same pod. *They* would be different, though. *Really* different. But that wouldn’t stop us, and it wouldn’t stop them, if we both wanted to be friends together.”
 
 Harry raised his wand then, and Draco turned, and looked away, as he had promised; looked toward the stone floor and stone wall in which the door was set. For Draco had promised not to look, and not to tell anyone of what Harry had said, or anything at all of what happened here this night, though he didn’t know why it was to be so secret.
 
@@ -613,7 +613,7 @@ The bright snake slithered across the room, looking more like it was slithering 
 
 —and said to Harry, in a strange voice that Draco recognised as how he himself probably sounded to other people, “Beware the green monkey.”
 
-*“Hsssss ssss sshsshssss,*” said Harry.
+*“Hsssss ssss sshsshssss,”* said Harry.
 
 The snake slithered back across the floor to Draco.
 
