--- a/049.md
+++ b/049.md
@@ -35,7 +35,7 @@ Harry still hadn’t decided what he was allowed to eat for lunch.
 
 His library research hadn’t turned up any sign of wizards speaking to nonmagical plants. Or any other nonmagical animals besides snakes, although *Spell and Speak* by Paul Breedlove had recounted the probably-mythical tale of a sorceress called the Lady of Flying Squirrels.
 
-What Harry *wanted* to do was ask Professor Quirrell. The problem was that Professor Quirrell was *too smart*. Judging by what Draco had said, the Heir of Slytherin business was a major bombshell, and Harry wasn’t sure he wanted anyone else to know. And the instant Harry asked about Parseltongue, Professor Quirrell would fix him with those pale blue eyes and say, ‘I see, Mr. Potter, so you taught Mr. Malfoy the Patronus Charm and accidentally spoke to his snake.'
+What Harry *wanted* to do was ask Professor Quirrell. The problem was that Professor Quirrell was *too smart*. Judging by what Draco had said, the Heir of Slytherin business was a major bombshell, and Harry wasn’t sure he wanted anyone else to know. And the instant Harry asked about Parseltongue, Professor Quirrell would fix him with those pale blue eyes and say, ‘I see, Mr. Potter, so you taught Mr. Malfoy the Patronus Charm and accidentally spoke to his snake.’
 
 It wouldn’t *matter* that it shouldn’t be enough evidence to locate the true explanation as a hypothesis, let alone overcome its burden of prior improbability. Somehow the defence Professor would deduce it *anyway*. There were times when Harry suspected that Professor Quirrell had way more background information than he was telling, his priors were simply too good. Sometimes he got his amazing deductions right even when his *reasons* were wrong. The problem was that Harry couldn’t see how Professor Quirrell could’ve snuck in an extra clue about half the stuff he guessed. Just *once* Harry would have liked to make some sort of incredible deduction from something Professor Quirrell said which would catch *him* completely off guard.
 
@@ -65,7 +65,7 @@ When Harry was done coughing, he set his glass of water back down on the table, 
 
 Professor Quirrell was grinning widely. “I shall take that as a compliment, Mr. Potter, but no.”
 
-“I'm not buying this anymore,” Harry said. “There’s no *way* you came to that conclusion based on that evidence.”
+“I’m not buying this anymore,” Harry said. “There’s no *way* you came to that conclusion based on that evidence.”
 
 “Of course not,” Professor Quirrell said equably. “I had planned to ask you that question today in any case, and simply chose an opportune moment. I have suspected since December, in fact—”
 
@@ -81,7 +81,7 @@ Harry *hadn’t* realised, not until just now. Of course it was obvious the inst
 
 “Then I would not have found out in December.” Professor Quirell leaned back, smiling. “This is not a puzzle you can solve on your own, Mr. Potter, so I will reveal the answer. Over the winter holiday, I was alerted to the fact that the Headmaster had filed a request for a closed judicial panel to review the case of one Mr. Rubeus Hagrid, whom you know as the Keeper of Keys and Grounds at Hogwarts, and who was accused of the murder of Abigail Myrtle in 1943.”
 
-“Oh, of course,” said Harry, “that makes it downright *obvious* that I'm a Parselmouth. Professor, *what* the sweet slithering snakes—”
+“Oh, of course,” said Harry, “that makes it downright *obvious* that I’m a Parselmouth. Professor, *what* the sweet slithering snakes—”
 
 “The *other* suspect for that murder was Slytherin’s Monster, the legendary inhabitant of Slytherin’s Chamber of Secrets. Which is why certain sources alerted me to the fact, and why it caught my attention sufficiently that I spent a good deal of bribe money to learn the details of the case. Now in point of fact, Mr. Potter, Mr. Hagrid is innocent. Ridiculously obviously innocent. He is the most blatantly innocent bystander to be convicted by the magical British legal system since Grindelwald’s Confunding of Neville Chamberlain was pinned on Amanda Knox. Headmaster Dippet prompted a student puppet to accuse Mr. Hagrid because Dippet needed a scapegoat to take the blame for the death of Miss Myrtle, and our marvellous justice system agreed that this was plausible enough to warrant Mr. Hagrid’s expulsion and the snapping of his wand. Our current Headmaster needs merely provide some new item of evidence significant enough to reconvene the case; and with Dumbledore applying pressure instead of Dippet, the result is a foregone conclusion. Lucius Malfoy has no particular reason to fear Mr. Hagrid’s vindication; thus Lucius Malfoy will only resist to the extent that he can do so costlessly in order to impose costs on Dumbledore, and Dumbledore is clearly willing to prosecute the case regardless.”
 
@@ -227,7 +227,7 @@ Harry nodded.
 
 *“Will do as I ssaid?”*
 
-*“Yess. But,"* Harry gave a wobbling rasp that was how his mind had translated a hesitant ‘Ahhh’ into snakish, *“I do not promisse to do whatever thiss iss, you have not ssaid—*”
+*“Yess. But,”* Harry gave a wobbling rasp that was how his mind had translated a hesitant ‘Ahhh’ into snakish, *“I do not promisse to do whatever thiss iss, you have not ssaid—*”
 
 The snake performed a shiver that Harry’s mind translated as a severe glare. *“Of coursse not. Will disscusss sspecificss at next meeting.*”
 
