--- a/052.md
+++ b/052.md
@@ -63,7 +63,7 @@ The spark winked out, and Harry began to count, *one one thousand, two one thous
 
 Harry pulled up sharply as he approached the north corner, giving himself more safety margin than he would have bothered with in flying classes, but not too much. As soon as he’d come to a halt, he began to slowly lower his broomstick again, toward what looked like the solid roof of the tip of the north corner.
 
-Descending through the illusory roof while invisible was a strange experience, and then Harry found himself in a metal corridor lighted with a dim orange light—which, Harry realized after a startled glance, was coming from an old-fashioned mantled gas lamp…
+Descending through the illusory roof while invisible was a strange experience, and then Harry found himself in a metal corridor lighted with a dim orange light—which, Harry realised after a startled glance, was coming from an old-fashioned mantled gas lamp…
 
 …for magic would fail, be drained away after a time, in the presence of Dementors.
 
@@ -71,7 +71,7 @@ Harry dismounted his broom.
 
 The pull of the emptiness was stronger now, as it parted and flowed around Harry without touching him. They were distant but they were many, the wounds in the world; Harry could have pointed to them with his eyes closed.
 
-“*Casst your Patronuss,*” hissed a snake from the floor, looking more discolored than green in the dim orange light.
+*“Casst your Patronuss,”* hissed a snake from the floor, looking more discolored than green in the dim orange light.
 
 The note of stress came through even in Parseltongue. Harry was surprised; Professor Quirrell had said that Animagi in their Animagus forms were much less vulnerable to Dementors. (For the same reason the Patronuses were animals, Harry assumed.) If Professor Quirrell was in this much trouble in his snake form, what had been happening to him while he was in the human form that let him use his magic…?
 
@@ -85,7 +85,7 @@ Even so it was a start, it was a beginning, it was a down payment on everything 
 
 Harry’s wand slashed down to point at where the Dementors waited far below.
 
-“*Expecto Patronum!* ”
+*“Expecto Patronum!* ”
 
 The glowing humanoid figure blazed up into existence. It wasn’t the sun-bright thing that it had been before… probably because Harry hadn’t quite been able to stop himself from thinking about all the *other* prisoners in their cells, the ones that he *wasn’t* here to save.
 
@@ -93,7 +93,7 @@ It might be for the best, though. Harry would need to keep this Patronus going f
 
 The Patronus dimmed a little further, at that thought; and then further again, as Harry tried to put a little less of his strength into it, until finally the brilliant humanoid figure was glowing only slightly brighter than the brightest animal Patronus, and Harry felt that he could dim it no further without risking losing it entirely.
 
-And then, “*It iss sstable,*” Harry hissed, and began feeding his broomstick into his pouch. His wand stayed in his hand, and a slight, sustainable flow from him replaced the slight losses from his Patronus.
+And then, *“It iss sstable,”* Harry hissed, and began feeding his broomstick into his pouch. His wand stayed in his hand, and a slight, sustainable flow from him replaced the slight losses from his Patronus.
 
 The snake blurred into the form of a lanky, sallow man, holding Professor Quirrell’s wand in one hand and a broomstick in the other. The lanky man staggered as he came back into existence, and went to lean against the wall for a moment.
 
@@ -159,19 +159,19 @@ A soft metal click came from the lock, as Professor Quirrell opened the way.
 
 Harry took a deep breath and remembered everything that Professor Quirrell had told him. The hard part wouldn’t just be getting the pretended personality right enough to fool Bellatrix Black herself, the hard part would be keeping his Patronus going at the same time…
 
-The green spark winked out, and a moment later a meter-high snake shimmered into existence, no longer invisible.
+The green spark winked out, and a moment later a metre-high snake shimmered into existence, no longer invisible.
 
 The metal door moved with a slow creaking sound as Harry pushed on it with his invisible hand, opened it just a crack, and peered through.
 
 He saw a straight corridor that terminated in solid stone. There was no light there but what crept in from Harry’s Patronus. That was bright enough for him to see the outer bars of the eight cells set into the corridor, but he couldn’t see the insides; more importantly, though, he didn’t see anyone in the corridor itself.
 
-“*I ssee nothing,*” hissed Harry.
+*“I ssee nothing,”* hissed Harry.
 
 The snake darted on ahead, swiftly twisting across the floor.
 
 A moment later—
 
-“*Sshe iss alone,*” hissed the snake.
+*“Sshe iss alone,”* hissed the snake.
 
 *Stay,* Harry thought to his Patronus, which took up a position just to one side of the door, as though guarding it; and then Harry pushed the door open further, and followed within.
 
