--- a/087.md
+++ b/087.md
@@ -181,7 +181,7 @@ The thought came to her, then, that Harry might *not* have it.
 
 “Stop,” she said.
 
-“—roast it over a bonfire. Just a regular celebration. Good clean fun. And I’ll give them this, it was cleaner fun than burning women they thought were witches. Because the way people are built, Hermione, the way people are built to *feel* inside—” Harry put a hand over his own heart, in the anatomically correct position, then paused and moved his hand up to point toward his head at around the ear level, “—is that they hurt when they see their *friends* hurting. Someone inside their circle of concern, a member of their own tribe. That feeling has an off-switch, an off-switch labeled ‘enemy’ or ‘foreigner’ or sometimes just ‘stranger'. That’s how people are, if they don’t *learn* otherwise. So, no, it does *not* indicate that Draco Malfoy was inhuman or even unusually evil, if he grew up believing that it was fun to hurt his enemies—”
+“—roast it over a bonfire. Just a regular celebration. Good clean fun. And I’ll give them this, it was cleaner fun than burning women they thought were witches. Because the way people are built, Hermione, the way people are built to *feel* inside—” Harry put a hand over his own heart, in the anatomically correct position, then paused and moved his hand up to point toward his head at around the ear level, “—is that they hurt when they see their *friends* hurting. Someone inside their circle of concern, a member of their own tribe. That feeling has an off-switch, an off-switch labeled ‘enemy’ or ‘foreigner’ or sometimes just ‘stranger’. That’s how people are, if they don’t *learn* otherwise. So, no, it does *not* indicate that Draco Malfoy was inhuman or even unusually evil, if he grew up believing that it was fun to hurt his enemies—”
 
 “If you believe that,” she said with her voice unsteady, “if you *can* believe that, then you’re evil. People are always responsible for what they do. It doesn’t matter what anyone *tells* you to do, you’re the one who does it. Everyone knows that—”
 
